--- a/articles/rfi/999968.md
+++ b/articles/rfi/999968.md
@@ -1,5 +1,5 @@
-<!--1713541502000-->
-[印度大选启动投票，莫迪能否蝉联第三任期6月初见分晓](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20240419-%E5%8D%B0%E5%BA%A6%E5%A4%A7%E9%80%89%E5%90%AF%E5%8A%A8%E6%8A%95%E7%A5%A8%EF%BC%8C%E8%8E%AB%E8%BF%AA%E8%83%BD%E5%90%A6%E8%9D%89%E8%81%94%E7%AC%AC%E4%B8%89%E4%BB%BB%E6%9C%9F6%E6%9C%88%E5%88%9D%E8%A7%81%E5%88%86%E6%99%93)
+<!--1713545102000-->
+[在美国，“中国钢铁危害成了竞选的一个招式” - 法国世界报](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E4%B8%96%E7%95%8C%E6%8A%A5/20240418-%E5%9C%A8%E7%BE%8E%E5%9B%BD%EF%BC%8C-%E4%B8%AD%E5%9B%BD%E9%92%A2%E9%93%81%E5%8D%B1%E5%AE%B3%E5%B7%B2%E6%88%90%E4%B8%BA%E7%AB%9E%E9%80%89%E7%9A%84%E4%B8%80%E4%B8%AA%E6%8B%9B%E5%BC%8F)
 ------
 
-<div>19/04/2024 - 14:11</div><img src="https://s.rfi.fr/media/display/0606e2ba-fe30-11ee-9710-005056bfb2b6/w:1280/p:16x9/2024-04-19T075100Z_1586901846_RC2F97A5NAJV_RTRMADP_3_INDIA-ELECTION.JPG"><p><strong>印度大选19日起陆续在全国各地展开，一直持续到6月1日。9亿多选民将选出543名国会下院议员。从目前情况看，已经连续两届总理任期的莫迪身后的人民党有望再次在国会获得多数席位，让莫迪蝉联第三任期。        </strong></p><div><p>印度全国大选被看作是全球规模最大的投票活动。全国有9亿6千800万选民，超过美国、欧洲联盟以及俄罗斯合计总人口。投票活动全程历时一个多月，分七个阶段进行。检票活动在6月4日才全面展开。通常情况下，结果当天即可揭晓。</p><p>恒河沿岸重要朝圣城市赫里德瓦尔（Haridwar）是首批启动投票的地区之一。总理莫迪当天向选民，尤其是年青选民发出呼吁，希望他们踊跃投票。</p><p>最大反对党、曾常年把持政权的国大党也同天呼吁选民投票，以便“告别通货膨胀，告别失业，告别仇恨，告别不公”。</p><p>从目前情况来看，已经73岁的现任总理莫迪有望再次获胜，蝉联第三个任期。美国独立民调机构皮尤研究中心2023年的一项调查显示，担任总理已经近十年的莫迪仍然享有近80%的民意支持。</p><p>十年间，印度在莫迪领导下在国际舞台影响力提升，并跃居世界第五大经济体。在中美两大国全面战略竞争的背景下，印度成为西方国家无论是战略部署，还是企业投资，竞相争取的对象。</p><p>但莫迪任下的印度也越来越远离西方国家的民主标准。莫迪大力助长了印度教民族主义势力，引发国内不同宗教信仰族群间的紧张关系。在这次投票活动启动前不久，莫迪还亲自出席了一座供奉印度教神灵的寺庙的落成典礼。而这所寺庙修建在被印度教狂热分子摧毁的一座有数千年历史的清真寺地址上。</p><p>莫迪政府也加强了对反对声音的打压。许多反对派人士或者遭遇犯罪调查，或者被关入监狱。今年2月，国大党的银行账户被金融监管部门冻结。反对派各政党试图联合抗衡的努力看来效果不彰，到目前为止尚没有推出可能出任总理的人选。</p><p>国际非政府团体“无疆界记者”组织的报告认为，莫迪2014年上台以来，印度在新闻自由度年度排行中倒退了21位，在180个国家和地区中排行第161。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWzM.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25BA%259A%25E6%25B4%25B2%2F20240419-%25E5%258D%25B0%25E5%25BA%25A6%25E5%25A4%25A7%25E9%2580%2589%25E5%2590%25AF%25E5%258A%25A8%25E6%258A%2595%25E7%25A5%25A8%25EF%25BC%258C%25E8%258E%25AB%25E8%25BF%25AA%25E8%2583%25BD%25E5%2590%25A6%25E8%259D%2589%25E8%2581%2594%25E7%25AC%25AC%25E4%25B8%2589%25E4%25BB%25BB%25E6%259C%259F6%25E6%259C%2588%25E5%2588%259D%25E8%25A7%2581%25E5%2588%2586%25E6%2599%2593&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%8D%B0%E5%BA%A6%E5%A4%A7%E9%80%89%E5%90%AF%E5%8A%A8%E6%8A%95%E7%A5%A8%EF%BC%8C%E8%8E%AB%E8%BF%AA%E8%83%BD%E5%90%A6%E8%9D%89%E8%81%94%E7%AC%AC%E4%B8%89%E4%BB%BB%E6%9C%9F6%E6%9C%88%E5%88%9D%E8%A7%81%E5%88%86%E6%99%93%20-%20https%3A%2F%2Frfi.my%2FAWzM.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%8D%B0%E5%BA%A6%E5%A4%A7%E9%80%89%E5%90%AF%E5%8A%A8%E6%8A%95%E7%A5%A8%EF%BC%8C%E8%8E%AB%E8%BF%AA%E8%83%BD%E5%90%A6%E8%9D%89%E8%81%94%E7%AC%AC%E4%B8%89%E4%BB%BB%E6%9C%9F6%E6%9C%88%E5%88%9D%E8%A7%81%E5%88%86%E6%99%93%20-%20https%3A%2F%2Frfi.my%2FAWzM.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWzM.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%8D%B0%E5%BA%A6%E5%A4%A7%E9%80%89%E5%90%AF%E5%8A%A8%E6%8A%95%E7%A5%A8%EF%BC%8C%E8%8E%AB%E8%BF%AA%E8%83%BD%E5%90%A6%E8%9D%89%E8%81%94%E7%AC%AC%E4%B8%89%E4%BB%BB%E6%9C%9F6%E6%9C%88%E5%88%9D%E8%A7%81%E5%88%86%E6%99%93&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>19/04/2024 - 00:47</div><img src="https://s.rfi.fr/media/display/bddd2032-0bde-11ea-9862-005056bff430/w:1280/p:16x9/fa_guo_shi_jie_bao_wb161923-rfi-cn-20150123_cartouche.jpg"><p><strong>4月17日星期三，美国总统乔·拜登对中国钢铁倾销发起了攻击。法国《世界报》经济记者让·米歇尔·贝扎(Jean-Michel Bezat)在其专栏中写道，在美国，“自2016年以来，中国钢铁的危害已成为竞选的一个招式”。但是，和华盛顿向北京发起的芯片战争相比，“钢铁战争”根本算不了什么。                    </strong></p><div><p>周四法国世界报发表的一篇文章表示，在美国，“自2016年以来，中国钢铁的危害已成为竞选的一个招式”。</p><p>4月17日星期三，美国总统乔·拜登对中国钢铁倾销发起了攻击。顺便，拜登也对被唐纳德·特朗普的演讲给打动了的工人阶级发起了新的魅力攻势。法国《世界报》经济记者让·米歇尔·贝扎(Jean-Michel Bezat)在其专栏中写道，在美国，“自2016年以来，中国钢铁的危害已成为竞选的一个招式”。但是，和华盛顿向北京发起的芯片战争相比，“钢铁战争”根本算不了什么。</p><p>相关的文章写道，在20世纪70年代之前，宾夕法尼亚州的匹兹堡，是让美国国家工业变得伟大的一个地方，随后，却遭受了去工业化的蹂躏，可以说是美国“铁锈带”的核心。4月17日星期三，美国总统选择了匹兹堡这个“铁锈带”的核心地点，对中国钢铁倾销发起了攻击，同时，也对受到特朗普在美国总统选举的摇摆州所发表的演讲所迷惑的工人阶级，发起了新的魅力攻势。乔·拜登当天在钢铁工人工会的总部宣布，他希望对从中国进口的钢铁和铝所征收的税率是如今的三倍，目前的税率是7.5%。中国的钢铁产量占世界的近一半，存在巨大的产能过剩，中国钢铁基本产品的价格只有美国钢铁制造商的一半，以钢铁为基础的中国工业制品如汽车、风力涡轮机等充斥着市场。白宫坚称，这一切还对碳排放的减少，非常不利。</p><p>美国总统拜登在X社交网络上宣称：“我希望与中国竞争，而不是冲突。”拜登还向钢铁工人工会重申了他希望工会能够参与到捍卫“美国制造”的行动中去。同时，拜登还反对将美国钢铁公司出售给日本的新日铁公司，拜登表示，“一个多世纪以来”，美国钢铁公司都是一个“标志性公司”，它“必须继续是一个美国公司”。拜登还表示，像特朗普一样，他已经做好了准备，制止美国联邦外国投资委员会目前正在审查的这项售卖行动。</p><p><strong>持续性的、全方位施压</strong></p><p>法国世界报的文章表示，自2016年以来，中国钢铁的危害已成为了美国竞选活动中的一个招式。在拜登的作为总统候选人所发表的有关日本和中国的演讲中，不乏机会主义，甚至是厚颜无耻。诚然，新日铁是日本公司，但日本是美国坚定不移的盟友。至于中国的钢铁威胁，如果我们相信美国人口普查局的数据的话，那么，是不存在中国钢铁威胁的：因为，根据美国人口普查局的数据，美国进口的中国钢铁很少，只占其采购量的3%；美国钢铁协会的数据甚至显示，中国钢铁在美国钢铁采购中只占2.1%！</p><p>但是，华盛顿决定对中国施加永久性的、全方位的压力。与“芯片之战”相比，“钢铁之战”根本不算什么。华盛顿以国家安全的为名，正在尽一切努力、包括对其盟友施加压力，以便让北京没有可能来获得最新一代的电子芯片。</p><p>拜登指责习近平把先进的芯片用于“错误的地方”。习近平则认为，用的地方很对：是为了让中国在2050年成为世界领先的经济、科技和军事强国。</p><p>中国梦是美国的噩梦。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E9%98%BF%E6%9B%BC%E4%BA%AD/" title="阿曼亭">阿曼亭</a></div></div></div></div>
