--- a/articles/rfi/999971.md
+++ b/articles/rfi/999971.md
@@ -1,5 +1,5 @@
-<!--1713537902000-->
-[阿根廷与北约建立伙伴关系迈出第一步](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E9%98%BF%E6%A0%B9%E5%BB%B7%E4%B8%8E%E5%8C%97%E7%BA%A6%E5%BB%BA%E7%AB%8B%E4%BC%99%E4%BC%B4%E5%85%B3%E7%B3%BB%E8%BF%88%E5%87%BA%E7%AC%AC%E4%B8%80%E6%AD%A5)
+<!--1713541502000-->
+[美媒：美国得到以色列袭击伊朗的预告但未同意也未参与](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E7%BE%8E%E5%AA%92-%E7%BE%8E%E5%9B%BD%E5%BE%97%E5%88%B0%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AD%E5%87%BB%E4%BC%8A%E6%9C%97%E7%9A%84%E9%A2%84%E5%91%8A%E4%BD%86%E6%9C%AA%E5%90%8C%E6%84%8F%E4%B9%9F%E6%9C%AA%E5%8F%82%E4%B8%8E)
 ------
 
-<div>19/04/2024 - 15:09</div><img src="https://s.rfi.fr/media/display/6f37adba-fe4d-11ee-8194-005056bf30b7/w:1280/p:16x9/le%20secr%C3%A9taire%20g%C3%A9n%C3%A9ral%20d%C3%A9l%C3%A9gu%C3%A9%20Mircea%20Geoan%C4%83re%C3%A7u%20le%20ministre%20argentin%20de%20la%20D%C3%A9fense%20Luis%20Petriau%20si%C3%A8ge%20de%20l%E2%80%99OTAN%2018042024.PNG"><p><strong>北约副秘书长吉瓦纳(Mircea Geoană)4月18日在布鲁塞尔北约总部与阿根廷国防部长佩特里(Luis Petri)会面，双方讨论了北约与阿根廷之间伙伴关系的未来发展方向。        </strong></p><div><p>据北约网站4月19日更新的声明说，北约副秘书长米尔恰-吉瓦纳先生说：“我今天非常高兴地欢迎阿根廷国防部长。阿根廷是拉丁美洲的重要一员，我欢迎该国申请成为北约的合作伙伴。北约正在与世界各国合作，促进和平与稳定。阿根廷和北约都将受益于更密切的政治和务实合作”。</p><p>两位领导人还讨论了欧洲和拉丁美洲面临的安全挑战。北约副秘书长感谢阿根廷向乌克兰提供大量人道主义援助，特别是食品和药品，以及向难民提供的帮助。</p><p>这个声明说，北约与阿根廷的政治对话始于20世纪90年代初。布宜诺斯艾利斯随后为北约领导的波黑和平支援行动做出了贡献。哥伦比亚目前是北约在拉丁美洲的唯一伙伴国。而北约与阿根廷建立任何正式伙伴关系的决定都需要其32个盟国达成共识。</p><p>另据美联社说，阿根廷周四正式申请成为北约的合作伙伴。阿根廷总统米莱（Javier Milei）领导的右翼政府正致力于加强与北约成员国的关系并吸引投资，而这一合作伙伴地位将为加强阿根廷与西方的政治和安全合作扫清道路。</p><p>据介绍，对于那些不在北约地理区域内、无需参加集体军事行动的国家来说，“合作伙伴”是一个比"盟友"更有价值的角色。北约成员国目前仅限于欧洲、土耳其、加拿大和美国。</p><p>阿根廷总统府表示，北约这一指定，可使阿根廷获得以前无法获得的先进技术、安全系统和培训。</p><p>而北约副秘书长吉瓦纳在北约总部说，"阿根廷在拉丁美洲扮演着重要的角色"。双方"更紧密的政治和务实合作将使我们双方受益"。</p><p><strong>阿根廷购买丹麦F-16战机</strong></p><p>据法新社消息，丹麦和阿根廷本周二宣布，丹麦将向阿根廷出售24架二手F-16战斗机，阿根廷称，此次购买是其"过去50年中最重要的军事采购"。</p><p>在阿根廷国防部长佩特里访问丹麦的斯克里德斯特鲁普（Skrydstrup）空军基地期间，双方正式签署了这份军购协议。今年3月份双方公布了该交易的意向声明。</p><p>据丹麦媒体报道，丹麦正在将其机队升级为更现代化的 F-35。丹麦拥有大约40架F-16，其中约 30 架正在服役。丹麦也是北约的创建国之一。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX0W.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E9%2598%25BF%25E6%25A0%25B9%25E5%25BB%25B7%25E4%25B8%258E%25E5%258C%2597%25E7%25BA%25A6%25E5%25BB%25BA%25E7%25AB%258B%25E4%25BC%2599%25E4%25BC%25B4%25E5%2585%25B3%25E7%25B3%25BB%25E8%25BF%2588%25E5%2587%25BA%25E7%25AC%25AC%25E4%25B8%2580%25E6%25AD%25A5&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E9%98%BF%E6%A0%B9%E5%BB%B7%E4%B8%8E%E5%8C%97%E7%BA%A6%E5%BB%BA%E7%AB%8B%E4%BC%99%E4%BC%B4%E5%85%B3%E7%B3%BB%E8%BF%88%E5%87%BA%E7%AC%AC%E4%B8%80%E6%AD%A5%20-%20https%3A%2F%2Frfi.my%2FAX0W.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E9%98%BF%E6%A0%B9%E5%BB%B7%E4%B8%8E%E5%8C%97%E7%BA%A6%E5%BB%BA%E7%AB%8B%E4%BC%99%E4%BC%B4%E5%85%B3%E7%B3%BB%E8%BF%88%E5%87%BA%E7%AC%AC%E4%B8%80%E6%AD%A5%20-%20https%3A%2F%2Frfi.my%2FAX0W.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX0W.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E9%98%BF%E6%A0%B9%E5%BB%B7%E4%B8%8E%E5%8C%97%E7%BA%A6%E5%BB%BA%E7%AB%8B%E4%BC%99%E4%BC%B4%E5%85%B3%E7%B3%BB%E8%BF%88%E5%87%BA%E7%AC%AC%E4%B8%80%E6%AD%A5&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>19/04/2024 - 13:47</div><img src="https://s.rfi.fr/media/display/c0fc8d5c-fe37-11ee-b2ed-005056a97e36/w:1280/p:16x9/Carte-Iran-RFI.png"><p><strong>对于周五凌晨伊朗中部听到巨大的爆炸声，据美国媒体报道，美国高级官员称，以色列对伊朗发动袭击是为了报复上周末以色列遭到的史无前例的无人机和导弹袭击。华盛顿得到了以色列的预告，但没有同意。        </strong></p><div><p>美国全国广播公司（NBC）和美国有线电视新闻网（CNN）分别援引熟悉此事的消息人士和一名美国官员的话报道说，以色列已提前向华盛顿发出了袭击警告，但美国没有同意这次行动，也没有参与实施。</p><p>白宫没有立即就伊朗中部的爆炸事件发表评论。据 CNN 报道，一名美国官员说：“我们没有批准这个报复行动”。</p><p>上周末，伊朗向以色列境内发射了数百枚导弹和无人机，以色列警告称将进行报复。在伊朗袭击上周末袭击以色列之前，伊朗驻大马士革领事馆遭袭击，德黑兰认为以色列负有责任。</p><p>今天以色列军队发言人就周五夜间伊朗中部的爆炸事件告诉法新社记者：“我们目前不予置评”。</p><p>不过，以色列极右翼的国家安全部长本 格维尔（Ben Gvir）在 X 上发布了一句话："软弱！"</p><p>以色列军方在周五早晨宣布，以色列北部已启动警报。</p><p>美国驻以色列使馆限制其雇员和亲属的活动范围。</p><p>伊朗总统莱西在本周早些时候表示，以色列对伊朗领土的任何攻击"都将遭到严厉回应"。</p><p>伊朗周四在联合国安理会表示，"必须迫使以色列停止针对我们利益的任何进一步军事冒险"，而联合国秘书长则警告说，中东正处于"最危险的时刻"。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWyz.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E7%25BE%258E%25E5%25AA%2592-%25E7%25BE%258E%25E5%259B%25BD%25E5%25BE%2597%25E5%2588%25B0%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E8%25A2%25AD%25E5%2587%25BB%25E4%25BC%258A%25E6%259C%2597%25E7%259A%2584%25E9%25A2%2584%25E5%2591%258A%25E4%25BD%2586%25E6%259C%25AA%25E5%2590%258C%25E6%2584%258F%25E4%25B9%259F%25E6%259C%25AA%25E5%258F%2582%25E4%25B8%258E&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%AA%92%EF%BC%9A%E7%BE%8E%E5%9B%BD%E5%BE%97%E5%88%B0%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AD%E5%87%BB%E4%BC%8A%E6%9C%97%E7%9A%84%E9%A2%84%E5%91%8A%E4%BD%86%E6%9C%AA%E5%90%8C%E6%84%8F%E4%B9%9F%E6%9C%AA%E5%8F%82%E4%B8%8E%20-%20https%3A%2F%2Frfi.my%2FAWyz.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%AA%92%EF%BC%9A%E7%BE%8E%E5%9B%BD%E5%BE%97%E5%88%B0%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AD%E5%87%BB%E4%BC%8A%E6%9C%97%E7%9A%84%E9%A2%84%E5%91%8A%E4%BD%86%E6%9C%AA%E5%90%8C%E6%84%8F%E4%B9%9F%E6%9C%AA%E5%8F%82%E4%B8%8E%20-%20https%3A%2F%2Frfi.my%2FAWyz.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWyz.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%AA%92%EF%BC%9A%E7%BE%8E%E5%9B%BD%E5%BE%97%E5%88%B0%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AD%E5%87%BB%E4%BC%8A%E6%9C%97%E7%9A%84%E9%A2%84%E5%91%8A%E4%BD%86%E6%9C%AA%E5%90%8C%E6%84%8F%E4%B9%9F%E6%9C%AA%E5%8F%82%E4%B8%8E&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
