--- a/articles/rfi/999973.md
+++ b/articles/rfi/999973.md
@@ -1,5 +1,5 @@
-<!--1713532503000-->
-[美国宇航局局长警告：中国利用民用项目掩盖太空军事存在](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240418-%E7%BE%8E%E5%9B%BD%E5%AE%87%E8%88%AA%E5%B1%80%E5%B1%80%E9%95%BF%E8%AD%A6%E5%91%8A-%E4%B8%AD%E5%9B%BD%E5%88%A9%E7%94%A8%E6%B0%91%E7%94%A8%E9%A1%B9%E7%9B%AE%E6%8E%A9%E7%9B%96%E5%A4%AA%E7%A9%BA%E5%86%9B%E4%BA%8B%E5%AD%98%E5%9C%A8)
+<!--1713541502000-->
+[印度大选启动投票，莫迪能否蝉联第三任期6月初见分晓](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20240419-%E5%8D%B0%E5%BA%A6%E5%A4%A7%E9%80%89%E5%90%AF%E5%8A%A8%E6%8A%95%E7%A5%A8%EF%BC%8C%E8%8E%AB%E8%BF%AA%E8%83%BD%E5%90%A6%E8%9D%89%E8%81%94%E7%AC%AC%E4%B8%89%E4%BB%BB%E6%9C%9F6%E6%9C%88%E5%88%9D%E8%A7%81%E5%88%86%E6%99%93)
 ------
 
-<div>18/04/2024 - 16:23</div><img src="https://s.rfi.fr/media/display/c28e1990-fd67-11ee-b1f8-005056a97e36/w:1280/p:16x9/AP23117711747550.jpg"><p><strong>美国宇航局局长比尔·尼尔森 4 月 17 日在华盛顿表达了对中国秘密航天进展的担忧。他警告说，中国通过利用民用项目来掩盖军事目标以增强其太空能力，并警告华盛顿必须保持警惕。         </strong></p><div><p>中国在航空航天领域的进步，尤其是其不透明的做法，令美国宇航局感到担忧。比尔·尼尔森告诉国会山议员，中国对其太空进展“非常非常保密”，并警告“我们正在一场竞赛”。尼尔森怀疑中国的民用太空计划实际上隐藏着军事计划，这凸显了北京缺乏透明度。</p><p>美国宇航局局长比尔·尼尔森在国会山对议员们说：“中国取得了非凡的进步，特别是在过去十年中，但它们非常非常保密。”</p><p>尼尔森说：“我们认为，他们很多所谓的民用太空计划都是军事计划。我认为，实际上，我们正在进行一场竞赛。”</p><p>他说他希望北京能够“清醒过来，明白民用空间是用于和平用途”，但他补充说：“我们还没有看到中国表现出这一点。”</p><p>尼尔森是在众议院拨款委员会就 NASA 2025 年预算作证时发表上述言论的。</p><p>他表示，美国应该在中国之前再次登陆月球，因为两国都在执行月球任务。但他表示担心，如果北京先到达，可能会说：“好吧，这是我们的领土，你别进来。”</p><p>尼尔森此前表示，美国正在与中国“进行太空竞赛”，并警告说，中国最终可能声称“拥有”月球资源丰富的地区。</p><p>2022年，中国航天计划建成了地球轨道空间站，并实施了多次绕月和样本回收任务。</p><p>此后，美国一直计划通过阿耳忒弥斯三号任务在 2026 年将宇航员送回月球。中国表示希望在2030年之前将人类送上月球。</p><p>尼尔森表示，他相信美国不会失去其在太空探索方面的“全球优势”。</p><p>他说美国必须现实一点，因为“中国确实投入了大量资金，他们的预算还有很大的增长空间。“ 但 “我认为我们最好不要放松警惕。”</p><p>据美国国防情报局称，中国目前有 499 颗卫星在轨运行。这个数字是 2019 年的两倍多。中国还正在开发间谍气球和高超音速导弹。</p><p>《阿耳忒弥斯协定》是由美国宇航局和美国国务院起草一项要求太空活动必须出于和平目的的协议，已由包括英国在内的 40 多个国家签署。中国尚未签署这些协议。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWpb.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240418-%25E7%25BE%258E%25E5%259B%25BD%25E5%25AE%2587%25E8%2588%25AA%25E5%25B1%2580%25E5%25B1%2580%25E9%2595%25BF%25E8%25AD%25A6%25E5%2591%258A-%25E4%25B8%25AD%25E5%259B%25BD%25E5%2588%25A9%25E7%2594%25A8%25E6%25B0%2591%25E7%2594%25A8%25E9%25A1%25B9%25E7%259B%25AE%25E6%258E%25A9%25E7%259B%2596%25E5%25A4%25AA%25E7%25A9%25BA%25E5%2586%259B%25E4%25BA%258B%25E5%25AD%2598%25E5%259C%25A8&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%9B%BD%E5%AE%87%E8%88%AA%E5%B1%80%E5%B1%80%E9%95%BF%E8%AD%A6%E5%91%8A%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%88%A9%E7%94%A8%E6%B0%91%E7%94%A8%E9%A1%B9%E7%9B%AE%E6%8E%A9%E7%9B%96%E5%A4%AA%E7%A9%BA%E5%86%9B%E4%BA%8B%E5%AD%98%E5%9C%A8%20-%20https%3A%2F%2Frfi.my%2FAWpb.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%9B%BD%E5%AE%87%E8%88%AA%E5%B1%80%E5%B1%80%E9%95%BF%E8%AD%A6%E5%91%8A%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%88%A9%E7%94%A8%E6%B0%91%E7%94%A8%E9%A1%B9%E7%9B%AE%E6%8E%A9%E7%9B%96%E5%A4%AA%E7%A9%BA%E5%86%9B%E4%BA%8B%E5%AD%98%E5%9C%A8%20-%20https%3A%2F%2Frfi.my%2FAWpb.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWpb.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%9B%BD%E5%AE%87%E8%88%AA%E5%B1%80%E5%B1%80%E9%95%BF%E8%AD%A6%E5%91%8A%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%88%A9%E7%94%A8%E6%B0%91%E7%94%A8%E9%A1%B9%E7%9B%AE%E6%8E%A9%E7%9B%96%E5%A4%AA%E7%A9%BA%E5%86%9B%E4%BA%8B%E5%AD%98%E5%9C%A8&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>19/04/2024 - 14:11</div><img src="https://s.rfi.fr/media/display/0606e2ba-fe30-11ee-9710-005056bfb2b6/w:1280/p:16x9/2024-04-19T075100Z_1586901846_RC2F97A5NAJV_RTRMADP_3_INDIA-ELECTION.JPG"><p><strong>印度大选19日起陆续在全国各地展开，一直持续到6月1日。9亿多选民将选出543名国会下院议员。从目前情况看，已经连续两届总理任期的莫迪身后的人民党有望再次在国会获得多数席位，让莫迪蝉联第三任期。        </strong></p><div><p>印度全国大选被看作是全球规模最大的投票活动。全国有9亿6千800万选民，超过美国、欧洲联盟以及俄罗斯合计总人口。投票活动全程历时一个多月，分七个阶段进行。检票活动在6月4日才全面展开。通常情况下，结果当天即可揭晓。</p><p>恒河沿岸重要朝圣城市赫里德瓦尔（Haridwar）是首批启动投票的地区之一。总理莫迪当天向选民，尤其是年青选民发出呼吁，希望他们踊跃投票。</p><p>最大反对党、曾常年把持政权的国大党也同天呼吁选民投票，以便“告别通货膨胀，告别失业，告别仇恨，告别不公”。</p><p>从目前情况来看，已经73岁的现任总理莫迪有望再次获胜，蝉联第三个任期。美国独立民调机构皮尤研究中心2023年的一项调查显示，担任总理已经近十年的莫迪仍然享有近80%的民意支持。</p><p>十年间，印度在莫迪领导下在国际舞台影响力提升，并跃居世界第五大经济体。在中美两大国全面战略竞争的背景下，印度成为西方国家无论是战略部署，还是企业投资，竞相争取的对象。</p><p>但莫迪任下的印度也越来越远离西方国家的民主标准。莫迪大力助长了印度教民族主义势力，引发国内不同宗教信仰族群间的紧张关系。在这次投票活动启动前不久，莫迪还亲自出席了一座供奉印度教神灵的寺庙的落成典礼。而这所寺庙修建在被印度教狂热分子摧毁的一座有数千年历史的清真寺地址上。</p><p>莫迪政府也加强了对反对声音的打压。许多反对派人士或者遭遇犯罪调查，或者被关入监狱。今年2月，国大党的银行账户被金融监管部门冻结。反对派各政党试图联合抗衡的努力看来效果不彰，到目前为止尚没有推出可能出任总理的人选。</p><p>国际非政府团体“无疆界记者”组织的报告认为，莫迪2014年上台以来，印度在新闻自由度年度排行中倒退了21位，在180个国家和地区中排行第161。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWzM.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25BA%259A%25E6%25B4%25B2%2F20240419-%25E5%258D%25B0%25E5%25BA%25A6%25E5%25A4%25A7%25E9%2580%2589%25E5%2590%25AF%25E5%258A%25A8%25E6%258A%2595%25E7%25A5%25A8%25EF%25BC%258C%25E8%258E%25AB%25E8%25BF%25AA%25E8%2583%25BD%25E5%2590%25A6%25E8%259D%2589%25E8%2581%2594%25E7%25AC%25AC%25E4%25B8%2589%25E4%25BB%25BB%25E6%259C%259F6%25E6%259C%2588%25E5%2588%259D%25E8%25A7%2581%25E5%2588%2586%25E6%2599%2593&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%8D%B0%E5%BA%A6%E5%A4%A7%E9%80%89%E5%90%AF%E5%8A%A8%E6%8A%95%E7%A5%A8%EF%BC%8C%E8%8E%AB%E8%BF%AA%E8%83%BD%E5%90%A6%E8%9D%89%E8%81%94%E7%AC%AC%E4%B8%89%E4%BB%BB%E6%9C%9F6%E6%9C%88%E5%88%9D%E8%A7%81%E5%88%86%E6%99%93%20-%20https%3A%2F%2Frfi.my%2FAWzM.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%8D%B0%E5%BA%A6%E5%A4%A7%E9%80%89%E5%90%AF%E5%8A%A8%E6%8A%95%E7%A5%A8%EF%BC%8C%E8%8E%AB%E8%BF%AA%E8%83%BD%E5%90%A6%E8%9D%89%E8%81%94%E7%AC%AC%E4%B8%89%E4%BB%BB%E6%9C%9F6%E6%9C%88%E5%88%9D%E8%A7%81%E5%88%86%E6%99%93%20-%20https%3A%2F%2Frfi.my%2FAWzM.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWzM.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%8D%B0%E5%BA%A6%E5%A4%A7%E9%80%89%E5%90%AF%E5%8A%A8%E6%8A%95%E7%A5%A8%EF%BC%8C%E8%8E%AB%E8%BF%AA%E8%83%BD%E5%90%A6%E8%9D%89%E8%81%94%E7%AC%AC%E4%B8%89%E4%BB%BB%E6%9C%9F6%E6%9C%88%E5%88%9D%E8%A7%81%E5%88%86%E6%99%93&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
