--- a/articles/rfi/999975.md
+++ b/articles/rfi/999975.md
@@ -1,5 +1,5 @@
-<!--1713498301000-->
-[赖清德5.20前 台湾国民党议员前赴后继去中国表“善意”但拆台](https://www.rfi.fr/cn/%E5%8F%B0%E6%B9%BE/20240418-%E8%B5%96%E6%B8%85%E5%BE%B75-20%E5%89%8D-%E5%8F%B0%E6%B9%BE%E5%9B%BD%E6%B0%91%E5%85%9A%E8%AE%AE%E5%91%98%E5%89%8D%E8%B5%B4%E5%90%8E%E7%BB%A7%E5%8E%BB%E4%B8%AD%E5%9B%BD%E8%A1%A8-%E5%96%84%E6%84%8F-%E4%BD%86%E6%8B%86%E5%8F%B0)
+<!--1713541502000-->
+[七国集团：乌克兰需更多防空支援](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240418-%E4%B8%83%E5%9B%BD%E9%9B%86%E5%9B%A2-%E4%B9%8C%E5%85%8B%E5%85%B0%E9%9C%80%E6%9B%B4%E5%A4%9A%E9%98%B2%E7%A9%BA%E6%94%AF%E6%8F%B4)
 ------
 
-<div>18/04/2024 - 16:56</div><img src="https://s.rfi.fr/media/display/218be9b6-5261-11ee-b729-005056a90321/w:1280/p:16x9/AP23235304939235.jpg"><p><strong>台湾各种立场媒体均聚焦国民党立委傅崐萁将率领党内立委访问中国，该团人数透露为20人。此前，台湾立法院国民党团被抓包作弊匿名顶替不在场议员卢县一投票，曝出卢县一当天人在中国秘密行踪。再此前，消息传台湾立法院长国民党人韩国瑜被邀请组团前往中国访问。再再此前，多家消息称，马英九后台湾另一国民党政治大佬或要访问中国。这些互动被冠以民间善意促进沟通。但此善意也被怀疑是对赖清德5.20任职拆台破坏，吃里扒外。        </strong></p><div><p>据上报消息，国民党立委傅崐萁将率领党内立委访问中国，国民党文传会主委李彦秀昨天表示此行程由傅崐萁个人规划并安排，不过国民党今天（18日）澄清，傅崐萁等人访中行程将针对台湾人民关心的两岸民生经济议题，进行充分沟通与交流，并反映多数台湾民意期望两岸和平交流的心声，维系两岸人民的利益与福祉。</p><p>国民党指出，傅崐萁于今年2月开始联系访中事宜，国民党乐见国会同志肩负起维系两岸民间良善对话的责任，也对于台湾人民关心的农渔产品行销、旅游观光等民生经济议题，与对岸进行协调与讨论，期望达到让两岸人民互惠双赢的目标。</p><p>据国民党强调，向来支持与对岸维系正常公开的交流与沟通，相信唯有增进两岸良性互动与累积善意，才能让台海免于战争的危险边缘，促进区域的和平稳定。</p><p>据新头壳消息，台湾立法院司法及法制委员会今天并案审查《刑法》加重虐童刑责等10案，邀请蔡碧仲等人列席报告并备质询。吴思瑶质询提问，上周五在立院表决时发生投票舞弊事件，当天卢县一出访中国，未至立院出席、签到，却有表决纪录；若此案进入地检署侦查或法院审理，应该会请相关当事人过去询问，包括议事人员、涉及立委等。</p><p>台湾没有消息提及卢县一前往中国事宜。是公干还是私事，一无所知。</p><p>据新头壳稍早消息，继马习二会后，中国再度出招？据媒体透露，北京当局除了规划由国民党团总召傅崐萁组团访中后，在立院8月休会时，将邀请立法院长韩国瑜组团出访，将由中国人大委员长赵乐际亲自接待。</p><p>国民党立院党团总召傅崐萁近日将率20多名蓝委访问中国，由于时程仍在立院开议期间，遭外界批评是“薪水小偷”，国民党中央日前记者会更切割，强调行程内容党中央并不知情。</p><p>民进党团干事长吴思瑶进一步说好奇，责问傅崐萁这次带队率领蓝委去中国，到底是谁的授权？又是代表谁？</p><p>台湾媒体没有提及国民党议员前往中国是受国台办还是受中国人大邀请。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWq1.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%258F%25B0%25E6%25B9%25BE%2F20240418-%25E8%25B5%2596%25E6%25B8%2585%25E5%25BE%25B75-20%25E5%2589%258D-%25E5%258F%25B0%25E6%25B9%25BE%25E5%259B%25BD%25E6%25B0%2591%25E5%2585%259A%25E8%25AE%25AE%25E5%2591%2598%25E5%2589%258D%25E8%25B5%25B4%25E5%2590%258E%25E7%25BB%25A7%25E5%258E%25BB%25E4%25B8%25AD%25E5%259B%25BD%25E8%25A1%25A8-%25E5%2596%2584%25E6%2584%258F-%25E4%25BD%2586%25E6%258B%2586%25E5%258F%25B0&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%B5%96%E6%B8%85%E5%BE%B75.20%E5%89%8D%20%E5%8F%B0%E6%B9%BE%E5%9B%BD%E6%B0%91%E5%85%9A%E8%AE%AE%E5%91%98%E5%89%8D%E8%B5%B4%E5%90%8E%E7%BB%A7%E5%8E%BB%E4%B8%AD%E5%9B%BD%E8%A1%A8%E2%80%9C%E5%96%84%E6%84%8F%E2%80%9D%E4%BD%86%E6%8B%86%E5%8F%B0%20-%20https%3A%2F%2Frfi.my%2FAWq1.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%B5%96%E6%B8%85%E5%BE%B75.20%E5%89%8D%20%E5%8F%B0%E6%B9%BE%E5%9B%BD%E6%B0%91%E5%85%9A%E8%AE%AE%E5%91%98%E5%89%8D%E8%B5%B4%E5%90%8E%E7%BB%A7%E5%8E%BB%E4%B8%AD%E5%9B%BD%E8%A1%A8%E2%80%9C%E5%96%84%E6%84%8F%E2%80%9D%E4%BD%86%E6%8B%86%E5%8F%B0%20-%20https%3A%2F%2Frfi.my%2FAWq1.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWq1.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%B5%96%E6%B8%85%E5%BE%B75.20%E5%89%8D%20%E5%8F%B0%E6%B9%BE%E5%9B%BD%E6%B0%91%E5%85%9A%E8%AE%AE%E5%91%98%E5%89%8D%E8%B5%B4%E5%90%8E%E7%BB%A7%E5%8E%BB%E4%B8%AD%E5%9B%BD%E8%A1%A8%E2%80%9C%E5%96%84%E6%84%8F%E2%80%9D%E4%BD%86%E6%8B%86%E5%8F%B0&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>18/04/2024 - 22:59</div><img src="https://s.rfi.fr/media/display/6384d6b2-f1e3-11ee-bf58-005056bfb2b6/w:1280/p:16x9/2024-04-03T152832Z_1197154583_RC23Z6A28JCI_RTRMADP_3_NATO-FOREIGN.JPG"><p><strong></strong></p><div><p>德国总理朔尔茨出访中国前与遭受俄罗斯入侵的乌克兰总统泽连斯基通电话，告知德国计划追加提供6个美制爱国者地空导弹系统到给乌克兰。</p><p>乌克兰外长库列巴18日在意大利卡普里岛呼吁七国集团应该像对以色列那样向乌克兰提供更多的防空系统。库列巴认为西方国家对以色列和乌克兰采取了两种不同的策略。目前美国等七国集团国家的外长正在卡普里岛举行会议。</p><p>七国集团（G7）部长们4月18日在意大利卡普里岛进行第二天会谈，首先讨论中东危机，下午将把注意力转向乌克兰，北约首脑和乌克兰外交部长也参与其中。</p><p>欧盟外交政策负责人博雷尔敦促欧盟国家提供防空系统，帮助乌克兰保护城市免受俄罗斯的攻击，否则乌克兰的电力系统将被摧毁。“没有一个国家可以在住家、工厂和网络等都失去电力的情况下进行战斗。”</p><p>乌克兰外交部长库列巴说，西方对以色列的态度与乌克兰不同，当伊朗袭击以色列时，美国和盟友协助击落了这些导弹和无人机。“以色列的合作伙伴战略似乎是防止损害和死亡……在过去的几个月里，乌克兰的合作伙伴战略则是帮助乌克兰从损害中重振。”</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWtG.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240418-%25E4%25B8%2583%25E5%259B%25BD%25E9%259B%2586%25E5%259B%25A2-%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E9%259C%2580%25E6%259B%25B4%25E5%25A4%259A%25E9%2598%25B2%25E7%25A9%25BA%25E6%2594%25AF%25E6%258F%25B4&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%83%E5%9B%BD%E9%9B%86%E5%9B%A2%EF%BC%9A%E4%B9%8C%E5%85%8B%E5%85%B0%E9%9C%80%E6%9B%B4%E5%A4%9A%E9%98%B2%E7%A9%BA%E6%94%AF%E6%8F%B4%20-%20https%3A%2F%2Frfi.my%2FAWtG.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%83%E5%9B%BD%E9%9B%86%E5%9B%A2%EF%BC%9A%E4%B9%8C%E5%85%8B%E5%85%B0%E9%9C%80%E6%9B%B4%E5%A4%9A%E9%98%B2%E7%A9%BA%E6%94%AF%E6%8F%B4%20-%20https%3A%2F%2Frfi.my%2FAWtG.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWtG.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%83%E5%9B%BD%E9%9B%86%E5%9B%A2%EF%BC%9A%E4%B9%8C%E5%85%8B%E5%85%B0%E9%9C%80%E6%9B%B4%E5%A4%9A%E9%98%B2%E7%A9%BA%E6%94%AF%E6%8F%B4&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
