--- a/articles/rfi/999976.md
+++ b/articles/rfi/999976.md
@@ -1,5 +1,5 @@
-<!--1713494701000-->
-[所罗门群岛反对派总理角逐者重申若当选将废除与中国的安全协议](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20240418-%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E5%8F%8D%E5%AF%B9%E6%B4%BE%E6%80%BB%E7%90%86%E8%A7%92%E9%80%90%E8%80%85%E9%87%8D%E7%94%B3%E8%8B%A5%E5%BD%93%E9%80%89%E5%B0%86%E5%BA%9F%E9%99%A4%E4%B8%8E%E4%B8%AD%E5%9B%BD%E7%9A%84%E5%AE%89%E5%85%A8%E5%8D%8F%E8%AE%AE)
+<!--1713537902000-->
+[阿根廷与北约建立伙伴关系迈出第一步](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E9%98%BF%E6%A0%B9%E5%BB%B7%E4%B8%8E%E5%8C%97%E7%BA%A6%E5%BB%BA%E7%AB%8B%E4%BC%99%E4%BC%B4%E5%85%B3%E7%B3%BB%E8%BF%88%E5%87%BA%E7%AC%AC%E4%B8%80%E6%AD%A5)
 ------
 
-<div>18/04/2024 - 22:49</div><img src="https://s.rfi.fr/media/display/a21e0674-fcaf-11ee-8e20-005056bfb2b6/w:1280/p:16x9/AP24106049916145.jpg"><p><strong></strong></p><div><p>中国资助了多个重大项目，包括一座可容纳一万个座位的体育场和一座仍在建设中的医疗中心。</p><p>61 岁的罗伯特·巴拉 (Robert Bara) 住在首都附近一个泥泞的山谷里的村庄里，他担心没有足够的钱送孩子们上学。 他在前往一座用作投票站的教堂投票时说道：“我必须在经济上支持他们”。</p><p>组织这样的投票对这个群岛来说是一个挑战，这个拥有约 72 万居民的国家分布在数百个火山岛屿和环礁上，投票箱和选票是通过船只、飞机和直升机运送的。</p><p>来自澳大利亚、新西兰和巴布亚新几内亚的警察协助当地执法。</p><p>为了应对可能发生的暴力事件，位于霍尼亚拉市中心的中国大使馆本周在大楼前匆忙竖起了临时钢栅栏。</p><p>这是所罗门群岛自2019年与台湾断绝外交关系以来的首次选举。</p><p>所罗门群岛在总理玛纳西·索加瓦雷 (Manasseh Sogavare) 2019年上台，将所罗门群岛的外交关系从台湾转向北京。索加瓦雷于 2022 年与北京签署了一项秘密安全协议。</p><p>尽管该协议的细节仍不清楚，但华盛顿和堪培拉担心它将为中国在南太平洋建立永久性军事基地奠定基础，这可能会改变地区安全的游戏规则。</p><p>玛纳西·索加瓦雷的主要竞争对手之一是前联合国律师彼得·凯尼洛里，他希望挑战与中国的协议。 其他反对派人物包括人权活动家马修·韦尔和前总理、经济学家戈登·达西·利洛。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWt8.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25BA%259A%25E6%25B4%25B2%2F20240418-%25E6%2589%2580%25E7%25BD%2597%25E9%2597%25A8%25E7%25BE%25A4%25E5%25B2%259B%25E5%258F%258D%25E5%25AF%25B9%25E6%25B4%25BE%25E6%2580%25BB%25E7%2590%2586%25E8%25A7%2592%25E9%2580%2590%25E8%2580%2585%25E9%2587%258D%25E7%2594%25B3%25E8%258B%25A5%25E5%25BD%2593%25E9%2580%2589%25E5%25B0%2586%25E5%25BA%259F%25E9%2599%25A4%25E4%25B8%258E%25E4%25B8%25AD%25E5%259B%25BD%25E7%259A%2584%25E5%25AE%2589%25E5%2585%25A8%25E5%258D%258F%25E8%25AE%25AE&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E5%8F%8D%E5%AF%B9%E6%B4%BE%E6%80%BB%E7%90%86%E8%A7%92%E9%80%90%E8%80%85%E9%87%8D%E7%94%B3%E8%8B%A5%E5%BD%93%E9%80%89%E5%B0%86%E5%BA%9F%E9%99%A4%E4%B8%8E%E4%B8%AD%E5%9B%BD%E7%9A%84%E5%AE%89%E5%85%A8%E5%8D%8F%E8%AE%AE%20-%20https%3A%2F%2Frfi.my%2FAWt8.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E5%8F%8D%E5%AF%B9%E6%B4%BE%E6%80%BB%E7%90%86%E8%A7%92%E9%80%90%E8%80%85%E9%87%8D%E7%94%B3%E8%8B%A5%E5%BD%93%E9%80%89%E5%B0%86%E5%BA%9F%E9%99%A4%E4%B8%8E%E4%B8%AD%E5%9B%BD%E7%9A%84%E5%AE%89%E5%85%A8%E5%8D%8F%E8%AE%AE%20-%20https%3A%2F%2Frfi.my%2FAWt8.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWt8.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E5%8F%8D%E5%AF%B9%E6%B4%BE%E6%80%BB%E7%90%86%E8%A7%92%E9%80%90%E8%80%85%E9%87%8D%E7%94%B3%E8%8B%A5%E5%BD%93%E9%80%89%E5%B0%86%E5%BA%9F%E9%99%A4%E4%B8%8E%E4%B8%AD%E5%9B%BD%E7%9A%84%E5%AE%89%E5%85%A8%E5%8D%8F%E8%AE%AE&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>19/04/2024 - 15:09</div><img src="https://s.rfi.fr/media/display/6f37adba-fe4d-11ee-8194-005056bf30b7/w:1280/p:16x9/le%20secr%C3%A9taire%20g%C3%A9n%C3%A9ral%20d%C3%A9l%C3%A9gu%C3%A9%20Mircea%20Geoan%C4%83re%C3%A7u%20le%20ministre%20argentin%20de%20la%20D%C3%A9fense%20Luis%20Petriau%20si%C3%A8ge%20de%20l%E2%80%99OTAN%2018042024.PNG"><p><strong>北约副秘书长吉瓦纳(Mircea Geoană)4月18日在布鲁塞尔北约总部与阿根廷国防部长佩特里(Luis Petri)会面，双方讨论了北约与阿根廷之间伙伴关系的未来发展方向。        </strong></p><div><p>据北约网站4月19日更新的声明说，北约副秘书长米尔恰-吉瓦纳先生说：“我今天非常高兴地欢迎阿根廷国防部长。阿根廷是拉丁美洲的重要一员，我欢迎该国申请成为北约的合作伙伴。北约正在与世界各国合作，促进和平与稳定。阿根廷和北约都将受益于更密切的政治和务实合作”。</p><p>两位领导人还讨论了欧洲和拉丁美洲面临的安全挑战。北约副秘书长感谢阿根廷向乌克兰提供大量人道主义援助，特别是食品和药品，以及向难民提供的帮助。</p><p>这个声明说，北约与阿根廷的政治对话始于20世纪90年代初。布宜诺斯艾利斯随后为北约领导的波黑和平支援行动做出了贡献。哥伦比亚目前是北约在拉丁美洲的唯一伙伴国。而北约与阿根廷建立任何正式伙伴关系的决定都需要其32个盟国达成共识。</p><p>另据美联社说，阿根廷周四正式申请成为北约的合作伙伴。阿根廷总统米莱（Javier Milei）领导的右翼政府正致力于加强与北约成员国的关系并吸引投资，而这一合作伙伴地位将为加强阿根廷与西方的政治和安全合作扫清道路。</p><p>据介绍，对于那些不在北约地理区域内、无需参加集体军事行动的国家来说，“合作伙伴”是一个比"盟友"更有价值的角色。北约成员国目前仅限于欧洲、土耳其、加拿大和美国。</p><p>阿根廷总统府表示，北约这一指定，可使阿根廷获得以前无法获得的先进技术、安全系统和培训。</p><p>而北约副秘书长吉瓦纳在北约总部说，"阿根廷在拉丁美洲扮演着重要的角色"。双方"更紧密的政治和务实合作将使我们双方受益"。</p><p><strong>阿根廷购买丹麦F-16战机</strong></p><p>据法新社消息，丹麦和阿根廷本周二宣布，丹麦将向阿根廷出售24架二手F-16战斗机，阿根廷称，此次购买是其"过去50年中最重要的军事采购"。</p><p>在阿根廷国防部长佩特里访问丹麦的斯克里德斯特鲁普（Skrydstrup）空军基地期间，双方正式签署了这份军购协议。今年3月份双方公布了该交易的意向声明。</p><p>据丹麦媒体报道，丹麦正在将其机队升级为更现代化的 F-35。丹麦拥有大约40架F-16，其中约 30 架正在服役。丹麦也是北约的创建国之一。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX0W.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E9%2598%25BF%25E6%25A0%25B9%25E5%25BB%25B7%25E4%25B8%258E%25E5%258C%2597%25E7%25BA%25A6%25E5%25BB%25BA%25E7%25AB%258B%25E4%25BC%2599%25E4%25BC%25B4%25E5%2585%25B3%25E7%25B3%25BB%25E8%25BF%2588%25E5%2587%25BA%25E7%25AC%25AC%25E4%25B8%2580%25E6%25AD%25A5&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E9%98%BF%E6%A0%B9%E5%BB%B7%E4%B8%8E%E5%8C%97%E7%BA%A6%E5%BB%BA%E7%AB%8B%E4%BC%99%E4%BC%B4%E5%85%B3%E7%B3%BB%E8%BF%88%E5%87%BA%E7%AC%AC%E4%B8%80%E6%AD%A5%20-%20https%3A%2F%2Frfi.my%2FAX0W.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E9%98%BF%E6%A0%B9%E5%BB%B7%E4%B8%8E%E5%8C%97%E7%BA%A6%E5%BB%BA%E7%AB%8B%E4%BC%99%E4%BC%B4%E5%85%B3%E7%B3%BB%E8%BF%88%E5%87%BA%E7%AC%AC%E4%B8%80%E6%AD%A5%20-%20https%3A%2F%2Frfi.my%2FAX0W.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX0W.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E9%98%BF%E6%A0%B9%E5%BB%B7%E4%B8%8E%E5%8C%97%E7%BA%A6%E5%BB%BA%E7%AB%8B%E4%BC%99%E4%BC%B4%E5%85%B3%E7%B3%BB%E8%BF%88%E5%87%BA%E7%AC%AC%E4%B8%80%E6%AD%A5&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
