--- a/articles/rfi/999951.md
+++ b/articles/rfi/999951.md
@@ -1,5 +1,5 @@
-<!--1713554102000-->
-[肯尼亚悼空难殉职的军方首长](https://www.rfi.fr/cn/%E9%9D%9E%E6%B4%B2/20240419-rfi-%E6%B3%95%E5%B9%BF-%E5%B0%BC%E5%8F%A4%E6%8B%89-%E9%9D%9E%E6%B4%B2-%E8%82%AF%E5%B0%BC%E4%BA%9A%E6%82%BC%E7%A9%BA%E9%9A%BE%E6%AE%89%E8%81%8C%E7%9A%84%E5%86%9B%E6%96%B9%E9%A6%96%E9%95%BF)
+<!--1713586502000-->
+[G7外长声明：台海和平对国际安全繁荣不可或缺](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240419-g7%E5%A4%96%E9%95%BF%E5%A3%B0%E6%98%8E-%E5%8F%B0%E6%B5%B7%E5%92%8C%E5%B9%B3%E5%AF%B9%E5%9B%BD%E9%99%85%E5%AE%89%E5%85%A8%E7%B9%81%E8%8D%A3%E4%B8%8D%E5%8F%AF%E6%88%96%E7%BC%BA)
 ------
 
-<div>19/04/2024 - 20:00</div><img src="https://s.rfi.fr/media/display/bbae6010-124f-11ea-a046-005056bf7c53/w:1280/p:16x9/Kenya%20copie_0.png"><p><strong>东非国家肯尼亚的军方首长于当地时间周四（2024年04月18日）下午在视察部队剿匪行动的途中，因直升飞机坠落殉职。肯尼亚官方宣布，从今天（2024年04月19日）星期五开始哀悼三天。        </strong></p><div><p> </p><p><strong>-- 肯尼亚军方突然群龙无首 -</strong></p><p>在东非地区，肯尼亚总统威廉·鲁托(Président William Ruto)沉重宣布，该国军方首长弗朗西斯·奥格拉将军（Gr. Francis Omondi Ogolla）已于昨天星期四（2024年04月18日）在一次直升飞机的坠机事故中遇难。</p><a href="https://www.rfi.fr/fr/tag/kenya/"><figure><picture><sourcetype="image/webp"srcset="https://s.rfi.fr/media/display/1bdee5cc-fdb0-11ee-93d5-005056bfb2b6/2024-04-18T165501Z_171099255_RC2AS0A2H0V8_RTRMADP_3_KENYA-CRASH.webp 2480w"sizes=""><imgfetchpriority="low" src="https://s.rfi.fr/media/display/1bdee5cc-fdb0-11ee-93d5-005056bfb2b6/2024-04-18T165501Z_171099255_RC2AS0A2H0V8_RTRMADP_3_KENYA-CRASH.JPG" alt="Rais wa Kenya William Ruto wakati akiwa na mkuu wa majeshi ya ulinzi ya Kenya, Francis Ogolla jijini Nairobi." srcset="https://s.rfi.fr/media/display/1bdee5cc-fdb0-11ee-93d5-005056bfb2b6/2024-04-18T165501Z_171099255_RC2AS0A2H0V8_RTRMADP_3_KENYA-CRASH.JPG 2480w"sizes=""width="2480"height="1681"loading="lazy"></picture><figcaption><span>存档图片 / 肯尼亚总统威廉·鲁托(Président William Ruto)与该国军方首长弗朗西斯·奥格拉将军（Gr. Francis Omondi Ogolla）。Image Archive / Afrique : Kenya a entamé ce vendredi 19 avril 2024 trois jours de deuil national après la mort dans un accident d&#039;hélicoptère de son chef des armées et de neuf hauts responsables militaires. Ici, photo du Président William RUTO et le chef des armées : Gr. Francis Ogolla.</span>                <span>REUTERS - Monicah Mwangi / RFI Image Archive</span>            </figcaption></figure></a><p>据本台法广（RFI）法文网报导，肯尼亚军方首长已于昨天（2024年04月18日星期四）在该国西部地区发生的一起直升飞机的空难事故中死亡。肯尼亚总统威廉·鲁托(Président William Ruto)于周四晚些时候，在召集了一次紧急安全会议后沉重地告诉媒体，当地时间当天14点20分（国际标准时间11点20分），该国军方首长于在Sindar地区的一起空难事故中遇难。事发时，直升飞机上还有另外11名军人，其中9人同时遇难，只有2人生还。</p><p><strong>-- 肯尼亚当局悲痛哀悼三日 -</strong></p><p><a href="https://www.rfi.fr/tw/關鍵詞/肯尼亞/" target="_self">肯尼亚</a>为此将进行隆重的哀悼，历时三天。据介绍，地方地区距离首都内罗毕（Nairobi）400多公里。肯尼亚军方正在这一地区打击帮派份子。军方首长乘坐直升飞机前往那里是为了视察正在开展军事行动的部队。这一军事行动的名称，把当地的斯瓦希利语（swahili）翻译为中文是“终结罪行”（mettre fin à la criminalité）。</p><a href="https://www.rfi.fr/fr/tag/kenya/"><figure><picture><sourcetype="image/webp"srcset="https://s.rfi.fr/media/display/1853e1d2-14ad-11ea-959f-005056bf7c53/Kenya%20copie_0.webp 886w"sizes=""><imgfetchpriority="low" src="https://s.rfi.fr/media/display/1853e1d2-14ad-11ea-959f-005056bf7c53/Kenya%20copie_0.png" alt="RFI Carte archive / Afrique : le Kenya. Ici, une carte du Kenya.存档地图 / 非洲国家：肯尼亚。" srcset="https://s.rfi.fr/media/display/1853e1d2-14ad-11ea-959f-005056bf7c53/Kenya%20copie_0.png 886w"sizes=""width="886"height="591"loading="lazy"></picture><figcaption><span>RFI Carte archive / Afrique : le Kenya. Ici, une carte du Kenya.存档地图 / 非洲国家：肯尼亚。</span>                <span>Carte / RFI</span>            </figcaption></figure></a><p>（ 翻译和编辑：法广 <strong><a href="https://www.rfi.fr/fr/" target="_self">RFI</a> </strong>电台 <strong><a href="https://www.rfi.fr/tw/作者/尼古拉/" target="_self">尼古拉</a> </strong>）</p><p>~. <a href="https://www.rfi.fr/cn/作者/尼古拉/" target="_self"><strong>Fin</strong></a> .~</p><div><div>非洲时事 - 肯尼亚悼念空难殉职的军方首长</div><div><div><script data-media-id="WBMZ109326-RFI-CN-20240419" type="application/json">{"isEm":true,"mediaId":"WBMZ109326-RFI-CN-20240419","sources":[{"name":"WBMZ109326-RFI-CN-20240419","url":"https:\/\/aod-rfi.akamaized.net\/rfi\/chinois\/audio\/modules\/actu\/202404\/Papier_DESK_19_04_2024_lundi_Nicolas_jour_Afrique_-_Kenya_-_le_chef_4_19_2024-10.mp3"}],"broadcastType":"replay","emission":{"title":"\u975e\u6d32\u65f6\u4e8b - \u80af\u5c3c\u4e9a\u60bc\u5ff5\u7a7a\u96be\u6b89\u804c\u7684\u519b\u65b9\u9996\u957f"},"diffusion":{"title":"_Papier DESK 19.04.2024 lundi Nicolas jour Afrique - Kenya - le chef des arm\u00e9es mort dans un crash lors une op\u00e9ration","image":""}}</script><divdata-root-audio-player-button    data-short-lived-vue-app><play-mediav-bind:current-media="mediaId"v-bind:is-player-playing="isPlayerPlaying"media-id="WBMZ109326-RFI-CN-20240419"v-on:emitted-click="playOrPause"classes="a-picto-play-pause"play-pause-page-url="":smaller-icons="false":add-editions-automatically="false":is-live="false"data-label=""><template #play><span><div><div></div><div></div></div></span></template><template #pause><span></span></template></play-media></div><div>01:13</div>        </div><div><p>_Papier DESK 19.04.2024 lundi Nicolas jour Afrique - Kenya - le chef des armées mort dans un crash lors une opération</p><span>尼古拉</span></div></div></div><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX4C.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E9%259D%259E%25E6%25B4%25B2%2F20240419-rfi-%25E6%25B3%2595%25E5%25B9%25BF-%25E5%25B0%25BC%25E5%258F%25A4%25E6%258B%2589-%25E9%259D%259E%25E6%25B4%25B2-%25E8%2582%25AF%25E5%25B0%25BC%25E4%25BA%259A%25E6%2582%25BC%25E7%25A9%25BA%25E9%259A%25BE%25E6%25AE%2589%25E8%2581%258C%25E7%259A%2584%25E5%2586%259B%25E6%2596%25B9%25E9%25A6%2596%25E9%2595%25BF&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%82%AF%E5%B0%BC%E4%BA%9A%E6%82%BC%E7%A9%BA%E9%9A%BE%E6%AE%89%E8%81%8C%E7%9A%84%E5%86%9B%E6%96%B9%E9%A6%96%E9%95%BF%20-%20https%3A%2F%2Frfi.my%2FAX4C.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%82%AF%E5%B0%BC%E4%BA%9A%E6%82%BC%E7%A9%BA%E9%9A%BE%E6%AE%89%E8%81%8C%E7%9A%84%E5%86%9B%E6%96%B9%E9%A6%96%E9%95%BF%20-%20https%3A%2F%2Frfi.my%2FAX4C.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX4C.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%82%AF%E5%B0%BC%E4%BA%9A%E6%82%BC%E7%A9%BA%E9%9A%BE%E6%AE%89%E8%81%8C%E7%9A%84%E5%86%9B%E6%96%B9%E9%A6%96%E9%95%BF&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>19/04/2024 - 23:36</div><img src="https://s.rfi.fr/media/display/e93c5330-fe94-11ee-baca-005056bf30b7/w:1280/p:16x9/2024-04-18T164639Z_978736951_RC2497AQO4K6_RTRMADP_3_G7-ITALY-FOREIGN.JPG"><p><strong>七国集团（G7）外长会议在意大利结束议程后发表声明指出，台海和平稳定对国际社会安全与繁荣至关重要，呼吁以和平方式解决。七国集团外长会议并"强烈关切"中国企业向俄罗斯转移军民两用原材料和可用于制造武器的零组件，这些材料和零件被莫斯科用于军事扩张。        </strong></p><div><p>G7外长会议17至19日在意大利卡普里岛（Capri）举行，G7外长周五在会后发表"应对全球挑战、促进合作伙伴关系"的共同声明。</p><p>在台海议题方面，声明指出，台海和平稳定对国际社会的安全与繁荣不可或缺，呼吁两岸议题必须用和平方式解决。</p><p>中央社援引声明指出，G7成员支持台湾以观察员、或来宾的身份，有意义参与非以国家身份为前提的国际组织，包括世界卫生大会（WHA）、世界卫生组织（WHO）技术会议。声明指出，G7成员对台湾的基本立场没有改变，包括现行的一中政策。</p><p>此外，美国国务卿布林肯在单独召开的记者会上指出，G7成员在台海、南海、朝鲜半岛和平与稳定的立场一致，也团结对抗中国不公平、非市场性的行为。</p><p>布林肯表示，G7成员国都非常关切中国产能过剩的问题，他称，"这些问题使我们的市场充斥大量补贴、因而价格偏低的新产品和技术，不仅逼走我们的企业，他们也企图主导这些市场"。</p><p>此外，七国集团外长周五表示，"强烈关切"中国企业向俄罗斯转移军民两用原材料和可用于制造武器的零组件，这些材料和零件被莫斯科用于军事扩张。</p><p>法新社报导，七国集团外长在会议声明中说："这使俄罗斯能够重建和振兴其国防工业基础，对乌克兰和国际和平与安全构成威胁。中国应确保停止这种支持。"</p><p>此前，欧盟委员会负责贸易政策的副主席东布罗夫斯基斯（Valdis Dombrovskis）在华盛顿表示，欧盟看到有迹象显示中国正在供应可让俄罗斯用于制造武器的零组件，担心如果西方阻止俄罗斯入侵乌克兰的决心削弱，中国可能会扩大交付零组件。</p><p>东布罗夫斯基斯表示，他此行访问华盛顿将会见美国国会议员，以强调批准等候已久的美国军援乌克兰的重要性。</p><p>美国官员上周针对中国正在提供给俄罗斯的零件材料向媒体简报，包括无人机和导弹技术、卫星影像和工具机，这些材料有助于俄罗斯建立其军事力量，使打了两年的俄乌战争得以延续。</p><p>东布罗夫斯基斯在美国智库研究机构"外交关系协会"（Council on Foreign Relations）一场活动上表示，欧盟正在与美国合作打击对俄罗斯制裁的规避行为。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX5K.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240419-g7%25E5%25A4%2596%25E9%2595%25BF%25E5%25A3%25B0%25E6%2598%258E-%25E5%258F%25B0%25E6%25B5%25B7%25E5%2592%258C%25E5%25B9%25B3%25E5%25AF%25B9%25E5%259B%25BD%25E9%2599%2585%25E5%25AE%2589%25E5%2585%25A8%25E7%25B9%2581%25E8%258D%25A3%25E4%25B8%258D%25E5%258F%25AF%25E6%2588%2596%25E7%25BC%25BA&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=G7%E5%A4%96%E9%95%BF%E5%A3%B0%E6%98%8E%EF%BC%9A%E5%8F%B0%E6%B5%B7%E5%92%8C%E5%B9%B3%E5%AF%B9%E5%9B%BD%E9%99%85%E5%AE%89%E5%85%A8%E7%B9%81%E8%8D%A3%E4%B8%8D%E5%8F%AF%E6%88%96%E7%BC%BA%20-%20https%3A%2F%2Frfi.my%2FAX5K.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=G7%E5%A4%96%E9%95%BF%E5%A3%B0%E6%98%8E%EF%BC%9A%E5%8F%B0%E6%B5%B7%E5%92%8C%E5%B9%B3%E5%AF%B9%E5%9B%BD%E9%99%85%E5%AE%89%E5%85%A8%E7%B9%81%E8%8D%A3%E4%B8%8D%E5%8F%AF%E6%88%96%E7%BC%BA%20-%20https%3A%2F%2Frfi.my%2FAX5K.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX5K.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=G7%E5%A4%96%E9%95%BF%E5%A3%B0%E6%98%8E%EF%BC%9A%E5%8F%B0%E6%B5%B7%E5%92%8C%E5%B9%B3%E5%AF%B9%E5%9B%BD%E9%99%85%E5%AE%89%E5%85%A8%E7%B9%81%E8%8D%A3%E4%B8%8D%E5%8F%AF%E6%88%96%E7%BC%BA&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
