--- a/articles/rfi/999954.md
+++ b/articles/rfi/999954.md
@@ -1,5 +1,5 @@
-<!--1713554102000-->
-[【视频】巴黎新桥：塞纳河上最古老的桥梁](https://www.rfi.fr/cn/%E9%AD%85%E5%8A%9B%E6%B3%95%E5%85%B0%E8%A5%BF/20240419-%E8%A7%86%E9%A2%91-%E5%B7%B4%E9%BB%8E%E6%96%B0%E6%A1%A5-%E5%A1%9E%E7%BA%B3%E6%B2%B3%E4%B8%8A%E6%9C%80%E5%8F%A4%E8%80%81%E7%9A%84%E6%A1%A5%E6%A2%81)
+<!--1713584702000-->
+[950亿美元的对外援助计划接近在美众议院通关](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-950%E4%BA%BF%E7%BE%8E%E5%85%83%E7%9A%84%E5%AF%B9%E5%A4%96%E6%8F%B4%E5%8A%A9%E8%AE%A1%E5%88%92%E6%8E%A5%E8%BF%91%E5%9C%A8%E7%BE%8E%E4%BC%97%E8%AE%AE%E9%99%A2%E9%80%9A%E5%85%B3)
 ------
 
-<div>19/04/2024 - 18:18</div><img src="https://s.rfi.fr/media/display/17ae80ac-15d4-11ea-9423-005056bf7c53/w:1280/p:16x9/Embarras%20Pont%20Neuf_0.jpg"><p><strong>新桥是目前巴黎现存最古老的桥梁。 它也是第一座跨越整个塞纳河河面的桥梁。        </strong></p><div><p>在新桥建成之前，巴黎的桥梁主要是用木头建造的，因此极易失火。</p><p>新桥保留了建桥时巴黎人自发给它起的名字。 修建这座桥的决定是在1577 年做出的，当时的国王亨利三世任命了一个委员会，来确保桥梁的修建得当并对工程施工进行监督。</p><p>直到 18 世纪，新桥一直是巴黎这座城市的中心，也是许多街头艺人和商贩的最爱。桥上总是热闹非凡。</p><p>新桥两边的桥栏上有 384 个怪面装饰，是古代神话故事中森林或乡间神灵的头像，每个头像重达100多公斤。</p><p>随着时间的推移，原来的怪面装饰的某些部分已经损坏，雕像的细节因风化而模糊，因此它们需要全部更换进行修复。</p><p>历时13年的新桥修复工程在2007年揭幕，恰逢新桥建成 400 周年，以示纪念。</p><p>所以，今天看到的桥上雕像都是复制品。 不过，如有兴趣，可前往巴黎市立历史博物馆——卡纳瓦雷博物馆，在那里欣赏到这些雕像的原件。</p><p>新桥的设计和支撑桥身的拱门让人联想到罗马建筑。 桥上人行道的设计灵感也来自罗马道路。</p><p>新桥也是巴黎最早铺设人行道的桥梁之一，当时铺设人行道是为了保护行人避雨和马车溅起的泥浆之用。</p><p>这座桥自1889年起就被列为历史古迹。1991年，它和巴黎塞纳河两岸河沿一起被联合国教科文组织列入世界文化遗产名录。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX35.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E9%25AD%2585%25E5%258A%259B%25E6%25B3%2595%25E5%2585%25B0%25E8%25A5%25BF%2F20240419-%25E8%25A7%2586%25E9%25A2%2591-%25E5%25B7%25B4%25E9%25BB%258E%25E6%2596%25B0%25E6%25A1%25A5-%25E5%25A1%259E%25E7%25BA%25B3%25E6%25B2%25B3%25E4%25B8%258A%25E6%259C%2580%25E5%258F%25A4%25E8%2580%2581%25E7%259A%2584%25E6%25A1%25A5%25E6%25A2%2581&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E3%80%90%E8%A7%86%E9%A2%91%E3%80%91%E5%B7%B4%E9%BB%8E%E6%96%B0%E6%A1%A5%EF%BC%9A%E5%A1%9E%E7%BA%B3%E6%B2%B3%E4%B8%8A%E6%9C%80%E5%8F%A4%E8%80%81%E7%9A%84%E6%A1%A5%E6%A2%81%20-%20https%3A%2F%2Frfi.my%2FAX35.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E3%80%90%E8%A7%86%E9%A2%91%E3%80%91%E5%B7%B4%E9%BB%8E%E6%96%B0%E6%A1%A5%EF%BC%9A%E5%A1%9E%E7%BA%B3%E6%B2%B3%E4%B8%8A%E6%9C%80%E5%8F%A4%E8%80%81%E7%9A%84%E6%A1%A5%E6%A2%81%20-%20https%3A%2F%2Frfi.my%2FAX35.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX35.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E3%80%90%E8%A7%86%E9%A2%91%E3%80%91%E5%B7%B4%E9%BB%8E%E6%96%B0%E6%A1%A5%EF%BC%9A%E5%A1%9E%E7%BA%B3%E6%B2%B3%E4%B8%8A%E6%9C%80%E5%8F%A4%E8%80%81%E7%9A%84%E6%A1%A5%E6%A2%81&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>19/04/2024 - 19:38</div><img src="https://s.rfi.fr/media/display/66235d9c-fe6f-11ee-9bc6-005056a90284/w:1280/p:16x9/AP24110587692992.jpg"><p><strong>4月19日，美国国会众议院以罕见的两党势头推进了一项总额为950亿美元的对外援助计划，该计划将用于乌克兰、以色列、台湾及人道主义援助，一个强大的议员联盟帮助该计划扫清了程序性障碍，以便在周六进行最终投票。周五的投票在通常党争严重的众议院产生了罕见的结果，民主党人帮助共和党籍议长约翰逊（Mike Johnson）的计划以316票对94票的压倒性优势获得通过。众议院可能在本周末最终批准该计划，届时其将被送交参议院。        </strong></p><div><p>这是约翰逊在为该项立法苦恼了两个月后于本周启动的战略的胜利。尽管如此，约翰逊在过去的24小时里仍不得不在美国保守派媒体上四处呼吁，努力挽回对追加援助的支持，尤其是在乌克兰面临与俄罗斯交战的关键时刻，同时也是为了他自己的议长席位，因为将他赶下议长宝座的呼声在共和党极右翼议员中越来越高。</p><p>约翰逊对保守派广播节目《马克·莱文秀》说：“关于我们在这里做什么以及为什么做，有很多误传”。约翰逊补充说，“乌克兰人现在迫切需要致命援助……我们不能允许普京横扫占领另一个国家”，并指“这些都是非常严重的问题，具有全球性影响”。</p><p>经过几个月的拖延，约翰逊本周下定决心继续推进该立法计划后，众议院缓慢而慎重地开展工作。拜登总统迅速对约翰逊议长的计划表示支持，而共和党总统候选人特朗普也罕见地没有破坏约翰逊的工作。白宫在一份声明中说：“全世界都在关注国会的行动。通过这项立法将发出一个强有力的信息，表明美国在关键时刻的领导力”。</p><p>周四晚些时候，众议院规则委员会成员联手进行了一次极为罕见的投票，在接近午夜的投票中，四位民主党人在程序性步骤上给予了支持，以9票对3票的表决结果，击败了该委员会共和党占多数的三位强硬派，将这一方案送入众议院进行辩论。这是众议院近期从未有过的时刻。</p><p>众议院民主党领袖杰弗里斯（Hakeem Jeffries）在投票后说：“我们早就应该支持我们的民主盟友了，众议院民主党人再次为对美国人民很重要的立法扫清了障碍”。周五，约翰逊将需要再次依靠民主党人通过下一轮程序性投票，否决共和党人提出的可能会扼杀该方案的修正案。极右翼共和党籍众议员泰勒·格林（Marjorie Taylor Greene）提出的一项修正案将把用于乌克兰的开支降至零。</p><p>泰勒·格林提出了一项“罢免议长职务”的动议，该动议周五吸引了另一位支持者，亚利桑那州共和党籍众议员戈萨（Paul Gosar）成为该动议的共同提案人。另一位共同提案人、肯塔基州共和党籍众议员马西（Thomas Massie）表示，在下周众议院休会前，可能会有其他议员加入。</p><p>由于众议院的多数党——共和党占优席位是近代以来最稀少的，这种态势将约翰逊推向了民主党人的怀抱。由于没有共和党多数的全力支持，约翰逊无法按照党内极右翼派别的要求来制定方案，这迫使他不得不放弃在美墨边境打击非法移民的强硬安全措施和其他优先事项，以免失去民主党人的支持。</p><p>约翰逊最多只能将先前参议院通过的法案分割成不同部分，这也是众议院共和党人的偏好，最终投票将针对乌克兰、以色列和印太地区盟友的不同措施。该方案还将包括第四项议案，其中包括民主党人赞同或至少愿意接受的许多共和党优先事项：允许美国扣押被冻结的俄罗斯央行资产以重建乌克兰；对伊朗、俄罗斯、中国和贩运芬太尼的犯罪组织实施制裁；如果视频应用TikTok的中国所有者不在一年内出售其股份，则可能禁止该应用。</p><p>预计在周六的投票中通过每项议案将需要约翰逊就它们分别形成复杂的两党联盟，例如，民主党人将确保乌克兰援助获得批准，但一些该党极左翼议员将拒绝因加沙遭到破坏而支持对以色列的军援。然后，这些部分将自动拼接成一个单一的一揽子方案送交参议院，而参议院的反对者也在计划采取程序性举措，来拖延这一揽子的对外援助法案被送到总统拜登的办公桌上供其签字。</p><p>约翰逊的计划是在周六将这四项议案提交众议院全院，并于中午开始投票。其中一项法案为乌克兰提供了600亿美元。其中大部分资金将提供给美国武器制造商，用于重建耗尽的美国武器供应，约20%的资金将以贷款形式直接提供给乌克兰。不过，美国总统可以在11月15日之后取消乌克兰的债务。</p><p>第二项法案将为以色列提供约170亿美元的进攻性和防御性武器，并为加沙和其他地区提供略高于90亿美元的人道主义援助。第三项法案将为印太地区提供81亿美元以威慑中国，第四项法案充满了共和党的优先事项，包括强迫TikTok剥离和扣押俄罗斯资产。由于每项法案都将单独表决，因此支持它们的议员联盟也各不相同。</p><p>周六，众议院还将就共和党优先考虑的第五项法案进行投票，以确保边境安全并限制移民进入美国。但该法案很可能会失败，因为它需要众议院三分之二的支持，因为它是在不同的程序下进行的。外援方案随后将提交参议院，参议员们必须再次对其进行投票，然后才能将法案提交给已批准该方案的拜登总统签字。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX3y.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-950%25E4%25BA%25BF%25E7%25BE%258E%25E5%2585%2583%25E7%259A%2584%25E5%25AF%25B9%25E5%25A4%2596%25E6%258F%25B4%25E5%258A%25A9%25E8%25AE%25A1%25E5%2588%2592%25E6%258E%25A5%25E8%25BF%2591%25E5%259C%25A8%25E7%25BE%258E%25E4%25BC%2597%25E8%25AE%25AE%25E9%2599%25A2%25E9%2580%259A%25E5%2585%25B3&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=950%E4%BA%BF%E7%BE%8E%E5%85%83%E7%9A%84%E5%AF%B9%E5%A4%96%E6%8F%B4%E5%8A%A9%E8%AE%A1%E5%88%92%E6%8E%A5%E8%BF%91%E5%9C%A8%E7%BE%8E%E4%BC%97%E8%AE%AE%E9%99%A2%E9%80%9A%E5%85%B3%20-%20https%3A%2F%2Frfi.my%2FAX3y.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=950%E4%BA%BF%E7%BE%8E%E5%85%83%E7%9A%84%E5%AF%B9%E5%A4%96%E6%8F%B4%E5%8A%A9%E8%AE%A1%E5%88%92%E6%8E%A5%E8%BF%91%E5%9C%A8%E7%BE%8E%E4%BC%97%E8%AE%AE%E9%99%A2%E9%80%9A%E5%85%B3%20-%20https%3A%2F%2Frfi.my%2FAX3y.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX3y.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=950%E4%BA%BF%E7%BE%8E%E5%85%83%E7%9A%84%E5%AF%B9%E5%A4%96%E6%8F%B4%E5%8A%A9%E8%AE%A1%E5%88%92%E6%8E%A5%E8%BF%91%E5%9C%A8%E7%BE%8E%E4%BC%97%E8%AE%AE%E9%99%A2%E9%80%9A%E5%85%B3&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
