--- a/articles/rfi/999956.md
+++ b/articles/rfi/999956.md
@@ -1,5 +1,5 @@
-<!--1713552303000-->
-[以色列被指对伊朗发动攻击 伊朗中部听到剧烈爆炸声](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AB%E6%8C%87%E5%AF%B9%E4%BC%8A%E6%9C%97%E5%8F%91%E5%8A%A8%E6%94%BB%E5%87%BB-%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E5%90%AC%E5%88%B0%E5%89%A7%E7%83%88%E7%88%86%E7%82%B8%E5%A3%B0)
+<!--1713554102000-->
+[肯尼亚悼空难殉职的军方首长](https://www.rfi.fr/cn/%E9%9D%9E%E6%B4%B2/20240419-rfi-%E6%B3%95%E5%B9%BF-%E5%B0%BC%E5%8F%A4%E6%8B%89-%E9%9D%9E%E6%B4%B2-%E8%82%AF%E5%B0%BC%E4%BA%9A%E6%82%BC%E7%A9%BA%E9%9A%BE%E6%AE%89%E8%81%8C%E7%9A%84%E5%86%9B%E6%96%B9%E9%A6%96%E9%95%BF)
 ------
 
-<div>19/04/2024 - 10:18</div><img src="https://s.rfi.fr/media/display/97390bd4-fe0b-11ee-8376-005056bf30b7/w:1280/p:16x9/000_34PR6GE.jpg"><p><strong>伊朗中部周五凌晨听到剧烈爆炸声，以色列军方拒绝置评，美媒披露以色列向美国预告了这次袭击。        </strong></p><div><p>以色列周五夜间对伊朗发动了攻击。据德黑兰官方“法尔斯”通讯社报道，周五黎明时分，伊朗中部一个军事基地附近发生了三起爆炸事件。据伊朗国家电视台报道，中部伊斯法罕省听到了"巨大的爆炸声"，爆炸原因尚不清楚。</p><p>伊朗立即启动了多个省份的防空系统。伊朗当局表示，无人机已被击落，但"迄今为止 "没有发生导弹袭击。</p><p>不过，伊朗的“塔斯-尼姆”通讯社周五援引"消息灵通人士"说，在伊朗听到爆炸声后，"没有外国袭击的消息"。该通讯社称，"与以色列媒体的谣言和说法相反"，"没有任何关于外国对“伊斯法罕”中心城市或任何其他地区发动袭击的消息"。伊朗领导人尚未就爆炸事件公开发表评论。</p><p>据美国媒体报道，美国高级官员称，以色列对伊朗发动袭击是为了报复上周末以色列遭到的史无前例的无人机和导弹袭击。</p><p>白宫没有立即发表评论。但美国全国广播公司（NBC）和美国有线电视新闻网（CNN）分别援引熟悉此事的消息人士和一名美国官员的话报道说，以色列已提前向华盛顿发出了袭击警告，但美国没有同意这次行动，也没有参与实施。"据 CNN 报道，一名美国官员说："我们没有同意报复行动。</p><p>上周末，伊朗向以色列境内发射了数百枚导弹和无人机，以色列警告称将进行报复。在伊朗袭击上周末袭击以色列之前，伊朗驻大马士革领事馆遭袭击，德黑兰认为以色列负有责任。</p><p>以色列军方在周五早晨宣布，以色列北部已启动警报。</p><p>以色列军队发言人就爆炸事件告诉法新社记者："我们目前不予置评。</p><p>不过，以色列极右翼的国家安全部长本-格-维-尔（Ben Gvir）在 X 上发布一句话说"软弱！"</p><p>伊朗总统易卜拉欣-拉伊西（Ebrahim Raissi）本周曾表示，以色列对伊朗领土的任何攻击"都将遭到严厉回应"。</p><p>伊朗周四在联合国安理会表示，"必须迫使以色列停止针对我们利益的任何进一步军事冒险主义"，而联合国秘书长则警告说，中东正处于"最危险的时刻"。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWwW.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E8%25A2%25AB%25E6%258C%2587%25E5%25AF%25B9%25E4%25BC%258A%25E6%259C%2597%25E5%258F%2591%25E5%258A%25A8%25E6%2594%25BB%25E5%2587%25BB-%25E4%25BC%258A%25E6%259C%2597%25E4%25B8%25AD%25E9%2583%25A8%25E5%2590%25AC%25E5%2588%25B0%25E5%2589%25A7%25E7%2583%2588%25E7%2588%2586%25E7%2582%25B8%25E5%25A3%25B0&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AB%E6%8C%87%E5%AF%B9%E4%BC%8A%E6%9C%97%E5%8F%91%E5%8A%A8%E6%94%BB%E5%87%BB%20%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E5%90%AC%E5%88%B0%E5%89%A7%E7%83%88%E7%88%86%E7%82%B8%E5%A3%B0%20-%20https%3A%2F%2Frfi.my%2FAWwW.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AB%E6%8C%87%E5%AF%B9%E4%BC%8A%E6%9C%97%E5%8F%91%E5%8A%A8%E6%94%BB%E5%87%BB%20%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E5%90%AC%E5%88%B0%E5%89%A7%E7%83%88%E7%88%86%E7%82%B8%E5%A3%B0%20-%20https%3A%2F%2Frfi.my%2FAWwW.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWwW.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AB%E6%8C%87%E5%AF%B9%E4%BC%8A%E6%9C%97%E5%8F%91%E5%8A%A8%E6%94%BB%E5%87%BB%20%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E5%90%AC%E5%88%B0%E5%89%A7%E7%83%88%E7%88%86%E7%82%B8%E5%A3%B0&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>19/04/2024 - 20:00</div><img src="https://s.rfi.fr/media/display/bbae6010-124f-11ea-a046-005056bf7c53/w:1280/p:16x9/Kenya%20copie_0.png"><p><strong>东非国家肯尼亚的军方首长于当地时间周四（2024年04月18日）下午在视察部队剿匪行动的途中，因直升飞机坠落殉职。肯尼亚官方宣布，从今天（2024年04月19日）星期五开始哀悼三天。        </strong></p><div><p> </p><p><strong>-- 肯尼亚军方突然群龙无首 -</strong></p><p>在东非地区，肯尼亚总统威廉·鲁托(Président William Ruto)沉重宣布，该国军方首长弗朗西斯·奥格拉将军（Gr. Francis Omondi Ogolla）已于昨天星期四（2024年04月18日）在一次直升飞机的坠机事故中遇难。</p><a href="https://www.rfi.fr/fr/tag/kenya/"><figure><picture><sourcetype="image/webp"srcset="https://s.rfi.fr/media/display/1bdee5cc-fdb0-11ee-93d5-005056bfb2b6/2024-04-18T165501Z_171099255_RC2AS0A2H0V8_RTRMADP_3_KENYA-CRASH.webp 2480w"sizes=""><imgfetchpriority="low" src="https://s.rfi.fr/media/display/1bdee5cc-fdb0-11ee-93d5-005056bfb2b6/2024-04-18T165501Z_171099255_RC2AS0A2H0V8_RTRMADP_3_KENYA-CRASH.JPG" alt="Rais wa Kenya William Ruto wakati akiwa na mkuu wa majeshi ya ulinzi ya Kenya, Francis Ogolla jijini Nairobi." srcset="https://s.rfi.fr/media/display/1bdee5cc-fdb0-11ee-93d5-005056bfb2b6/2024-04-18T165501Z_171099255_RC2AS0A2H0V8_RTRMADP_3_KENYA-CRASH.JPG 2480w"sizes=""width="2480"height="1681"loading="lazy"></picture><figcaption><span>存档图片 / 肯尼亚总统威廉·鲁托(Président William Ruto)与该国军方首长弗朗西斯·奥格拉将军（Gr. Francis Omondi Ogolla）。Image Archive / Afrique : Kenya a entamé ce vendredi 19 avril 2024 trois jours de deuil national après la mort dans un accident d&#039;hélicoptère de son chef des armées et de neuf hauts responsables militaires. Ici, photo du Président William RUTO et le chef des armées : Gr. Francis Ogolla.</span>                <span>REUTERS - Monicah Mwangi / RFI Image Archive</span>            </figcaption></figure></a><p>据本台法广（RFI）法文网报导，肯尼亚军方首长已于昨天（2024年04月18日星期四）在该国西部地区发生的一起直升飞机的空难事故中死亡。肯尼亚总统威廉·鲁托(Président William Ruto)于周四晚些时候，在召集了一次紧急安全会议后沉重地告诉媒体，当地时间当天14点20分（国际标准时间11点20分），该国军方首长于在Sindar地区的一起空难事故中遇难。事发时，直升飞机上还有另外11名军人，其中9人同时遇难，只有2人生还。</p><p><strong>-- 肯尼亚当局悲痛哀悼三日 -</strong></p><p><a href="https://www.rfi.fr/tw/關鍵詞/肯尼亞/" target="_self">肯尼亚</a>为此将进行隆重的哀悼，历时三天。据介绍，地方地区距离首都内罗毕（Nairobi）400多公里。肯尼亚军方正在这一地区打击帮派份子。军方首长乘坐直升飞机前往那里是为了视察正在开展军事行动的部队。这一军事行动的名称，把当地的斯瓦希利语（swahili）翻译为中文是“终结罪行”（mettre fin à la criminalité）。</p><a href="https://www.rfi.fr/fr/tag/kenya/"><figure><picture><sourcetype="image/webp"srcset="https://s.rfi.fr/media/display/1853e1d2-14ad-11ea-959f-005056bf7c53/Kenya%20copie_0.webp 886w"sizes=""><imgfetchpriority="low" src="https://s.rfi.fr/media/display/1853e1d2-14ad-11ea-959f-005056bf7c53/Kenya%20copie_0.png" alt="RFI Carte archive / Afrique : le Kenya. Ici, une carte du Kenya.存档地图 / 非洲国家：肯尼亚。" srcset="https://s.rfi.fr/media/display/1853e1d2-14ad-11ea-959f-005056bf7c53/Kenya%20copie_0.png 886w"sizes=""width="886"height="591"loading="lazy"></picture><figcaption><span>RFI Carte archive / Afrique : le Kenya. Ici, une carte du Kenya.存档地图 / 非洲国家：肯尼亚。</span>                <span>Carte / RFI</span>            </figcaption></figure></a><p>（ 翻译和编辑：法广 <strong><a href="https://www.rfi.fr/fr/" target="_self">RFI</a> </strong>电台 <strong><a href="https://www.rfi.fr/tw/作者/尼古拉/" target="_self">尼古拉</a> </strong>）</p><p>~. <a href="https://www.rfi.fr/cn/作者/尼古拉/" target="_self"><strong>Fin</strong></a> .~</p><div><div>非洲时事 - 肯尼亚悼念空难殉职的军方首长</div><div><div><script data-media-id="WBMZ109326-RFI-CN-20240419" type="application/json">{"isEm":true,"mediaId":"WBMZ109326-RFI-CN-20240419","sources":[{"name":"WBMZ109326-RFI-CN-20240419","url":"https:\/\/aod-rfi.akamaized.net\/rfi\/chinois\/audio\/modules\/actu\/202404\/Papier_DESK_19_04_2024_lundi_Nicolas_jour_Afrique_-_Kenya_-_le_chef_4_19_2024-10.mp3"}],"broadcastType":"replay","emission":{"title":"\u975e\u6d32\u65f6\u4e8b - \u80af\u5c3c\u4e9a\u60bc\u5ff5\u7a7a\u96be\u6b89\u804c\u7684\u519b\u65b9\u9996\u957f"},"diffusion":{"title":"_Papier DESK 19.04.2024 lundi Nicolas jour Afrique - Kenya - le chef des arm\u00e9es mort dans un crash lors une op\u00e9ration","image":""}}</script><divdata-root-audio-player-button    data-short-lived-vue-app><play-mediav-bind:current-media="mediaId"v-bind:is-player-playing="isPlayerPlaying"media-id="WBMZ109326-RFI-CN-20240419"v-on:emitted-click="playOrPause"classes="a-picto-play-pause"play-pause-page-url="":smaller-icons="false":add-editions-automatically="false":is-live="false"data-label=""><template #play><span><div><div></div><div></div></div></span></template><template #pause><span></span></template></play-media></div><div>01:13</div>        </div><div><p>_Papier DESK 19.04.2024 lundi Nicolas jour Afrique - Kenya - le chef des armées mort dans un crash lors une opération</p><span>尼古拉</span></div></div></div><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX4C.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E9%259D%259E%25E6%25B4%25B2%2F20240419-rfi-%25E6%25B3%2595%25E5%25B9%25BF-%25E5%25B0%25BC%25E5%258F%25A4%25E6%258B%2589-%25E9%259D%259E%25E6%25B4%25B2-%25E8%2582%25AF%25E5%25B0%25BC%25E4%25BA%259A%25E6%2582%25BC%25E7%25A9%25BA%25E9%259A%25BE%25E6%25AE%2589%25E8%2581%258C%25E7%259A%2584%25E5%2586%259B%25E6%2596%25B9%25E9%25A6%2596%25E9%2595%25BF&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%82%AF%E5%B0%BC%E4%BA%9A%E6%82%BC%E7%A9%BA%E9%9A%BE%E6%AE%89%E8%81%8C%E7%9A%84%E5%86%9B%E6%96%B9%E9%A6%96%E9%95%BF%20-%20https%3A%2F%2Frfi.my%2FAX4C.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%82%AF%E5%B0%BC%E4%BA%9A%E6%82%BC%E7%A9%BA%E9%9A%BE%E6%AE%89%E8%81%8C%E7%9A%84%E5%86%9B%E6%96%B9%E9%A6%96%E9%95%BF%20-%20https%3A%2F%2Frfi.my%2FAX4C.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX4C.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%82%AF%E5%B0%BC%E4%BA%9A%E6%82%BC%E7%A9%BA%E9%9A%BE%E6%AE%89%E8%81%8C%E7%9A%84%E5%86%9B%E6%96%B9%E9%A6%96%E9%95%BF&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
