--- a/articles/rfi/999958.md
+++ b/articles/rfi/999958.md
@@ -1,5 +1,5 @@
-<!--1713552302000-->
-[伊朗境内爆炸原因疑点重重，国际社会同声呼吁克制 - 要闻解说](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E8%A7%A3%E8%AF%B4/20240419-%E4%BC%8A%E6%9C%97%E5%A2%83%E5%86%85%E7%88%86%E7%82%B8%E5%8E%9F%E5%9B%A0%E7%96%91%E7%82%B9%E9%87%8D%E9%87%8D%EF%BC%8C%E5%9B%BD%E9%99%85%E7%A4%BE%E4%BC%9A%E5%90%8C%E5%A3%B0%E5%91%BC%E5%90%81%E5%85%8B%E5%88%B6)
+<!--1713554102000-->
+[法新社：奇瑞落户西班牙 中国加强在欧洲汽车市场攻势](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240419-%E6%B3%95%E6%96%B0%E7%A4%BE-%E5%A5%87%E7%91%9E%E8%90%BD%E6%88%B7%E8%A5%BF%E7%8F%AD%E7%89%99-%E4%B8%AD%E5%9B%BD%E5%8A%A0%E5%BC%BA%E5%9C%A8%E6%AC%A7%E6%B4%B2%E7%9A%84%E6%B1%BD%E8%BD%A6%E5%B8%82%E5%9C%BA%E6%94%BB%E5%8A%BF)
 ------
 
-<div>19/04/2024 - 15:30</div><img src="https://s.rfi.fr/media/display/c0fc8d5c-fe37-11ee-b2ed-005056a97e36/w:1280/p:16x9/Carte-Iran-RFI.png"><p><strong>伊朗中部伊斯法罕一座军事基地附近19日凌晨响起巨大的爆炸声响，连日来全球对中东地区冲突随伊朗大举袭击以色列的报复性行动而扩大的担心进一步提升，各地股市也在消息传出的第一时间纷纷下挫。但在众多呼吁有关各方克制、避免升级的表态中，这起爆炸事件起因为何？是否的确是以色列袭击行动所为，截至本文截稿时止，仍然不甚明朗。                    </strong></p><div><p><strong>伊朗否认有来自境外的袭击</strong></p><p>根据伊朗各方通讯社目前通报的消息，该国中部地区一个军事基地附近19日拂晓时发生三起爆炸，<strong>伊斯法罕</strong>地区都听到了强烈的爆炸声响，但爆炸原因尚不明了。该通讯社消息还指出，伊朗高度敏感的防空系统在多地应声启动，并击落一些无人机。而从他们掌握的消息来看，没有“来自境外的攻击行动”，伊朗核设施也“没有受到任何重大损坏”。国际能源署当日也证实，尚没有伊朗境内核设施遇袭受损的消息。美国《纽约时报》引述一些伊朗负责人报道指出，发生小型无人机袭击行动，这些无人机可能是自伊朗本土出发，伊朗防空系统没有监测到进入伊朗空域的不明飞行物。</p><p>另据法新社发自德黑兰的消息，19日当天，伊朗总统易卜拉欣-莱希在爆炸发生数小时后，在东北部城市<strong>达姆甘</strong>向数百人发表讲话时，虽然简短提到中东地区的紧张情势，但完全没有提及当天的爆炸事件。</p><p><strong>《华盛顿邮报》称以色列事前知会华盛顿</strong></p><p>但与此同时，也有一些美国媒体则各自引述消息，称以色列19日对伊朗实施了报复性打击。美国NBC和CNN两家电视台都引述消息人士以及一名美国负责人报道指出，以色列在行动前曾通报华盛顿，美方对此既没有反对，也没有参与。《华盛顿邮报》引述一名不愿披露身分的以色列负责人报道称，以色列的攻击行动是对4月13日伊朗对以色列发动大规模空袭做出的反击。以色列内塔尼亚胡政府中的极右翼的安全部长伊塔马尔·本-格维尔（Itamar Ben-Gvir）当日在社交媒体X，也就是前推特平台上发帖，似乎默认了伊朗境内的爆炸是以色列所为。但他此番推特发言立即在以色列国内引来众多批评，认为他让以色列蒙羞，也让以色列难以出面否认等等。</p><p>法新社为此联系以色列官方求证，但以色列军方和政府都拒绝对爆炸事件发言。美国白宫也拒绝对此发表评论。这一切都令连日来持续对中东战火扩大深感忧心的国际舆论在不安中，不得不谨慎面对。</p><p><strong>你来我往的报复性打击导致危机不断升级？</strong></p><p>国际社会之所以如此敏感是因为4月13日，伊朗有史以来首次自本土向以色列发动空袭，数百架无人机和导弹飞向以色列，声称是要对伊朗驻叙利亚大马士革使馆4月1日遭遇袭击，并造成包括伊朗革命卫队高阶将领在内的13人丧生事件的报复性打击。伊朗认定大马士革使馆遭遇的袭击是以色列所为，但以色列既未公开承认，也没有否认。但自以色列军队去年十月起对巴勒斯坦激进伊斯兰武装哈马斯10月7日突袭以色列，发起大规模反攻行动以来，伊朗一直被认为在幕后支持包括黎巴嫩真主党在内的中东地区激进伊斯兰武装，侧翼袭击以色列，支持哈马斯，以色列对伊朗目标实施打击的可能性因此不能排除。</p><p>但伊朗4月13日对以色列的空袭行动虽然并未在以色列境内造成重大伤亡或物质破坏，以色列在美欧盟友的协助下，成功拦截了绝大部分袭击飞行物。但以色列内塔尼亚胡政府誓言要对伊朗的报复性反击也做出报复性反击。巴以冲突常年冤冤相报的恶性循环明显出现战火扩大的危险。在俄乌战争已经持续两年有余、加沙走廊的以哈战争持续半年之后始终难以达成一项新的人道停火协议、朝鲜当局常规导弹以及核武器技术不断提升、台海两岸持续紧张、中国与菲律宾在南海也一再紧张对峙的背景下，石油蕴藏丰富的中东地区战事扩大不仅对已经复杂的国际局势增添新的风险，也对新冠疫情后艰难起步又因乌克兰战争而受到干扰的世界经济增添新的不确定因素。</p><p><strong>国际社会同声呼吁克制</strong></p><p>19日伊朗境内的爆炸事件真正原因为何尚不明了，国际社会纷纷发出避免升级的呼吁。正在意大利举行外长会议的七国集团当日呼吁有关各方努力阻止中东战事升级，并明确反对以色列在巴勒斯坦拉法地区发动大规模军事行动。欧盟委员会主席冯德莱恩表示，绝对有必要让中东地区稳定，让各方避免采取任何新的行动。联合国人权事务高级专员署发言人敦促各方采取措施，为当地局势降温，保证当地已经极度困难的形势不再继续恶化。中国外交部发言人林剑一方面表示，中方“反对任何导致局势进一步紧张升级的行为”，另一方面表示，中方会“为缓和地区紧张局势发挥建设性作用”。俄罗斯外长拉夫罗夫则通过俄罗斯媒体向以色列传话，称伊朗不希望两国冲突升级。</p><p>所有这些呼吁是否能降低中东地区紧张情势出现扩大，实在难以预料。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E7%91%9E%E8%BF%AA/" title="瑞迪">瑞迪</a></div></div></div></div>
+<div>19/04/2024 - 18:55</div><img src="https://s.rfi.fr/media/display/07351c08-fe65-11ee-9c32-005056bf30b7/w:1280/p:16x9/2024-04-19T092252Z_1078934132_RC2L97AGGKWG_RTRMADP_3_AUTOS-SPAIN-CHERY.JPG"><p><strong>中国汽车制造商奇瑞（Chery）周五 (4月19号) 正式宣布进驻西班牙，计划到 2024 年底将主要生产电动汽车。法新社报道称，这再次表明了中国政府在欧洲市场的雄心壮志。据专家称，在欧洲本土设厂将使中国集团能够规避布鲁塞尔可能对汽车进口征收的关税，并更有效地融入欧洲大陆市场。        </strong></p><div><p>报道称，奇瑞汽车以生产低成本汽车著称，是继今年 2 月宣布在匈牙利建设首个欧洲工厂的汽车业巨头比亚迪之后，第二个宣布在欧洲建立工厂的中国品牌。不过，比亚迪工厂还要三年才能投产。</p><p>奇瑞工厂于本周二已经宣布，原则上将成为与西班牙EBRO-EV 汽车公司的合资企业的一部分，该公司是一家专门生产电动皮卡的集团，其前身是一个于 1987 年消失的卡车和面包车品牌。</p><p> 该合资企业由 Ebro-EV Motors 持有多数股权，将设在 2021 年关闭的巴塞罗那前日产工厂。双方在周五的新闻发布会上表示，合资公司将创造 "1250 个就业岗位"，其中 "150 个将在未来几个月内创造"。</p><p>日产在巴塞罗那的工厂有 3000 名员工，2021 年部分出售给摩托车制造商 Silence 和 Ebro-EV Motors。但马德里与西班牙集团一起，正在寻找一个工业合作伙伴来重新启动该工厂。</p><p><strong>规避关税 占据市场</strong></p><p>法新社称，奇瑞的决定证实了西班牙在汽车行业的领先地位。根据欧洲汽车制造商协会的数据，去年西班牙组装了 187万辆汽车，是欧洲第二大汽车生产国，仅次于德国（396万辆）。</p><p>这次中国与西班牙汽车领域的合作正值北京和布鲁塞尔之间商业关系紧张的背景下，今年 9 月，布鲁塞尔对中国政府向电动汽车行业提供的公共补贴展开了调查，并指责这些补贴扭曲了竞争。</p><p>欧盟委员会表示，这些补贴被用来显示 "人为的低价"，欧盟委员会可能会对中国汽车征收惩罚性关税，从而有可能引发与中国政府的贸易战。</p><p>据专家称，在欧洲本土设厂将使中国集团能够规避布鲁塞尔可能对汽车进口征收的关税，并更有效地融入欧洲大陆市场。</p><p> 近年来，中国电动汽车市场异常活跃，涌现出了比亚迪，极氪、深蓝和长城等数十个本土品牌，它们正在与特斯拉和其他外国制造商展开竞争。</p><p>   其中一些品牌正试图加强其在欧洲的影响力，有些已经在欧洲设立了销售网点和研发中心。它们正在抱怨所面临的障碍，声称这些障碍是在欧洲现有汽车制造商的授意下设置的。</p><p><strong>"再工业化进程的象征"</strong></p><p> 根据周五在西班牙首相佩德罗-桑切斯和奇瑞副董事长张贵兵见证下正式签署的协议条款，中国集团将在未来几个月内利用现有基础设施，开始组装基于其欧姆达 5 车型的内燃和电动汽车。</p><p>从 2024 年第四季度起，还将生产以 Ebro 品牌销售的电动 SUV。奇瑞和EBRO在新闻稿中表示，他们将在2027年实现 "5万辆 "的总产量，并在2029年实现 "15万辆 "的总产量。</p><p>奇瑞汽车股份有限公司副总经理兼国际公司总经理张贵兵当天表示，“我们将为当地人创造数千个就业岗位，并逐步构建整车及其零部件产业园。在具备一定规模之后，进一步出口到欧盟和其他国家。我们希望这个Ebro能够成为奇瑞埃布罗合作后主要生产和出口基地。”</p><p> 佩德罗-桑切斯在讲话中对这一 "将创造财富 "和 "就业机会 "的项目表示满意，认为奇瑞和埃布罗的宣布是 "整个西班牙 "正在进行的 "再工业化进程的象征"。</p><p> 奇瑞成立于1997年，是一家国有企业。该品牌声称到 2023 年将售出188万辆汽车，15年前在中国非常受欢迎，尤其是针对当地市场推出的小型汽油城市汽车。</p><p>奇瑞还不是中国最受欢迎的电动汽车制造商之一，但它已开始向这一细分市场和高端电动汽车领域进军。它是世界领先的中国汽车出口企业（到2023年出口了937,000辆）。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX3V.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240419-%25E6%25B3%2595%25E6%2596%25B0%25E7%25A4%25BE-%25E5%25A5%2587%25E7%2591%259E%25E8%2590%25BD%25E6%2588%25B7%25E8%25A5%25BF%25E7%258F%25AD%25E7%2589%2599-%25E4%25B8%25AD%25E5%259B%25BD%25E5%258A%25A0%25E5%25BC%25BA%25E5%259C%25A8%25E6%25AC%25A7%25E6%25B4%25B2%25E7%259A%2584%25E6%25B1%25BD%25E8%25BD%25A6%25E5%25B8%2582%25E5%259C%25BA%25E6%2594%25BB%25E5%258A%25BF&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%B3%95%E6%96%B0%E7%A4%BE%EF%BC%9A%E5%A5%87%E7%91%9E%E8%90%BD%E6%88%B7%E8%A5%BF%E7%8F%AD%E7%89%99%20%E4%B8%AD%E5%9B%BD%E5%8A%A0%E5%BC%BA%E5%9C%A8%E6%AC%A7%E6%B4%B2%E6%B1%BD%E8%BD%A6%E5%B8%82%E5%9C%BA%E6%94%BB%E5%8A%BF%20-%20https%3A%2F%2Frfi.my%2FAX3V.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%B3%95%E6%96%B0%E7%A4%BE%EF%BC%9A%E5%A5%87%E7%91%9E%E8%90%BD%E6%88%B7%E8%A5%BF%E7%8F%AD%E7%89%99%20%E4%B8%AD%E5%9B%BD%E5%8A%A0%E5%BC%BA%E5%9C%A8%E6%AC%A7%E6%B4%B2%E6%B1%BD%E8%BD%A6%E5%B8%82%E5%9C%BA%E6%94%BB%E5%8A%BF%20-%20https%3A%2F%2Frfi.my%2FAX3V.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX3V.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%B3%95%E6%96%B0%E7%A4%BE%EF%BC%9A%E5%A5%87%E7%91%9E%E8%90%BD%E6%88%B7%E8%A5%BF%E7%8F%AD%E7%89%99%20%E4%B8%AD%E5%9B%BD%E5%8A%A0%E5%BC%BA%E5%9C%A8%E6%AC%A7%E6%B4%B2%E6%B1%BD%E8%BD%A6%E5%B8%82%E5%9C%BA%E6%94%BB%E5%8A%BF&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
