--- a/articles/rfi/999959.md
+++ b/articles/rfi/999959.md
@@ -1,5 +1,5 @@
-<!--1713552301000-->
-[美众院即将投票对乌援助法案 五角大楼：有些军援几天内就能运抵乌克兰](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E7%BE%8E%E4%BC%97%E9%99%A2%E5%8D%B3%E5%B0%86%E6%8A%95%E7%A5%A8%E5%AF%B9%E4%B9%8C%E6%8F%B4%E5%8A%A9%E6%B3%95%E6%A1%88-%E4%BA%94%E8%A7%92%E5%A4%A7%E6%A5%BC-%E6%9C%89%E4%BA%9B%E5%86%9B%E6%8F%B4%E5%87%A0%E5%A4%A9%E5%86%85%E5%B0%B1%E8%83%BD%E8%BF%90%E6%8A%B5%E4%B9%8C%E5%85%8B%E5%85%B0)
+<!--1713554102000-->
+[【视频】巴黎新桥：塞纳河上最古老的桥梁](https://www.rfi.fr/cn/%E9%AD%85%E5%8A%9B%E6%B3%95%E5%85%B0%E8%A5%BF/20240419-%E8%A7%86%E9%A2%91-%E5%B7%B4%E9%BB%8E%E6%96%B0%E6%A1%A5-%E5%A1%9E%E7%BA%B3%E6%B2%B3%E4%B8%8A%E6%9C%80%E5%8F%A4%E8%80%81%E7%9A%84%E6%A1%A5%E6%A2%81)
 ------
 
-<div>19/04/2024 - 20:25</div><img src="https://s.rfi.fr/media/display/48c829c8-fe77-11ee-9ad8-005056a90284/w:1280/p:16x9/AP24109824140967.jpg"><p><strong>据两位美国官员透露，五角大楼正准备迅速批准一项对乌克兰的武器援助计划，其中包括急需的火炮和防空系统，此刻正值美国国会正在排队投票以通过对乌的额外军援拨款。        </strong></p><div><p>上述两位美国官员向政客新闻网表示，拜登政府尚未最终决定这批资金的规模和内容，他们因涉及敏感的内部讨论而被允许匿名。但其中一位官员说，五角大楼官员正在努力汇总一揽子美国装备，一旦立法通过并经总统签署，就能迅速通过官僚程序。该官员说：“他们将很快向（奥斯汀）防长提出建议，随后很快就会提交给总统”。</p><p>两位官员说，这笔资金将包括用于补充乌克兰武器库的火炮和防空系统，这将是美国自去年12月因国会对总统追加援助的要求停滞不前而耗尽资金以来的第二笔资金。白宫上个月批准了一项总额为3亿美元的对乌紧急援助计划，使用的是之前合同节省下来的成本。</p><p>第一位官员说，许多美国武器已经存放在欧洲各地的仓库中，可以立即运往乌克兰。有些物资几天内就能运抵乌克兰，有些则可能需要数周时间。</p><p>美国国防部发言人莱德（Patrick Ryder）少将拒绝透露即将到来的一揽子计划的具体内容，但在周四告诉记者，美国拥有“非常强大的物流网络，使我们能够非常迅速地运送物资”——可能在几天之内。莱德说，“我们当然理解并重视这种紧迫性，并已做好迅速行动的准备”。</p><p>美国众议院即将于周六就四项法案进行投票，这些法案将拨款950亿美元用于援助乌克兰、以色列和印太地区的合作伙伴。一旦获得通过，参议院还必须在拜登签署之前批准该援助方案。在用于乌克兰的近610亿美元中，约480亿美元将拨给五角大楼，用于武装基辅、补充武器和支付在欧洲的军事行动。该法案为美军提供了232亿美元，用于补充提供给乌克兰的武器装备库存。</p><p>另有138亿美元将用于“乌克兰安全援助计划”，供五角大楼为基辅购买新武器。还有113亿美元将用于加强在欧洲的美军行动。该立法重新授权五角大楼将价值78亿美元的现有武器从库存中运往乌克兰，然后由一揽子计划中增加的资金取代。</p><p>美国国防部负责国际安全事务的助理防长沃兰德（Celeste Wallander）最近告诉议员们，一旦国会最终批准援助，五角大楼将迅速开始运送弹药、炮弹和防空武器。</p><p>沃兰德对美国众议院军事委员会说：“在（美国欧洲司令部）和（美国运输司令部）的支持下，我们将能够在一两周内立即开始向乌克兰提供弹药、炮弹和拦截器”。</p><p>拜登政府多名高官本周强调，如果美国国会不通过额外拨款，乌克兰将很快陷入困境。美国中情局局长比尔·伯恩斯（Bill Burns）说，如果没有美国的新武器援助，乌克兰可能在今年年底前被击败。</p><p>美国国防部长奥斯汀（Lloyd Austin）则告诉议员们，在乌军苦于弹药短缺之际，俄军正在取得进展。奥斯汀指出：“我们已经看到战场上的局势开始向对俄罗斯有利的方向转变。我们看到他们正在逐步取得进展。我们看到乌克兰人在坚守阵地方面受到了挑战”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX4K.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E7%25BE%258E%25E4%25BC%2597%25E9%2599%25A2%25E5%258D%25B3%25E5%25B0%2586%25E6%258A%2595%25E7%25A5%25A8%25E5%25AF%25B9%25E4%25B9%258C%25E6%258F%25B4%25E5%258A%25A9%25E6%25B3%2595%25E6%25A1%2588-%25E4%25BA%2594%25E8%25A7%2592%25E5%25A4%25A7%25E6%25A5%25BC-%25E6%259C%2589%25E4%25BA%259B%25E5%2586%259B%25E6%258F%25B4%25E5%2587%25A0%25E5%25A4%25A9%25E5%2586%2585%25E5%25B0%25B1%25E8%2583%25BD%25E8%25BF%2590%25E6%258A%25B5%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E4%BC%97%E9%99%A2%E5%8D%B3%E5%B0%86%E6%8A%95%E7%A5%A8%E5%AF%B9%E4%B9%8C%E6%8F%B4%E5%8A%A9%E6%B3%95%E6%A1%88%20%E4%BA%94%E8%A7%92%E5%A4%A7%E6%A5%BC%EF%BC%9A%E6%9C%89%E4%BA%9B%E5%86%9B%E6%8F%B4%E5%87%A0%E5%A4%A9%E5%86%85%E5%B0%B1%E8%83%BD%E8%BF%90%E6%8A%B5%E4%B9%8C%E5%85%8B%E5%85%B0%20-%20https%3A%2F%2Frfi.my%2FAX4K.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E4%BC%97%E9%99%A2%E5%8D%B3%E5%B0%86%E6%8A%95%E7%A5%A8%E5%AF%B9%E4%B9%8C%E6%8F%B4%E5%8A%A9%E6%B3%95%E6%A1%88%20%E4%BA%94%E8%A7%92%E5%A4%A7%E6%A5%BC%EF%BC%9A%E6%9C%89%E4%BA%9B%E5%86%9B%E6%8F%B4%E5%87%A0%E5%A4%A9%E5%86%85%E5%B0%B1%E8%83%BD%E8%BF%90%E6%8A%B5%E4%B9%8C%E5%85%8B%E5%85%B0%20-%20https%3A%2F%2Frfi.my%2FAX4K.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX4K.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E4%BC%97%E9%99%A2%E5%8D%B3%E5%B0%86%E6%8A%95%E7%A5%A8%E5%AF%B9%E4%B9%8C%E6%8F%B4%E5%8A%A9%E6%B3%95%E6%A1%88%20%E4%BA%94%E8%A7%92%E5%A4%A7%E6%A5%BC%EF%BC%9A%E6%9C%89%E4%BA%9B%E5%86%9B%E6%8F%B4%E5%87%A0%E5%A4%A9%E5%86%85%E5%B0%B1%E8%83%BD%E8%BF%90%E6%8A%B5%E4%B9%8C%E5%85%8B%E5%85%B0&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>19/04/2024 - 18:18</div><img src="https://s.rfi.fr/media/display/17ae80ac-15d4-11ea-9423-005056bf7c53/w:1280/p:16x9/Embarras%20Pont%20Neuf_0.jpg"><p><strong>新桥是目前巴黎现存最古老的桥梁。 它也是第一座跨越整个塞纳河河面的桥梁。        </strong></p><div><p>在新桥建成之前，巴黎的桥梁主要是用木头建造的，因此极易失火。</p><p>新桥保留了建桥时巴黎人自发给它起的名字。 修建这座桥的决定是在1577 年做出的，当时的国王亨利三世任命了一个委员会，来确保桥梁的修建得当并对工程施工进行监督。</p><p>直到 18 世纪，新桥一直是巴黎这座城市的中心，也是许多街头艺人和商贩的最爱。桥上总是热闹非凡。</p><p>新桥两边的桥栏上有 384 个怪面装饰，是古代神话故事中森林或乡间神灵的头像，每个头像重达100多公斤。</p><p>随着时间的推移，原来的怪面装饰的某些部分已经损坏，雕像的细节因风化而模糊，因此它们需要全部更换进行修复。</p><p>历时13年的新桥修复工程在2007年揭幕，恰逢新桥建成 400 周年，以示纪念。</p><p>所以，今天看到的桥上雕像都是复制品。 不过，如有兴趣，可前往巴黎市立历史博物馆——卡纳瓦雷博物馆，在那里欣赏到这些雕像的原件。</p><p>新桥的设计和支撑桥身的拱门让人联想到罗马建筑。 桥上人行道的设计灵感也来自罗马道路。</p><p>新桥也是巴黎最早铺设人行道的桥梁之一，当时铺设人行道是为了保护行人避雨和马车溅起的泥浆之用。</p><p>这座桥自1889年起就被列为历史古迹。1991年，它和巴黎塞纳河两岸河沿一起被联合国教科文组织列入世界文化遗产名录。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX35.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E9%25AD%2585%25E5%258A%259B%25E6%25B3%2595%25E5%2585%25B0%25E8%25A5%25BF%2F20240419-%25E8%25A7%2586%25E9%25A2%2591-%25E5%25B7%25B4%25E9%25BB%258E%25E6%2596%25B0%25E6%25A1%25A5-%25E5%25A1%259E%25E7%25BA%25B3%25E6%25B2%25B3%25E4%25B8%258A%25E6%259C%2580%25E5%258F%25A4%25E8%2580%2581%25E7%259A%2584%25E6%25A1%25A5%25E6%25A2%2581&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E3%80%90%E8%A7%86%E9%A2%91%E3%80%91%E5%B7%B4%E9%BB%8E%E6%96%B0%E6%A1%A5%EF%BC%9A%E5%A1%9E%E7%BA%B3%E6%B2%B3%E4%B8%8A%E6%9C%80%E5%8F%A4%E8%80%81%E7%9A%84%E6%A1%A5%E6%A2%81%20-%20https%3A%2F%2Frfi.my%2FAX35.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E3%80%90%E8%A7%86%E9%A2%91%E3%80%91%E5%B7%B4%E9%BB%8E%E6%96%B0%E6%A1%A5%EF%BC%9A%E5%A1%9E%E7%BA%B3%E6%B2%B3%E4%B8%8A%E6%9C%80%E5%8F%A4%E8%80%81%E7%9A%84%E6%A1%A5%E6%A2%81%20-%20https%3A%2F%2Frfi.my%2FAX35.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX35.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E3%80%90%E8%A7%86%E9%A2%91%E3%80%91%E5%B7%B4%E9%BB%8E%E6%96%B0%E6%A1%A5%EF%BC%9A%E5%A1%9E%E7%BA%B3%E6%B2%B3%E4%B8%8A%E6%9C%80%E5%8F%A4%E8%80%81%E7%9A%84%E6%A1%A5%E6%A2%81&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
