--- a/articles/rfi/999962.md
+++ b/articles/rfi/999962.md
@@ -1,5 +1,5 @@
-<!--1713545104000-->
-[德国逮捕2俄间谍计划攻击美军基地](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240418-%E5%BE%B7%E5%9B%BD%E9%80%AE%E6%8D%952%E4%BF%84%E9%97%B4%E8%B0%8D%E8%AE%A1%E5%88%92%E6%94%BB%E5%87%BB%E7%BE%8E%E5%86%9B%E5%9F%BA%E5%9C%B0)
+<!--1713552302000-->
+[美国众院调查发现华尔街向黑名单内的中国公司输送了数十亿美元](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E7%BE%8E%E5%9B%BD%E4%BC%97%E9%99%A2%E8%B0%83%E6%9F%A5%E5%8F%91%E7%8E%B0%E5%8D%8E%E5%B0%94%E8%A1%97%E5%90%91%E9%BB%91%E5%90%8D%E5%8D%95%E5%86%85%E7%9A%84%E4%B8%AD%E5%9B%BD%E5%85%AC%E5%8F%B8%E8%BE%93%E9%80%81%E4%BA%86%E6%95%B0%E5%8D%81%E4%BA%BF%E7%BE%8E%E5%85%83)
 ------
 
-<div>18/04/2024 - 22:44</div><img src="https://s.rfi.fr/media/display/7c78ebe4-fdc4-11ee-a0fd-005056bfb2b6/w:1280/p:16x9/66210160d77c5330d1724475.png"><p><strong></strong></p><div><p>两名嫌犯是在德国东南部的拜罗伊特(Bayreuth)被拘捕的。德国检方18ri 表示，2名德俄双重国籍人士因涉嫌策划在德国进行蓄意破坏攻击而被捕，两人锁定目标包括美国军事设施，目的为了削弱德国对乌克兰的军事支持。</p><p>检察官说，这两名男子的名字仅证实为狄特尔S.（Dieter S.）和亚历山大 J.（Alexander J.）。正在布鲁塞尔开会的德国总理朔尔茨表示，“我们永远不会接受间谍活动在德国发生”。 俄罗斯方面则在其驻德国大使馆在 X 上发布的消息，谴责这种“荒唐可笑”以及缺乏“证据”的指控。</p><p>据《明镜周刊》报道，嫌疑人以及德国联邦国防军车队尤其关注巴伐利亚美军格拉芬沃尔(Grafenwöhr)基地，乌克兰士兵在那里接受使用美国艾布拉姆斯主战坦克的训练。</p><p>据《明镜周刊》报道，主嫌犯迪特尔·S. (Dieter S.) 现年 39 岁，自 2023 年 10 月以来一直在与一名与俄罗斯情报部门有联系的人员交换信息，以期在德国领土上实施可能的破坏活动。 据检方称，他的同伙亚历山大·J.(Alexander J.)现年 37 岁，从 2024 年 3 月底开始和迪特尔有密切的联系。</p><p>检察官称，“这些行动的目的尤其是破坏德国对乌克兰对抗俄罗斯侵略战争的军事支持”。 据报道，迪特·S. 声称自己准备好“对德国的军事基础设施和工业场所进行爆炸袭击和纵火袭击”。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWt3.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240418-%25E5%25BE%25B7%25E5%259B%25BD%25E9%2580%25AE%25E6%258D%25952%25E4%25BF%2584%25E9%2597%25B4%25E8%25B0%258D%25E8%25AE%25A1%25E5%2588%2592%25E6%2594%25BB%25E5%2587%25BB%25E7%25BE%258E%25E5%2586%259B%25E5%259F%25BA%25E5%259C%25B0&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%BE%B7%E5%9B%BD%E9%80%AE%E6%8D%952%E4%BF%84%E9%97%B4%E8%B0%8D%E8%AE%A1%E5%88%92%E6%94%BB%E5%87%BB%E7%BE%8E%E5%86%9B%E5%9F%BA%E5%9C%B0%20-%20https%3A%2F%2Frfi.my%2FAWt3.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%BE%B7%E5%9B%BD%E9%80%AE%E6%8D%952%E4%BF%84%E9%97%B4%E8%B0%8D%E8%AE%A1%E5%88%92%E6%94%BB%E5%87%BB%E7%BE%8E%E5%86%9B%E5%9F%BA%E5%9C%B0%20-%20https%3A%2F%2Frfi.my%2FAWt3.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWt3.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%BE%B7%E5%9B%BD%E9%80%AE%E6%8D%952%E4%BF%84%E9%97%B4%E8%B0%8D%E8%AE%A1%E5%88%92%E6%94%BB%E5%87%BB%E7%BE%8E%E5%86%9B%E5%9F%BA%E5%9C%B0&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>19/04/2024 - 14:23</div><img src="https://s.rfi.fr/media/display/ac5979d4-da04-11ee-ba46-005056a90284/w:1280/p:16x9/AP24058715129409.jpg"><p><strong>美国国会一项调查发现，华尔街动用了数十亿美元的美国退休储蓄和其他投资来购买“指数基金”股票，其中50%以上是被华盛顿列入黑名单的中国公司。        </strong></p><div><p>据华尔街日报4月18日报道，由两党组成的美国众议院中共问题特别委员会被受权为美国制定对抗中国的战略，其一项调查重点是全球最大的资产管理公司贝莱德（BlackRock）和股票指数编制公司摩根士丹利资本国际公司（MSCI）。</p><p>该调查是对美国金融机构如何为投资中国公司提供便利的一次广泛审查，美国政府指责这些公司加强了中国的军事力量并侵犯了人权。</p><p>众议院中共问题特别委员会没有立法权，但在报告中敦促美国立法者在中美竞争加剧之际限制此类资本流动。该委员会在周四发布的报告中表示：“可能令许多美国人感到惊讶的是，这种活动并不违法。”</p><p>上述资本国际公司表示，它们没有违反任何法律，并坚称它们几乎没有自由裁量权将中国实体独立排除在指数基金之外。</p><p>华日的这个报道说，多年来，美国的金融家一直是中国在华盛顿的最亲密盟友。但随着中国长达数十年的繁荣逐渐结束，美国投资者正从这个世界第二大经济体撤退。来自华盛顿的政治压力不断加大，即使中国的经济状况有所改善，企业很可能难以扭转颓势。美国一些大型养老基金已经少了在中国的投资，或停止了在中国的新投资。</p><p>美国国会众议院中共问题特别委员会在报告中总结称，通过投资“指数”基金，美国金融机构去年向大约63家被美国盯上的中国公司输送了65亿美元，其中包括“航空航天”和“国防企业集团”“中国航空工业集团”、“基因组学公司华大基金（BGI）和互联网安全公司奇虎360。</p><p>这个委员会的报告称，摩根士丹利资本国际公司（MSCI）通过将这些中国公司纳入指数，为 37 亿美元的投资提供了便利。报告指出，贝莱德通过跟踪这些指数的基金投资了至少19亿美元。</p><p>国会委员会讨论的问题涉及贝莱德（BlackRock）等资产管理公司，这些公司利用摩根士丹利资本国际公司（MSCI）编制的指数为养老金、大学捐赠基金和其他长期投资者建立投资组合。虽然贝莱德等公司只是通过指数基金购买了被列入黑名单的中国公司的股票，MSCI 也没有向它们提供资金，但国会委员会的调查认为，这些公司帮助将美国人的储蓄引入相关的中国公司。</p><p>与这些公司的规模相比，金额相对较小。但这一发现涉及到一场政治辩论的核心，这场辩论在美国总统大选前夕可能会愈演愈烈：包括美国对中国的强硬立场，以及被视为促进了中国经济增长的美国公司。</p><p>华日的这个报道说，唐纳德-特朗普（Donald Trump）正在与拜登总统（President Biden）争夺重返白宫的机会，如果特朗普赢得总统竞选，他将提出大幅限制中国进入美国市场的想法。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWzc.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E7%25BE%258E%25E5%259B%25BD%25E4%25BC%2597%25E9%2599%25A2%25E8%25B0%2583%25E6%259F%25A5%25E5%258F%2591%25E7%258E%25B0%25E5%258D%258E%25E5%25B0%2594%25E8%25A1%2597%25E5%2590%2591%25E9%25BB%2591%25E5%2590%258D%25E5%258D%2595%25E5%2586%2585%25E7%259A%2584%25E4%25B8%25AD%25E5%259B%25BD%25E5%2585%25AC%25E5%258F%25B8%25E8%25BE%2593%25E9%2580%2581%25E4%25BA%2586%25E6%2595%25B0%25E5%258D%2581%25E4%25BA%25BF%25E7%25BE%258E%25E5%2585%2583&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%9B%BD%E4%BC%97%E9%99%A2%E8%B0%83%E6%9F%A5%E5%8F%91%E7%8E%B0%E5%8D%8E%E5%B0%94%E8%A1%97%E5%90%91%E9%BB%91%E5%90%8D%E5%8D%95%E5%86%85%E7%9A%84%E4%B8%AD%E5%9B%BD%E5%85%AC%E5%8F%B8%E8%BE%93%E9%80%81%E4%BA%86%E6%95%B0%E5%8D%81%E4%BA%BF%E7%BE%8E%E5%85%83%20-%20https%3A%2F%2Frfi.my%2FAWzc.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%9B%BD%E4%BC%97%E9%99%A2%E8%B0%83%E6%9F%A5%E5%8F%91%E7%8E%B0%E5%8D%8E%E5%B0%94%E8%A1%97%E5%90%91%E9%BB%91%E5%90%8D%E5%8D%95%E5%86%85%E7%9A%84%E4%B8%AD%E5%9B%BD%E5%85%AC%E5%8F%B8%E8%BE%93%E9%80%81%E4%BA%86%E6%95%B0%E5%8D%81%E4%BA%BF%E7%BE%8E%E5%85%83%20-%20https%3A%2F%2Frfi.my%2FAWzc.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWzc.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%9B%BD%E4%BC%97%E9%99%A2%E8%B0%83%E6%9F%A5%E5%8F%91%E7%8E%B0%E5%8D%8E%E5%B0%94%E8%A1%97%E5%90%91%E9%BB%91%E5%90%8D%E5%8D%95%E5%86%85%E7%9A%84%E4%B8%AD%E5%9B%BD%E5%85%AC%E5%8F%B8%E8%BE%93%E9%80%81%E4%BA%86%E6%95%B0%E5%8D%81%E4%BA%BF%E7%BE%8E%E5%85%83&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
