--- a/articles/rfi/999963.md
+++ b/articles/rfi/999963.md
@@ -1,5 +1,5 @@
-<!--1713545102000-->
-[在美国，“中国钢铁危害成了竞选的一个招式” - 法国世界报](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E4%B8%96%E7%95%8C%E6%8A%A5/20240418-%E5%9C%A8%E7%BE%8E%E5%9B%BD%EF%BC%8C-%E4%B8%AD%E5%9B%BD%E9%92%A2%E9%93%81%E5%8D%B1%E5%AE%B3%E5%B7%B2%E6%88%90%E4%B8%BA%E7%AB%9E%E9%80%89%E7%9A%84%E4%B8%80%E4%B8%AA%E6%8B%9B%E5%BC%8F)
+<!--1713552302000-->
+[伊朗境内爆炸原因疑点重重，国际社会同声呼吁克制 - 要闻解说](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E8%A7%A3%E8%AF%B4/20240419-%E4%BC%8A%E6%9C%97%E5%A2%83%E5%86%85%E7%88%86%E7%82%B8%E5%8E%9F%E5%9B%A0%E7%96%91%E7%82%B9%E9%87%8D%E9%87%8D%EF%BC%8C%E5%9B%BD%E9%99%85%E7%A4%BE%E4%BC%9A%E5%90%8C%E5%A3%B0%E5%91%BC%E5%90%81%E5%85%8B%E5%88%B6)
 ------
 
-<div>19/04/2024 - 00:47</div><img src="https://s.rfi.fr/media/display/bddd2032-0bde-11ea-9862-005056bff430/w:1280/p:16x9/fa_guo_shi_jie_bao_wb161923-rfi-cn-20150123_cartouche.jpg"><p><strong>4月17日星期三，美国总统乔·拜登对中国钢铁倾销发起了攻击。法国《世界报》经济记者让·米歇尔·贝扎(Jean-Michel Bezat)在其专栏中写道，在美国，“自2016年以来，中国钢铁的危害已成为竞选的一个招式”。但是，和华盛顿向北京发起的芯片战争相比，“钢铁战争”根本算不了什么。                    </strong></p><div><p>周四法国世界报发表的一篇文章表示，在美国，“自2016年以来，中国钢铁的危害已成为竞选的一个招式”。</p><p>4月17日星期三，美国总统乔·拜登对中国钢铁倾销发起了攻击。顺便，拜登也对被唐纳德·特朗普的演讲给打动了的工人阶级发起了新的魅力攻势。法国《世界报》经济记者让·米歇尔·贝扎(Jean-Michel Bezat)在其专栏中写道，在美国，“自2016年以来，中国钢铁的危害已成为竞选的一个招式”。但是，和华盛顿向北京发起的芯片战争相比，“钢铁战争”根本算不了什么。</p><p>相关的文章写道，在20世纪70年代之前，宾夕法尼亚州的匹兹堡，是让美国国家工业变得伟大的一个地方，随后，却遭受了去工业化的蹂躏，可以说是美国“铁锈带”的核心。4月17日星期三，美国总统选择了匹兹堡这个“铁锈带”的核心地点，对中国钢铁倾销发起了攻击，同时，也对受到特朗普在美国总统选举的摇摆州所发表的演讲所迷惑的工人阶级，发起了新的魅力攻势。乔·拜登当天在钢铁工人工会的总部宣布，他希望对从中国进口的钢铁和铝所征收的税率是如今的三倍，目前的税率是7.5%。中国的钢铁产量占世界的近一半，存在巨大的产能过剩，中国钢铁基本产品的价格只有美国钢铁制造商的一半，以钢铁为基础的中国工业制品如汽车、风力涡轮机等充斥着市场。白宫坚称，这一切还对碳排放的减少，非常不利。</p><p>美国总统拜登在X社交网络上宣称：“我希望与中国竞争，而不是冲突。”拜登还向钢铁工人工会重申了他希望工会能够参与到捍卫“美国制造”的行动中去。同时，拜登还反对将美国钢铁公司出售给日本的新日铁公司，拜登表示，“一个多世纪以来”，美国钢铁公司都是一个“标志性公司”，它“必须继续是一个美国公司”。拜登还表示，像特朗普一样，他已经做好了准备，制止美国联邦外国投资委员会目前正在审查的这项售卖行动。</p><p><strong>持续性的、全方位施压</strong></p><p>法国世界报的文章表示，自2016年以来，中国钢铁的危害已成为了美国竞选活动中的一个招式。在拜登的作为总统候选人所发表的有关日本和中国的演讲中，不乏机会主义，甚至是厚颜无耻。诚然，新日铁是日本公司，但日本是美国坚定不移的盟友。至于中国的钢铁威胁，如果我们相信美国人口普查局的数据的话，那么，是不存在中国钢铁威胁的：因为，根据美国人口普查局的数据，美国进口的中国钢铁很少，只占其采购量的3%；美国钢铁协会的数据甚至显示，中国钢铁在美国钢铁采购中只占2.1%！</p><p>但是，华盛顿决定对中国施加永久性的、全方位的压力。与“芯片之战”相比，“钢铁之战”根本不算什么。华盛顿以国家安全的为名，正在尽一切努力、包括对其盟友施加压力，以便让北京没有可能来获得最新一代的电子芯片。</p><p>拜登指责习近平把先进的芯片用于“错误的地方”。习近平则认为，用的地方很对：是为了让中国在2050年成为世界领先的经济、科技和军事强国。</p><p>中国梦是美国的噩梦。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E9%98%BF%E6%9B%BC%E4%BA%AD/" title="阿曼亭">阿曼亭</a></div></div></div></div>
+<div>19/04/2024 - 15:30</div><img src="https://s.rfi.fr/media/display/c0fc8d5c-fe37-11ee-b2ed-005056a97e36/w:1280/p:16x9/Carte-Iran-RFI.png"><p><strong>伊朗中部伊斯法罕一座军事基地附近19日凌晨响起巨大的爆炸声响，连日来全球对中东地区冲突随伊朗大举袭击以色列的报复性行动而扩大的担心进一步提升，各地股市也在消息传出的第一时间纷纷下挫。但在众多呼吁有关各方克制、避免升级的表态中，这起爆炸事件起因为何？是否的确是以色列袭击行动所为，截至本文截稿时止，仍然不甚明朗。                    </strong></p><div><p><strong>伊朗否认有来自境外的袭击</strong></p><p>根据伊朗各方通讯社目前通报的消息，该国中部地区一个军事基地附近19日拂晓时发生三起爆炸，<strong>伊斯法罕</strong>地区都听到了强烈的爆炸声响，但爆炸原因尚不明了。该通讯社消息还指出，伊朗高度敏感的防空系统在多地应声启动，并击落一些无人机。而从他们掌握的消息来看，没有“来自境外的攻击行动”，伊朗核设施也“没有受到任何重大损坏”。国际能源署当日也证实，尚没有伊朗境内核设施遇袭受损的消息。美国《纽约时报》引述一些伊朗负责人报道指出，发生小型无人机袭击行动，这些无人机可能是自伊朗本土出发，伊朗防空系统没有监测到进入伊朗空域的不明飞行物。</p><p>另据法新社发自德黑兰的消息，19日当天，伊朗总统易卜拉欣-莱希在爆炸发生数小时后，在东北部城市<strong>达姆甘</strong>向数百人发表讲话时，虽然简短提到中东地区的紧张情势，但完全没有提及当天的爆炸事件。</p><p><strong>《华盛顿邮报》称以色列事前知会华盛顿</strong></p><p>但与此同时，也有一些美国媒体则各自引述消息，称以色列19日对伊朗实施了报复性打击。美国NBC和CNN两家电视台都引述消息人士以及一名美国负责人报道指出，以色列在行动前曾通报华盛顿，美方对此既没有反对，也没有参与。《华盛顿邮报》引述一名不愿披露身分的以色列负责人报道称，以色列的攻击行动是对4月13日伊朗对以色列发动大规模空袭做出的反击。以色列内塔尼亚胡政府中的极右翼的安全部长伊塔马尔·本-格维尔（Itamar Ben-Gvir）当日在社交媒体X，也就是前推特平台上发帖，似乎默认了伊朗境内的爆炸是以色列所为。但他此番推特发言立即在以色列国内引来众多批评，认为他让以色列蒙羞，也让以色列难以出面否认等等。</p><p>法新社为此联系以色列官方求证，但以色列军方和政府都拒绝对爆炸事件发言。美国白宫也拒绝对此发表评论。这一切都令连日来持续对中东战火扩大深感忧心的国际舆论在不安中，不得不谨慎面对。</p><p><strong>你来我往的报复性打击导致危机不断升级？</strong></p><p>国际社会之所以如此敏感是因为4月13日，伊朗有史以来首次自本土向以色列发动空袭，数百架无人机和导弹飞向以色列，声称是要对伊朗驻叙利亚大马士革使馆4月1日遭遇袭击，并造成包括伊朗革命卫队高阶将领在内的13人丧生事件的报复性打击。伊朗认定大马士革使馆遭遇的袭击是以色列所为，但以色列既未公开承认，也没有否认。但自以色列军队去年十月起对巴勒斯坦激进伊斯兰武装哈马斯10月7日突袭以色列，发起大规模反攻行动以来，伊朗一直被认为在幕后支持包括黎巴嫩真主党在内的中东地区激进伊斯兰武装，侧翼袭击以色列，支持哈马斯，以色列对伊朗目标实施打击的可能性因此不能排除。</p><p>但伊朗4月13日对以色列的空袭行动虽然并未在以色列境内造成重大伤亡或物质破坏，以色列在美欧盟友的协助下，成功拦截了绝大部分袭击飞行物。但以色列内塔尼亚胡政府誓言要对伊朗的报复性反击也做出报复性反击。巴以冲突常年冤冤相报的恶性循环明显出现战火扩大的危险。在俄乌战争已经持续两年有余、加沙走廊的以哈战争持续半年之后始终难以达成一项新的人道停火协议、朝鲜当局常规导弹以及核武器技术不断提升、台海两岸持续紧张、中国与菲律宾在南海也一再紧张对峙的背景下，石油蕴藏丰富的中东地区战事扩大不仅对已经复杂的国际局势增添新的风险，也对新冠疫情后艰难起步又因乌克兰战争而受到干扰的世界经济增添新的不确定因素。</p><p><strong>国际社会同声呼吁克制</strong></p><p>19日伊朗境内的爆炸事件真正原因为何尚不明了，国际社会纷纷发出避免升级的呼吁。正在意大利举行外长会议的七国集团当日呼吁有关各方努力阻止中东战事升级，并明确反对以色列在巴勒斯坦拉法地区发动大规模军事行动。欧盟委员会主席冯德莱恩表示，绝对有必要让中东地区稳定，让各方避免采取任何新的行动。联合国人权事务高级专员署发言人敦促各方采取措施，为当地局势降温，保证当地已经极度困难的形势不再继续恶化。中国外交部发言人林剑一方面表示，中方“反对任何导致局势进一步紧张升级的行为”，另一方面表示，中方会“为缓和地区紧张局势发挥建设性作用”。俄罗斯外长拉夫罗夫则通过俄罗斯媒体向以色列传话，称伊朗不希望两国冲突升级。</p><p>所有这些呼吁是否能降低中东地区紧张情势出现扩大，实在难以预料。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E7%91%9E%E8%BF%AA/" title="瑞迪">瑞迪</a></div></div></div></div>
