--- a/articles/rfi/999965.md
+++ b/articles/rfi/999965.md
@@ -1,5 +1,5 @@
-<!--1713543301000-->
-[伊朗中部传爆炸声  是以色列报复？看美联社如何分析](https://www.rfi.fr/cn/%E4%B8%AD%E4%B8%9C/20240419-%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E4%BC%A0%E7%88%86%E7%82%B8%E5%A3%B0-%E6%98%AF%E4%BB%A5%E8%89%B2%E5%88%97%E6%8A%A5%E5%A4%8D-%E7%9C%8B%E7%BE%8E%E8%81%94%E7%A4%BE%E5%A6%82%E4%BD%95%E5%88%86%E6%9E%90)
+<!--1713552301000-->
+[G7承诺“加强乌克兰的防空力量”](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-g7%E6%89%BF%E8%AF%BA-%E5%8A%A0%E5%BC%BA%E4%B9%8C%E5%85%8B%E5%85%B0%E7%9A%84%E9%98%B2%E7%A9%BA%E5%8A%9B%E9%87%8F)
 ------
 
-<div>19/04/2024 - 15:21</div><img src="https://s.rfi.fr/media/display/d33d9a5e-1266-11ea-b20a-005056a99247/w:1280/p:16x9/2018-07-16t122734z_63342907_rc14637277c0_rtrmadp_3_iran-haj-khamenei.jpg"><p><strong>周五（4月19号）清晨，伊朗在发现无人机后向伊斯法罕附近的一个主要空军基地和一个核设施发射了防空系统，这些无人机被怀疑是以色列袭击的一部分，以报复德黑兰对该国前所未有的无人机和导弹袭击。但没有伊朗官员直接承认以色列发动袭击的可能性，以色列军方也没有回应置评请求。据报周五是伊朗最高领袖阿亚图拉-阿里-哈梅内伊85岁生日。        </strong></p><div><p>美联社海湾和伊朗新闻主任乔恩-甘布雷尔（Jon Gambrell）报道称："伊朗在该国中部地区发射了防空系统，这似乎是以色列对几天前德黑兰发动的袭击的某种回应。现在，我们所知道的还很零散。截至今天上午，伊朗已经停止了航班飞行，防空系统也已经启动，人们听到了伊斯法罕附近的爆炸声。伊斯法罕附近有一个大型空军基地，伊朗在那里拥有1979年伊斯兰革命前购买的F-14 "雄猫 "战斗机。这里还有一个重要的核设施。伊朗并没有说这是一次袭击。他们对此轻描淡写。他们今天在国家电视台上试图拿这件事开玩笑。但在此之前，德黑兰发动了一次袭击，向以色列发射了数百架无人机和导弹，而在此之前，以色列在叙利亚发动了另一次袭击，杀害了伊朗准军事革命卫队的成员。"</p><p>对于伊朗的低调，乔恩-甘布雷尔引述分析人士称，这可能是伊朗试图避嫌，避免局势升级的一次尝试。伊朗对以色列的袭击是史无前例的，而今天的袭击似乎没有造成任何严重破坏。但这确实表明以色列有能力向伊朗发射无人机，而且今天还是伊朗最高领袖阿亚图拉-阿里-哈梅内伊的85岁生日。因此，分析人士称，这可能是对伊朗的一个警告，即以色列仍有能力在未来发动袭击。</p><p>« 纽约时报》援引匿名以色列官员的话称，这次袭击发生在伊朗最高领袖阿亚图拉-阿里-哈梅内伊85岁生日之际。</p><p>上周六晚间，伊朗发射了数百架无人机、弹道导弹和巡航导弹，发动了前所未有的袭击，使中东更接近一场地区性战争。以色列军方发言人表示，发射次数超过 300 次，但其中 99% 被拦截。</p><p>美联社今天报道称，伊朗总统当天访问伊朗城市达姆甘时称，最近针对以色列的导弹和无人机袭击是伊朗“自豪和力量的源泉”。莱西说：“这次行动成为伊斯兰共和国及其武装部队力量的标志。它也显示了我们国家钢铁般的决心。”</p><p>莱西声称这次袭击是必要的，并团结了该国的政治派别。</p><p>法新社包袋，有媒体援引美国高级官员的话称，以色列周五的袭击是为了报复上周末针对以色列的史无前例的无人机和导弹袭击。然而，伊朗塔斯尼姆通讯社援引 "消息灵通人士 "的话说，"没有关于外国袭击的消息"。</p><p>一些国家和国际组织仍然谨慎地作出反应，呼吁保持克制。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX0l.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E4%25B8%259C%2F20240419-%25E4%25BC%258A%25E6%259C%2597%25E4%25B8%25AD%25E9%2583%25A8%25E4%25BC%25A0%25E7%2588%2586%25E7%2582%25B8%25E5%25A3%25B0-%25E6%2598%25AF%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E6%258A%25A5%25E5%25A4%258D-%25E7%259C%258B%25E7%25BE%258E%25E8%2581%2594%25E7%25A4%25BE%25E5%25A6%2582%25E4%25BD%2595%25E5%2588%2586%25E6%259E%2590&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E4%BC%A0%E7%88%86%E7%82%B8%E5%A3%B0%20%20%E6%98%AF%E4%BB%A5%E8%89%B2%E5%88%97%E6%8A%A5%E5%A4%8D%EF%BC%9F%E7%9C%8B%E7%BE%8E%E8%81%94%E7%A4%BE%E5%A6%82%E4%BD%95%E5%88%86%E6%9E%90%20-%20https%3A%2F%2Frfi.my%2FAX0l.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E4%BC%A0%E7%88%86%E7%82%B8%E5%A3%B0%20%20%E6%98%AF%E4%BB%A5%E8%89%B2%E5%88%97%E6%8A%A5%E5%A4%8D%EF%BC%9F%E7%9C%8B%E7%BE%8E%E8%81%94%E7%A4%BE%E5%A6%82%E4%BD%95%E5%88%86%E6%9E%90%20-%20https%3A%2F%2Frfi.my%2FAX0l.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX0l.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E4%BC%A0%E7%88%86%E7%82%B8%E5%A3%B0%20%20%E6%98%AF%E4%BB%A5%E8%89%B2%E5%88%97%E6%8A%A5%E5%A4%8D%EF%BC%9F%E7%9C%8B%E7%BE%8E%E8%81%94%E7%A4%BE%E5%A6%82%E4%BD%95%E5%88%86%E6%9E%90&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>19/04/2024 - 19:04</div><img src="https://s.rfi.fr/media/display/00846dda-fe3f-11ee-958f-005056a97e36/w:1280/p:16x9/G7%20ITALY%20APRIL%20A.jpg"><p><strong>七国集团（G7）外长周五表示，在俄罗斯袭击摧毁电力基础设施并造成数百人死亡之后，七国集团决心加强乌克兰的防空能力。        </strong></p><div><p>G7外长们表示，七国集团 "将加强乌克兰的防空能力，以拯救生命和保护重要基础设施"，并补充说他们将增加对基辅的防务和安全援助。</p><p>周五在意大利南部卡普里岛举行的为期三天的部长会议结束时发表了七国集团声明，会议期间讨论的主要问题包括乌克兰问题以及以色列和伊朗之间的军事对抗。据路透社报道，G7外长们补充说，"我们决心继续向乌克兰及其人民提供军事、财政、政治、人道主义、经济和发展支持"。</p><p>G7外长会议结束时，美国国务卿安东尼-布林肯表示，乌克兰急需额外资源，并警告北京，如果中国支持俄罗斯国防工业，将危及中国与欧洲的关系。</p><p>近几个月来，对乌克兰的军事援助已经放缓，欧洲合作伙伴明显缺乏武器弹药，而美国的重要资金在国会被共和党人卡住。</p><p>另一个关键问题是如何利用俄罗斯在西方持有的约3,000 亿美元主权资产的衍生利益来帮助乌克兰，而此时欧盟成员国正对此举的合法性举棋不定。</p><p>七国集团（G7）外长表示，他们将继续探讨如何利用被冻结的俄罗斯资产来帮助乌克兰。</p><p>北约秘书长延斯-斯托尔滕贝格（Jens Stoltenberg）周四在意大利卡普里小岛举行的七国集团外长会议间隙强调，乌克兰"迫切需要增加防空能力"。他向G7外长们说，由于俄罗斯对乌克兰城镇和基础设施的空袭，当地局势"困难重重"，因此"北约成员国保持并加强其支持至关重要"。</p><p>这位北约秘书长表示，他最近注意到北约成员国宣布提供军事援助的"令人鼓舞"的迹象，包括美国众议院预计周六投票通过向基辅提供 610 亿欧元援助的一揽子计划。</p><p>斯托尔滕贝格先生在乌克兰外交事务负责人库列巴（Dmytro Kouleba）应邀参加的乌克兰问题会议前补充道说："我们本应更早地给予他们更多"。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX3Y.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-g7%25E6%2589%25BF%25E8%25AF%25BA-%25E5%258A%25A0%25E5%25BC%25BA%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E7%259A%2584%25E9%2598%25B2%25E7%25A9%25BA%25E5%258A%259B%25E9%2587%258F&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=G7%E6%89%BF%E8%AF%BA%E2%80%9C%E5%8A%A0%E5%BC%BA%E4%B9%8C%E5%85%8B%E5%85%B0%E7%9A%84%E9%98%B2%E7%A9%BA%E5%8A%9B%E9%87%8F%E2%80%9D%20-%20https%3A%2F%2Frfi.my%2FAX3Y.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=G7%E6%89%BF%E8%AF%BA%E2%80%9C%E5%8A%A0%E5%BC%BA%E4%B9%8C%E5%85%8B%E5%85%B0%E7%9A%84%E9%98%B2%E7%A9%BA%E5%8A%9B%E9%87%8F%E2%80%9D%20-%20https%3A%2F%2Frfi.my%2FAX3Y.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX3Y.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=G7%E6%89%BF%E8%AF%BA%E2%80%9C%E5%8A%A0%E5%BC%BA%E4%B9%8C%E5%85%8B%E5%85%B0%E7%9A%84%E9%98%B2%E7%A9%BA%E5%8A%9B%E9%87%8F%E2%80%9D&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
