--- a/articles/rfi/999967.md
+++ b/articles/rfi/999967.md
@@ -1,5 +1,5 @@
-<!--1713541502000-->
-[伊朗中部发生爆炸 国际原子能机构称当地核设施&quot;未受损”](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E5%8F%91%E7%94%9F%E7%88%86%E7%82%B8-%E5%9B%BD%E9%99%85%E5%8E%9F%E5%AD%90%E8%83%BD%E6%9C%BA%E6%9E%84%E7%A7%B0%E5%BD%93%E5%9C%B0%E6%A0%B8%E8%AE%BE%E6%96%BD-%E6%9C%AA%E5%8F%97%E6%8D%9F)
+<!--1713545104000-->
+[德国逮捕2俄间谍计划攻击美军基地](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240418-%E5%BE%B7%E5%9B%BD%E9%80%AE%E6%8D%952%E4%BF%84%E9%97%B4%E8%B0%8D%E8%AE%A1%E5%88%92%E6%94%BB%E5%87%BB%E7%BE%8E%E5%86%9B%E5%9F%BA%E5%9C%B0)
 ------
 
-<div>19/04/2024 - 11:23</div><img src="https://s.rfi.fr/media/display/a451c2ec-f849-11ee-b62a-005056a97e36/w:1280/p:16x9/2024-04-11T141133Z_1508015650_RC2D47A0VBVU_RTRMADP_3_UKRAINE-CRISIS-IAEA.JPG"><p><strong>总部设在奥地利维也纳的国际原子能机构（IAEA）宣布，周五在伊朗中部发生爆炸后，那里的核设施 "没有受到任何损害"。        </strong></p><div><p>国际原子能机构在社交网络X上"继续呼吁各方都保持高度克制，并重申任何核设施都不应成为军事冲突的目标"。</p><p>据报道，伊朗中部是几个已知核设施的所在地。据伊朗“塔斯尼姆”通讯社称，位于伊斯法罕地区的核设施"完全-安全"。</p><p>伊朗官方通讯社Irna也强调说："重要设施，尤其是核设施，完全安全，没有任何事故报告"。</p><p>周五凌晨伊朗中部发生了几起爆炸事件，美国高级官员暗示以色列发动了袭击，以报复上周末针对以色列的史无前例的无人机和导弹袭击。</p><p>然而，伊朗塔斯尼姆通讯社援引 "消息灵通人士 "的话说，"没有关于外国袭击的消息"。</p><p>最初对伊朗中部发生爆炸的反应仍然非常谨慎，各国政治领导人纷纷呼吁"不要升级"。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWx4.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E4%25BC%258A%25E6%259C%2597%25E4%25B8%25AD%25E9%2583%25A8%25E5%258F%2591%25E7%2594%259F%25E7%2588%2586%25E7%2582%25B8-%25E5%259B%25BD%25E9%2599%2585%25E5%258E%259F%25E5%25AD%2590%25E8%2583%25BD%25E6%259C%25BA%25E6%259E%2584%25E7%25A7%25B0%25E5%25BD%2593%25E5%259C%25B0%25E6%25A0%25B8%25E8%25AE%25BE%25E6%2596%25BD-%25E6%259C%25AA%25E5%258F%2597%25E6%258D%259F&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E5%8F%91%E7%94%9F%E7%88%86%E7%82%B8%20%E5%9B%BD%E9%99%85%E5%8E%9F%E5%AD%90%E8%83%BD%E6%9C%BA%E6%9E%84%E7%A7%B0%E5%BD%93%E5%9C%B0%E6%A0%B8%E8%AE%BE%E6%96%BD%22%E6%9C%AA%E5%8F%97%E6%8D%9F%E2%80%9D%20-%20https%3A%2F%2Frfi.my%2FAWx4.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E5%8F%91%E7%94%9F%E7%88%86%E7%82%B8%20%E5%9B%BD%E9%99%85%E5%8E%9F%E5%AD%90%E8%83%BD%E6%9C%BA%E6%9E%84%E7%A7%B0%E5%BD%93%E5%9C%B0%E6%A0%B8%E8%AE%BE%E6%96%BD%22%E6%9C%AA%E5%8F%97%E6%8D%9F%E2%80%9D%20-%20https%3A%2F%2Frfi.my%2FAWx4.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWx4.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E5%8F%91%E7%94%9F%E7%88%86%E7%82%B8%20%E5%9B%BD%E9%99%85%E5%8E%9F%E5%AD%90%E8%83%BD%E6%9C%BA%E6%9E%84%E7%A7%B0%E5%BD%93%E5%9C%B0%E6%A0%B8%E8%AE%BE%E6%96%BD%22%E6%9C%AA%E5%8F%97%E6%8D%9F%E2%80%9D&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>18/04/2024 - 22:44</div><img src="https://s.rfi.fr/media/display/7c78ebe4-fdc4-11ee-a0fd-005056bfb2b6/w:1280/p:16x9/66210160d77c5330d1724475.png"><p><strong></strong></p><div><p>两名嫌犯是在德国东南部的拜罗伊特(Bayreuth)被拘捕的。德国检方18ri 表示，2名德俄双重国籍人士因涉嫌策划在德国进行蓄意破坏攻击而被捕，两人锁定目标包括美国军事设施，目的为了削弱德国对乌克兰的军事支持。</p><p>检察官说，这两名男子的名字仅证实为狄特尔S.（Dieter S.）和亚历山大 J.（Alexander J.）。正在布鲁塞尔开会的德国总理朔尔茨表示，“我们永远不会接受间谍活动在德国发生”。 俄罗斯方面则在其驻德国大使馆在 X 上发布的消息，谴责这种“荒唐可笑”以及缺乏“证据”的指控。</p><p>据《明镜周刊》报道，嫌疑人以及德国联邦国防军车队尤其关注巴伐利亚美军格拉芬沃尔(Grafenwöhr)基地，乌克兰士兵在那里接受使用美国艾布拉姆斯主战坦克的训练。</p><p>据《明镜周刊》报道，主嫌犯迪特尔·S. (Dieter S.) 现年 39 岁，自 2023 年 10 月以来一直在与一名与俄罗斯情报部门有联系的人员交换信息，以期在德国领土上实施可能的破坏活动。 据检方称，他的同伙亚历山大·J.(Alexander J.)现年 37 岁，从 2024 年 3 月底开始和迪特尔有密切的联系。</p><p>检察官称，“这些行动的目的尤其是破坏德国对乌克兰对抗俄罗斯侵略战争的军事支持”。 据报道，迪特·S. 声称自己准备好“对德国的军事基础设施和工业场所进行爆炸袭击和纵火袭击”。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWt3.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240418-%25E5%25BE%25B7%25E5%259B%25BD%25E9%2580%25AE%25E6%258D%25952%25E4%25BF%2584%25E9%2597%25B4%25E8%25B0%258D%25E8%25AE%25A1%25E5%2588%2592%25E6%2594%25BB%25E5%2587%25BB%25E7%25BE%258E%25E5%2586%259B%25E5%259F%25BA%25E5%259C%25B0&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%BE%B7%E5%9B%BD%E9%80%AE%E6%8D%952%E4%BF%84%E9%97%B4%E8%B0%8D%E8%AE%A1%E5%88%92%E6%94%BB%E5%87%BB%E7%BE%8E%E5%86%9B%E5%9F%BA%E5%9C%B0%20-%20https%3A%2F%2Frfi.my%2FAWt3.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%BE%B7%E5%9B%BD%E9%80%AE%E6%8D%952%E4%BF%84%E9%97%B4%E8%B0%8D%E8%AE%A1%E5%88%92%E6%94%BB%E5%87%BB%E7%BE%8E%E5%86%9B%E5%9F%BA%E5%9C%B0%20-%20https%3A%2F%2Frfi.my%2FAWt3.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWt3.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%BE%B7%E5%9B%BD%E9%80%AE%E6%8D%952%E4%BF%84%E9%97%B4%E8%B0%8D%E8%AE%A1%E5%88%92%E6%94%BB%E5%87%BB%E7%BE%8E%E5%86%9B%E5%9F%BA%E5%9C%B0&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
