--- a/articles/rfi/999974.md
+++ b/articles/rfi/999974.md
@@ -1,5 +1,5 @@
-<!--1713532502000-->
-[美国宇航局长揭露中国以民用计划之名掩盖军事太空计划 - 法国报纸摘要](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E6%8A%A5%E7%BA%B8%E6%91%98%E8%A6%81/20240419-%E7%BE%8E%E5%9B%BD%E5%AE%87%E8%88%AA%E5%B1%80%E9%95%BF%E6%8F%AD%E9%9C%B2%E4%B8%AD%E5%9B%BD%E4%BB%A5%E6%B0%91%E7%94%A8%E8%AE%A1%E5%88%92%E4%B9%8B%E5%90%8D%E6%8E%A9%E7%9B%96%E5%86%9B%E4%BA%8B%E5%A4%AA%E7%A9%BA%E8%AE%A1%E5%88%92)
+<!--1713541502000-->
+[香港「七连跌」被挤出全球十大货柜港  机场贷运连续13年居首](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240419-%E9%A6%99%E6%B8%AF-%E4%B8%83%E8%BF%9E%E8%B7%8C-%E8%A2%AB%E6%8C%A4%E5%87%BA%E5%85%A8%E7%90%83%E5%8D%81%E5%A4%A7%E8%B4%A7%E6%9F%9C%E6%B8%AF-%E6%9C%BA%E5%9C%BA%E8%B4%B7%E8%BF%90%E8%BF%9E%E7%BB%AD13%E5%B9%B4%E5%B1%85%E9%A6%96)
 ------
 
-<div>19/04/2024 - 14:34</div><img src="https://s.rfi.fr/media/display/de712a84-105a-11ea-a2a3-005056bff430/w:1280/p:16x9/03-revue-de-presse_0.png"><p><strong>法国总理阿塔尔任职100天，周四晚间做客24小时滚动新闻台BFMTV，详细阐述了任职后的作为，并承诺将对一些年轻人的“暴力”行为迅速做出反应；欧洲选举日益迫近，法国北部一些地区的民众却漠不关心；乌克兰向国际社会发出紧急救援的呼声；欧洲电动汽车销售遇挫，三月份下滑11%，中国竞争威胁迫在眉睫；这是19日出版的法国各报开篇新闻话题。                    </strong></p><div><p>关于中国，《费加罗报》揭示美国宇航局局长为中国的太空军事能力拉响警钟；《回声报》则报道了中国奇瑞汽车在西班牙建厂的消息。另外，印度迎来全球规模最大的选举，则是多份日报关注的亚洲新闻重点。</p><p><strong>尼尔森为中国的太空军事能力拉响警钟</strong></p><p>美国宇航局局长尼尔森星期三（4月17日）在众议院拨款委员会针对航天局2025年预算发言，对中国近年来在太空领域取得的巨大进步深表担忧。尼尔森指责中国继续增强其太空能力，并以民用计划的名义掩盖军事太空计划。美国宇航局局长强调：美中之间目前正在进行一场“竞赛”，美国必须先于中国成功登陆月球。因为他担心：一旦中国率先登陆，则可能宣称“月球为其领土”。尼尔森表示：中国在这方面投入了大量资金。美国“真的不应该放松警惕”。</p><p>美国计划于2026年通过阿尔忒弥斯3号任务将宇航员送上月球。</p><p>中国也计划在2030年之前将人类送往月球。美国民选官员在向美国航天局提出年度预算请求期间听取了尼尔森的表述。</p><p><strong>中国奇瑞在巴塞罗纳建厂</strong></p><p>另外，欧洲电动汽车市场出现低迷，随着各国收紧电动车补贴政策，3月份欧洲电动汽车销售下降11%。与此同时，中国奇瑞新能源星期二（4月16日）宣布：与西班牙埃布罗（Ebro-EV Motors）公司在巴塞罗纳成立一家合资企业，厂址选在2021年底关闭的前日产汽车旧址，计划将工厂改造为电动汽车中心。</p><p>《回声报》指出：中国奇瑞新能源加速进军欧洲，希望在欧洲发展销售业务，成为第一家在欧洲设厂的中国电动汽车企业。</p><p>这家由西班牙埃布罗占多数股权的合资企业承诺，在现有基础设施再利用的基础上，将于今年第四季度末开始生产。</p><p>报道指出：通过在欧洲建厂，奇瑞公司面临巨大挑战。这家原本注重低端市场的制造商，打算推出新的品牌重塑形象。同时为了更快地在激烈的竞争中找到一席之地，奇瑞准备以极具吸引力的价格打响市场争夺战。</p><p><strong>印度：最大规模的选举</strong></p><p>此外，多份日报聚焦今天开始的印度议会下院选举。报道指出：全球最大规模的选举-印度议会下院选举19日正式拉开帷幕。公众舆论和观察家一致认为：即将卸任的总理穆迪领导的印度人民党将赢得多数席位。根据3月6日公布的民意调查，75%的选民对穆迪表示支持。随着第二个五年任期的结束，穆迪的民意支持率一年内跃升了8个百分点。</p><p>不过，印度总理治理工作中也存在诸多不足。比如：在新冠病毒大流行期间显露出管理不善，导致印度成为全球受该病毒影响最严重的国家，死亡人数超过400万。还有，在中印两国军队在喜马拉雅山西部的冲突中表现不力，未能有效地阻止中国军队占领大片富有争议的边境地带。</p><p>从经济层面看，尽管印度年增长率约为7%，但失业和就业不足仍是印度面临的最大挑战。国际劳工组织在3月份公布的一份报告中强调，2012至2022十年间，印度经济每年仅能为进入就业市场的1200万年轻人创立500万个就业机会。这场社会危机每年迫使超过10万民众非法移民。</p><p>印度总理穆迪执政十年还广得民心，是他以人民的无私公仆的形象维持的声望。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E6%B5%81%E8%8A%B3/" title="流芳">流芳</a></div></div></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>19/04/2024 - 10:39</div><img src="https://s.rfi.fr/media/display/04d7f756-fe28-11ee-9cd8-005056a97e36/w:1280/p:16x9/hk-203.jpg"><p><strong>曾雄踞全球货柜港排名榜首的香港货柜码头，在吞吐量连续七年下跌之后，于去年以1440万个标准箱(TEU)正式跌出「十大」，被中东的杜拜取代。至于同属中国政府期望香港发展的「八大中心」之一的航运枢纽则传来令官员松一口气的消息，香港机场去年再度荣膺全球最繁忙货运机场，年内处理货运量达 430万公吨，是该机场连续第十叁年获选为全球最繁忙货运机场。        </strong></p><div><p>法国航运顾问公司Alphaliner指出，香港在2023年的货柜处理量有1440.1个标准箱，以7.2万个标准箱之差，让杜拜抢去全球最繁忙货柜港第十名的位置，屈居第11位，是首次跌出全球十大之列。</p><p>据Alphaliner发布的数据，全球最繁忙的叁十个货柜港口中，中国的上海以4915.8万个标准箱居首位，紧随其后的是新加坡(3901.3万个TEU)和宁波-舟山港(3530万个TEU)，接着是青岛丶深圳丶广州丶韩国釜山丶天津丶美国的洛杉矶-长滩港，以及杜拜的杰贝阿里港(Jebel Ali)。意味在「十大」中，中国港口占了六个；若以吞吐量计算，中国港口的吞吐量更占全球叁十个最繁忙货柜港的51%。</p><p>曾经连续十一年蝉联全球港口货柜吞吐量排行榜第一的香港，在中国港口兴旺的情况下，货柜吞吐量拾级而下，去年更按年大减13.7%而跌出全球十大，排第11位；与疫情前的2019年相比，跌幅达 21.3%，是连续第七年下跌，反映香港港口吞吐量正处于长期萎缩期，部分原因是货运被邻近的深圳和广州抢走，例如毗邻的深圳，去年的吞吐量便是香港的一倍有馀。</p><p>不过，运输及物流局昨(18日)晚于社交媒体发文，指根据国际航运业权威媒体Lloyd's List的方法，「估计」香港港口的货柜吞吐量去年仍然排名全球第十，较2022年下跌一名。局方指出，与Lloyd's不同，Alphaliner把洛杉矶港及长滩港合并计算，后者的排名，2022年时高香港一位。该局续称，大家着眼于香港货柜吞吐量有下跌趋势之馀，更应继续巩固及发展香港港口的优势。</p><p><strong>今年首季货运量续跌2.3% 处转型十字路口</strong></p><p>但以今年首季数字看来，香港货柜吞吐量的跌势未止。根据港府统计处和海运港口局秘书处的估计，香港今年头叁个月共处理了335.2万个标准箱，较去年同期收缩2.3%。加上主要航运联盟把香港剔除于2025年亚洲至美国西岸的远程航线，香港的吞吐量势将受影响。</p><p>本台日前报道已引述香港定期班轮协会主席罗振麟（Roberto Giannetta）指出，香港贷柜吞吐量虽在下滑，但在亚洲区内(Intra-Asia)市场这个全球最大航运市场的份额却在不断上升，香港可转作驳运中心。该会在报道刊登后发来数据作补充，指香港去年处理的1440万个标准箱中，亚洲区内的货运量占了六成，足证香港可为南中国提供最大亚洲区内市场网络。</p><p>相反，香港的空运业务仍然手执全球牛耳。根据国际机场协会15日公布的最新数据，按总货运量计算，香港国际机场再度获选为2023年全球最繁忙货运机场，年内机场处理的货运量达430万公吨，这是香港国际机场自2010年以来第十叁次获选为全球最繁忙货运机场。运物局局长林世雄指出，随着机场的第叁条跑道系统今年内投入运作，预计到2035年时，香港机场每年可处理1000万公吨货物，国际航空枢纽的地位将得以巩固。</p><p>中国在「十四五」规划中要求香港维持「八大中心」地位，分别是原来的国际金融中心丶国际航运中心丶国际商贸中心和亚太地区国际法律及解决争议服务中心，以及新增的国际航空枢纽中心丶国际创新科技中心丶区域知识产权贸易中心和中外文化艺术交流中心。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWwg.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240419-%25E9%25A6%2599%25E6%25B8%25AF-%25E4%25B8%2583%25E8%25BF%259E%25E8%25B7%258C-%25E8%25A2%25AB%25E6%258C%25A4%25E5%2587%25BA%25E5%2585%25A8%25E7%2590%2583%25E5%258D%2581%25E5%25A4%25A7%25E8%25B4%25A7%25E6%259F%259C%25E6%25B8%25AF-%25E6%259C%25BA%25E5%259C%25BA%25E8%25B4%25B7%25E8%25BF%2590%25E8%25BF%259E%25E7%25BB%25AD13%25E5%25B9%25B4%25E5%25B1%2585%25E9%25A6%2596&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E9%A6%99%E6%B8%AF%E3%80%8C%E4%B8%83%E8%BF%9E%E8%B7%8C%E3%80%8D%E8%A2%AB%E6%8C%A4%E5%87%BA%E5%85%A8%E7%90%83%E5%8D%81%E5%A4%A7%E8%B4%A7%E6%9F%9C%E6%B8%AF%20%20%E6%9C%BA%E5%9C%BA%E8%B4%B7%E8%BF%90%E8%BF%9E%E7%BB%AD13%E5%B9%B4%E5%B1%85%E9%A6%96%20-%20https%3A%2F%2Frfi.my%2FAWwg.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E9%A6%99%E6%B8%AF%E3%80%8C%E4%B8%83%E8%BF%9E%E8%B7%8C%E3%80%8D%E8%A2%AB%E6%8C%A4%E5%87%BA%E5%85%A8%E7%90%83%E5%8D%81%E5%A4%A7%E8%B4%A7%E6%9F%9C%E6%B8%AF%20%20%E6%9C%BA%E5%9C%BA%E8%B4%B7%E8%BF%90%E8%BF%9E%E7%BB%AD13%E5%B9%B4%E5%B1%85%E9%A6%96%20-%20https%3A%2F%2Frfi.my%2FAWwg.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWwg.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E9%A6%99%E6%B8%AF%E3%80%8C%E4%B8%83%E8%BF%9E%E8%B7%8C%E3%80%8D%E8%A2%AB%E6%8C%A4%E5%87%BA%E5%85%A8%E7%90%83%E5%8D%81%E5%A4%A7%E8%B4%A7%E6%9F%9C%E6%B8%AF%20%20%E6%9C%BA%E5%9C%BA%E8%B4%B7%E8%BF%90%E8%BF%9E%E7%BB%AD13%E5%B9%B4%E5%B1%85%E9%A6%96&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
