--- a/articles/rfi/999982.md
+++ b/articles/rfi/999982.md
@@ -1,5 +1,5 @@
-<!--1713476702000-->
-[乌克兰称成功袭击克里米亚俄机场 俄军空袭乌北部城市](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240418-%E4%B9%8C%E5%85%8B%E5%85%B0%E7%A7%B0%E6%88%90%E5%8A%9F%E8%A2%AD%E5%87%BB%E5%85%8B%E9%87%8C%E7%B1%B3%E4%BA%9A%E4%BF%84%E6%9C%BA%E5%9C%BA-%E4%BF%84%E5%86%9B%E7%A9%BA%E8%A2%AD%E4%B9%8C%E5%8C%97%E9%83%A8%E5%9F%8E%E5%B8%82)
+<!--1713494701000-->
+[马克龙将在索邦大学阐述欧洲建设蓝图](https://www.rfi.fr/cn/%E6%B3%95%E5%9B%BD/20240418-%E9%A9%AC%E5%85%8B%E9%BE%99%E5%B0%86%E5%9C%A8%E7%B4%A2%E9%82%A6%E5%A4%A7%E5%AD%A6%E9%98%90%E8%BF%B0%E6%AC%A7%E6%B4%B2%E5%BB%BA%E8%AE%BE%E8%93%9D%E5%9B%BE)
 ------
 
-<div>18/04/2024 - 22:36</div><img src="https://s.rfi.fr/media/display/c27b141e-fccf-11ee-a8c2-005056bf30b7/w:1280/p:16x9/2024-04-17T144304Z_1281641736_RC2987ATK3R3_RTRMADP_3_UKRAINE-CRISIS-ATTACK-CHERNIHIV.JPG"><p><strong>乌克兰18日说，其部队已袭击被吞并的克里米亚半岛上一座大型俄罗斯机场，摧毁大批军事装备。        </strong></p><div><p>据法新社报导，这次袭击发生在17日凌晨，地点在赞科伊（Dzhankoi）附近的一座空军基地，这座空军基地位于莫斯科于2014年占领的克里米亚半岛北部。</p><p>乌克兰军事情报部门说，这次行动很成功，破坏雷达和防空系统和其他目标。 情报部门说：正在查明被摧毁或损坏的敌方航空器数量，以及俄罗斯占领军伤亡人数。</p><p>乌克兰社交媒体前一天曾经流传了据称显示机场爆炸和警报声的视频，但基辅并没有立即发表评论。 乌克兰总统泽连斯基随后在晚间演说中证实他的部队发动了这次袭击，并感谢军方“正确的打击占领者。</p><p><strong>俄军17日空袭乌北部城市 死亡增至 18人 另有78人受伤</strong></p><p>另据中央社18日的综合报导：俄罗斯军队17日空袭了乌克兰北部城市切尔尼戈夫（Chernihiv），期间有3枚导弹击中市中心，乌方官员18日表示，这波攻击造成的死亡人数已升至18人，还有78人受伤。</p><p>路透社报导还说，17日俄军袭击破坏了切尔尼戈夫市的民用基础设施，这是俄罗斯近几周来发动的最致命空袭，乌克兰高层官员也呼吁各国提供更多防空支援。 乌克兰切尔尼戈夫州州长曹斯（Vyacheslav Chaus）在通讯软体Telegram发文写道，搜救行动已经在今天早上结束。</p><p>俄罗斯全面侵略乌克兰的战争已进入第3年，俄国当局否认在这场战争中锁定平民发动攻击。 但切尔尼戈夫代理市长洛马柯（Oleksandr Lomako）17日向当地电视台表示：不幸的是，俄罗斯持续向平民和民用基础设施发动恐怖攻击，针对切尔尼戈夫的袭击再次证实了这 一点。</p><p><strong>布林肯4月23日前往中国访问4天</strong></p><p>此外，美国政治新闻网Politico报导，据1位驻华盛顿外交官和3位了解布林肯行程计画的美国官员透露，布林肯将 在4月23日启程前往中国，进行为期4天的访问。 所有人都被要求匿名，因为他们无权公开谈论这次旅行。 这是布林肯自去年6月以来第二次访问中国。</p><p>美国之音18日报导，美国国务院发言人米勒（Matthew Miller）近日表示，布林肯在访中期间预计将提出美国对于北京正在帮助俄罗斯建立国防工业基础，以延续乌克兰战争的关切。 自俄罗斯在2022年2月全面入侵乌克兰以来，美国就警告中国不要帮助莫斯科的战争行动。</p><p>据华尔街日报近日报导，美国官员称，中国在俄乌战争关键阶段帮助俄国恢复军工生产，为莫斯科提供光学、微电子、无人机发动机和其他军民两用材料，让俄国得以显著增强战场能力。 美方官员私下指出，俄国重振军工产能的速度快于他们预期，可能就是得利于这种外援。 随后中国驻美国大使馆发言人刘鹏宇否认，指中国不是乌克兰危机的制造者或当事方；中方一直在支持政治解决方面发挥建设性作用。 刘鹏宇强调，中国没有向（冲突）任何一方提供武器，中国和俄罗斯之间的正常贸易不应受到干涉和限制。 他说，中国不站在任何一边，并要求美方不要干扰北京和莫斯科之间的正常关系。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWt1.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240418-%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E7%25A7%25B0%25E6%2588%2590%25E5%258A%259F%25E8%25A2%25AD%25E5%2587%25BB%25E5%2585%258B%25E9%2587%258C%25E7%25B1%25B3%25E4%25BA%259A%25E4%25BF%2584%25E6%259C%25BA%25E5%259C%25BA-%25E4%25BF%2584%25E5%2586%259B%25E7%25A9%25BA%25E8%25A2%25AD%25E4%25B9%258C%25E5%258C%2597%25E9%2583%25A8%25E5%259F%258E%25E5%25B8%2582&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B9%8C%E5%85%8B%E5%85%B0%E7%A7%B0%E6%88%90%E5%8A%9F%E8%A2%AD%E5%87%BB%E5%85%8B%E9%87%8C%E7%B1%B3%E4%BA%9A%E4%BF%84%E6%9C%BA%E5%9C%BA%20%E4%BF%84%E5%86%9B%E7%A9%BA%E8%A2%AD%E4%B9%8C%E5%8C%97%E9%83%A8%E5%9F%8E%E5%B8%82%20-%20https%3A%2F%2Frfi.my%2FAWt1.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B9%8C%E5%85%8B%E5%85%B0%E7%A7%B0%E6%88%90%E5%8A%9F%E8%A2%AD%E5%87%BB%E5%85%8B%E9%87%8C%E7%B1%B3%E4%BA%9A%E4%BF%84%E6%9C%BA%E5%9C%BA%20%E4%BF%84%E5%86%9B%E7%A9%BA%E8%A2%AD%E4%B9%8C%E5%8C%97%E9%83%A8%E5%9F%8E%E5%B8%82%20-%20https%3A%2F%2Frfi.my%2FAWt1.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWt1.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B9%8C%E5%85%8B%E5%85%B0%E7%A7%B0%E6%88%90%E5%8A%9F%E8%A2%AD%E5%87%BB%E5%85%8B%E9%87%8C%E7%B1%B3%E4%BA%9A%E4%BF%84%E6%9C%BA%E5%9C%BA%20%E4%BF%84%E5%86%9B%E7%A9%BA%E8%A2%AD%E4%B9%8C%E5%8C%97%E9%83%A8%E5%9F%8E%E5%B8%82&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>18/04/2024 - 22:47</div><img src="https://s.rfi.fr/media/display/e83356da-fdc4-11ee-a404-005056bf30b7/w:1280/p:16x9/1210255_f9d58008605d47c681b8e6106950b050-0-9bdf4d006d41448fb01c2420a3c54c68.png"><p><strong></strong></p><div><p>2017年9月26日，马克龙曾在巴黎索邦大学发表演讲，提出一系列重塑欧盟的建议主张，希望在今后几年建立一个“主权、统一和民主的欧盟”。马克龙认为，欧盟当前面临许多重大挑战，在防务安全、移民问题、发展问题、气候变化、数字革命和全球经济一体化等方面都需要作出重大政策调整。为此，马克龙提出了一系列具体建议。</p><p>针对日益严重的恐怖主义威胁，马克龙主张建立欧盟统一的防务安全体系，在2020年前建立一支欧盟共同干预部队，设立欧盟统一防务预算、欧盟反恐检察部门和情报共享机制。马克龙认为，欧盟共同干预部队是对北约的一个补充，但是需要有独立的行动能力。</p><p>马克龙还向欧盟发出了充满活力的呼吁，称欧盟多年来缺乏长期愿景，深陷官僚主义和过度监管的泥潭。 他在长达一个半小时的演讲中表示，欧洲“太弱、太慢、太低效”。 对欧盟的这一呼吁令许多合作伙伴感到惊讶，首先是德国前总理默克尔(Angela Merkel)，当时她刚刚再次当选，进行了数月的谈判才组建了政府联盟。</p><p>在欧洲议会选举上，执政党领军人远远落后于极右派。4月初，法国伊佛普民调机构调查显示，极右翼国民联盟的巴德拉(Jordan Bardella)继续领先，支持率超过30%，远远领先于他的主要竞争对手执政的复兴党海耶尔(Valérie Hayer)。</p><p>近来，海耶尔的支持率不但没有上升，反从此前的19%下降到18%左右，与极右派的国民联盟差距拉大，显示海耶尔在欧盟议会竞选开始时采取的旨在攻击国民联盟的策略并没有奏效，也没有引发公众舆论的共鸣。</p><p>索邦大学二次演讲也有揭露极右虚伪一面的意图。法国总统马克龙回答记者提问时并没有提及极右派。马克龙表示：“我认为，我们目前正在经历很多恐惧和担忧，不加思考的简单回应有时候会满足愤世嫉俗的群体”。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWt6.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25B3%2595%25E5%259B%25BD%2F20240418-%25E9%25A9%25AC%25E5%2585%258B%25E9%25BE%2599%25E5%25B0%2586%25E5%259C%25A8%25E7%25B4%25A2%25E9%2582%25A6%25E5%25A4%25A7%25E5%25AD%25A6%25E9%2598%2590%25E8%25BF%25B0%25E6%25AC%25A7%25E6%25B4%25B2%25E5%25BB%25BA%25E8%25AE%25BE%25E8%2593%259D%25E5%259B%25BE&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E9%A9%AC%E5%85%8B%E9%BE%99%E5%B0%86%E5%9C%A8%E7%B4%A2%E9%82%A6%E5%A4%A7%E5%AD%A6%E9%98%90%E8%BF%B0%E6%AC%A7%E6%B4%B2%E5%BB%BA%E8%AE%BE%E8%93%9D%E5%9B%BE%20-%20https%3A%2F%2Frfi.my%2FAWt6.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E9%A9%AC%E5%85%8B%E9%BE%99%E5%B0%86%E5%9C%A8%E7%B4%A2%E9%82%A6%E5%A4%A7%E5%AD%A6%E9%98%90%E8%BF%B0%E6%AC%A7%E6%B4%B2%E5%BB%BA%E8%AE%BE%E8%93%9D%E5%9B%BE%20-%20https%3A%2F%2Frfi.my%2FAWt6.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWt6.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E9%A9%AC%E5%85%8B%E9%BE%99%E5%B0%86%E5%9C%A8%E7%B4%A2%E9%82%A6%E5%A4%A7%E5%AD%A6%E9%98%90%E8%BF%B0%E6%AC%A7%E6%B4%B2%E5%BB%BA%E8%AE%BE%E8%93%9D%E5%9B%BE&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
