--- a/articles/rfi/999983.md
+++ b/articles/rfi/999983.md
@@ -1,5 +1,5 @@
-<!--1713476702000-->
-[竞争力落后美中    欧盟27国共商对策](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240418-%E7%AB%9E%E4%BA%89%E5%8A%9B%E8%90%BD%E5%90%8E%E7%BE%8E%E4%B8%AD-%E6%AC%A7%E7%9B%9F27%E5%9B%BD%E5%85%B1%E5%95%86%E5%AF%B9%E7%AD%96)
+<!--1713494701000-->
+[伊朗袭击以色列后 中俄联合支持德黑兰对抗华盛顿](https://www.rfi.fr/cn/%E4%B8%AD%E4%B8%9C/20240418-%E4%BC%8A%E6%9C%97%E8%A2%AD%E5%87%BB%E4%BB%A5%E8%89%B2%E5%88%97%E5%90%8E-%E4%B8%AD%E4%BF%84%E8%81%94%E5%90%88%E6%94%AF%E6%8C%81%E5%BE%B7%E9%BB%91%E5%85%B0%E5%AF%B9%E6%8A%97%E5%8D%8E%E7%9B%9B%E9%A1%BF)
 ------
 
-<div>18/04/2024 - 22:57</div><img src="https://s.rfi.fr/media/display/0d312ef6-fd9a-11ee-a885-005056bfb2b6/w:1280/p:16x9/AP24109325782154.jpg"><p><strong></strong></p><div><p>莱塔的报告提出了一系列改善内部市场运作的措施，包括进一步整合电信、能源和金融部门，否则欧盟将注定衰落。随着欧洲议会选举临近，这个问题有望成为未来几个月欧洲政治议程的核心。</p><p>欧盟委员会主席乌苏拉·冯德莱恩表示，“我们联盟的竞争力和单一市场有坚实的基础，我们现在必须将其转变为长期可持续增长”。</p><p>德国官员认为，欧盟必须确保欧洲人不是简单的“其他地方生产的数字技术和服务的消费者”，并呼吁采取具体行动刺激资本获取、降低能源成本、解决熟练劳动力短缺问题并加强贸易联系。</p><p>提交了一份长达147页的报告后，恩里科·莱塔（Enrico Letta）在新闻发布会上表示，“这是最后一次机会，也是最后一个开放的窗口。”</p><p>报告称，地缘政治紧张局势和保护主义的抬头威胁着欧盟的经济安全，并削弱了其在人工智能和清洁技术等技术领域的发展。</p><p>欧盟面临着美国巨额补贴吸引投资以及中国对其所依赖的新技术供应链的主导地位带来的新挑战。</p><p>根据草案结论，欧盟领导人将制定九点计划，包括深化单一市场、创建资本市场和能源联盟。</p><p>最大的问题是欧盟的行动是否言行一致。 资本市场联盟的计划可以追溯到十年前，该计划可以释放双重转型所需的私人资金，但由于欧盟成员国不想放弃对国家金融规则的控制而陷入停滞。</p><p>中国欧盟商会主席彦辞警告，随着保护主义浪潮高涨，中国和欧洲面临“慢动作火车事故”，双方之间的贸易摩擦有可能演变成一场全面的贸易战。</p><p>彦辞4月17日在出席中国欧盟商会华南分会的一次会议时说，尽管中国和欧洲对彼此的一些贸易担忧是合理的，但如果中欧领导人不加强对话，就可能出现无益的脱钩。</p><p>彦辞说，欧洲不能接受构成欧洲工业基础的产业，因价格过高被挤出市场的事实，“那时贸易就成为一个安全问题，我认为这在中国可能还没有得到充分的重视”。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWtD.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240418-%25E7%25AB%259E%25E4%25BA%2589%25E5%258A%259B%25E8%2590%25BD%25E5%2590%258E%25E7%25BE%258E%25E4%25B8%25AD-%25E6%25AC%25A7%25E7%259B%259F27%25E5%259B%25BD%25E5%2585%25B1%25E5%2595%2586%25E5%25AF%25B9%25E7%25AD%2596&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%AB%9E%E4%BA%89%E5%8A%9B%E8%90%BD%E5%90%8E%E7%BE%8E%E4%B8%AD%20%20%20%20%E6%AC%A7%E7%9B%9F27%E5%9B%BD%E5%85%B1%E5%95%86%E5%AF%B9%E7%AD%96%20-%20https%3A%2F%2Frfi.my%2FAWtD.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%AB%9E%E4%BA%89%E5%8A%9B%E8%90%BD%E5%90%8E%E7%BE%8E%E4%B8%AD%20%20%20%20%E6%AC%A7%E7%9B%9F27%E5%9B%BD%E5%85%B1%E5%95%86%E5%AF%B9%E7%AD%96%20-%20https%3A%2F%2Frfi.my%2FAWtD.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWtD.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%AB%9E%E4%BA%89%E5%8A%9B%E8%90%BD%E5%90%8E%E7%BE%8E%E4%B8%AD%20%20%20%20%E6%AC%A7%E7%9B%9F27%E5%9B%BD%E5%85%B1%E5%95%86%E5%AF%B9%E7%AD%96&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>18/04/2024 - 20:12</div><img src="https://s.rfi.fr/media/display/07af6fa4-fc93-11ee-8851-005056a97e36/w:1280/p:16x9/e1d8ce33b89d57ff07354d9cb2a904726a60f587.jpg"><p><strong>莫斯科和北京并未谴责伊朗对以色列领土的袭击，但他们将这场危机视为挑拨西方与世界其他国家之间关系的机会。这是世界报的两名莫斯科特派记者勒梅特及维特金共同撰写报道指出的。         </strong></p><div><p>在伊朗与以色列之间的危机中，在大多数国家一致呼吁克制的背后，俄罗斯和中国外交立场却是坚决站在伊朗一边。 </p><p style="text-align:left">莫斯科和北京都没有谴责德黑兰在4月13日星期六晚上至4月14日星期日发动的大规模空袭。 相反，中国外交部长王毅周一与伊朗外长侯赛因·阿米尔·阿卜杜拉希安通电话提醒说，“中方强烈谴责并坚决反对针对伊朗驻大马士革使馆领事部的袭击事件”(发生在4月1日)，这是根据中国官方媒体新华社发布的这项谈话报道。 </p><p style="text-align:left">另一方面，北京“注意到伊朗的声明，即所采取的行动是有限的，并构成自卫行为”。 弗拉基米尔·普京周二(16日也指出，在与伊朗外长易卜拉欣·拉伊西的通话中，伊朗展现了希望“避免局势进一步升级”的意愿。 </p><p style="text-align:left">俄罗斯常驻联合国代表瓦西里·内本齐亚(Vassilyi Nebenzia)前一天已经提到伊朗的“合法回应”，并倾向于强调西方在此事上的“虚伪”。俄罗斯外交发言人玛丽亚·扎哈罗娃对以色列驻莫斯科大使西蒙娜·加尔佩林说：“西蒙娜，请您提醒我何时以色列谴责了基辅政权对俄罗斯领土的袭击。” </p><p style="text-align:left">俄罗斯的宣传渠道甚至对伊朗的袭击表现出某种形式的兴奋，首先描述了德黑兰的“胜利”和以色列的“恐慌”，然后采用了系列词句：“有限打击”具有简单的“警告”意义。 NTV 频道周一表示：“伊朗已成为穆斯林世界的重心，” </p><p style="text-align:left">伊朗是莫斯科的重要盟友： 在所采取的这些态度立场上 </p><p style="text-align:left">不仅仅是对于重要合作伙伴展现出很好的举止。 伊朗是莫斯科在对乌克兰战争中的重要盟友，并向俄罗斯提供无人机和导弹。  </p><p style="text-align:left">伊朗也是北京的主要石油供应国之一，北京一直反对对德黑兰实施制裁。 3月中旬，中国、俄罗斯、伊朗三国仍在阿拉伯海进行联合军事演习。 </p><p style="text-align:left">俄罗斯和中国的立场首先与 2023 年 10 月 7 日哈马斯袭击以色列后所做出的转变一致，中俄两国拖到很晚才谴责以色列，而且往往措辞含糊。  </p><p style="text-align:left">自此，北京在中东事务上极力采取与美国和七国集团截然相反的立场，自诩为“南方国家”的代言人。 </p><p style="text-align:left">正是以与西方面对面的名义，莫斯科牺牲了与以色列的良好关系以及迄今为止以平衡为考量的地区政策。  </p><p style="text-align:left">乌克兰战争是俄罗斯的绝对优先要务，中东的紧张局势是透过这个棱镜来分析的。  </p><p style="text-align:left">这种紧张情势是在西方与世界其他国家之间制造隔阂的一种手段，希望看到西方的注意力和资源分散，从而损害基辅。 对此，媒体援引俄罗斯分析师的话说，紧张局势的升级可能导致能源价格上涨，这对俄罗斯经济有利。 </p><p style="text-align:left">然而，失控的大火对于莫斯科和北京都没有任何好处。该地区不仅对中国的能源供应至关重要，而且没有任何迹象表明伊朗政权将会抵御过于残酷的震荡和冲击。反过来看，这个问题也适用于莫斯科在该地区的主要支持的对象--大马士革。 军事升级还可能削弱德黑兰向莫斯科供应武器的能力。 </p><p style="text-align:left"> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWsJ.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E4%25B8%259C%2F20240418-%25E4%25BC%258A%25E6%259C%2597%25E8%25A2%25AD%25E5%2587%25BB%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E5%2590%258E-%25E4%25B8%25AD%25E4%25BF%2584%25E8%2581%2594%25E5%2590%2588%25E6%2594%25AF%25E6%258C%2581%25E5%25BE%25B7%25E9%25BB%2591%25E5%2585%25B0%25E5%25AF%25B9%25E6%258A%2597%25E5%258D%258E%25E7%259B%259B%25E9%25A1%25BF&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%BC%8A%E6%9C%97%E8%A2%AD%E5%87%BB%E4%BB%A5%E8%89%B2%E5%88%97%E5%90%8E%20%E4%B8%AD%E4%BF%84%E8%81%94%E5%90%88%E6%94%AF%E6%8C%81%E5%BE%B7%E9%BB%91%E5%85%B0%E5%AF%B9%E6%8A%97%E5%8D%8E%E7%9B%9B%E9%A1%BF%20-%20https%3A%2F%2Frfi.my%2FAWsJ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%BC%8A%E6%9C%97%E8%A2%AD%E5%87%BB%E4%BB%A5%E8%89%B2%E5%88%97%E5%90%8E%20%E4%B8%AD%E4%BF%84%E8%81%94%E5%90%88%E6%94%AF%E6%8C%81%E5%BE%B7%E9%BB%91%E5%85%B0%E5%AF%B9%E6%8A%97%E5%8D%8E%E7%9B%9B%E9%A1%BF%20-%20https%3A%2F%2Frfi.my%2FAWsJ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWsJ.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%BC%8A%E6%9C%97%E8%A2%AD%E5%87%BB%E4%BB%A5%E8%89%B2%E5%88%97%E5%90%8E%20%E4%B8%AD%E4%BF%84%E8%81%94%E5%90%88%E6%94%AF%E6%8C%81%E5%BE%B7%E9%BB%91%E5%85%B0%E5%AF%B9%E6%8A%97%E5%8D%8E%E7%9B%9B%E9%A1%BF&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
