--- a/articles/rfi/999984.md
+++ b/articles/rfi/999984.md
@@ -1,5 +1,5 @@
-<!--1713476702000-->
-[前中国央行副行长范一飞涉贿受审](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240418-%E5%89%8D%E4%B8%AD%E5%9B%BD%E5%A4%AE%E8%A1%8C%E5%89%AF%E8%A1%8C%E9%95%BF%E8%8C%83%E4%B8%80%E9%A3%9E%E6%B6%89%E8%B4%BF%E5%8F%97%E5%AE%A1)
+<!--1713494701000-->
+[菲美肩并肩军演实弹击沉中国造退役军舰](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20240418-%E8%8F%B2%E7%BE%8E%E8%82%A9%E5%B9%B6%E8%82%A9%E5%86%9B%E6%BC%94%E5%AE%9E%E5%BC%B9%E5%87%BB%E6%B2%89%E4%B8%AD%E5%9B%BD%E9%80%A0%E9%80%80%E5%BD%B9%E5%86%9B%E8%88%B0)
 ------
 
-<div>18/04/2024 - 17:14</div><img src="https://s.rfi.fr/media/display/f3fb03a4-0d6f-11ea-b03f-005056bfe576/w:1280/p:16x9/2011-08-11T800-CHINA-YUAN-MIDDAY_0.JPG"><p><strong>遭指“靠金融吃金融”的前中国人民银行（中国央行）副行长范一飞，被控自1993年起，29年内非法收受财物共计折合人民币3.86亿余元。湖北省黄冈市中级人民法院18日公开审理范一飞受贿一案。        </strong></p><div><p>据中央社今天引述中国官方消息，湖北省黄冈市人民检察院起诉指控，1993年至2022年，范一飞利用在前中国人民建设银行信托投资公司任职，在中国建设银行官至副行长，担任中国投资有限责任公司副总经理兼上海银行董事长，及中国人民银行党委委员、副行长等职务上的便利，透过其他国家工作人员职务上的行为，为有关单位和个人在贷款融资、业务承揽、工作调动等事项上提供帮助，直接或者通过其特定关系人非法收受财物共计折合3.86亿余元。</p><p>消息说，范一飞当庭表示认罪悔罪。</p><p>法庭宣布择期宣判。</p><p>北京青年报旗下新媒体“政知见”指出，范一飞长期在金融系统任职，2015年调往中国人行担任副行长时，是当时央行领导班子中最年轻的成员。2022年11月，范一飞在任上被查落马。2023年5月，他被开除党籍和公职。</p><p>据中共中央纪委国家监委的通报指出，范一飞为官不廉，毫无法纪底线且胆大妄为，靠金融吃金融、以钱生钱，长期以“投资”为名大搞权钱交易，利用职务便利为他人在贷款融资、企业经营等方面谋利，并非法收受巨额财物。</p><p>该报道称，今年1月上旬，中国央视播出年度反腐大片“持续发力纵深推进”，范一飞还出镜忏悔。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWqH.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240418-%25E5%2589%258D%25E4%25B8%25AD%25E5%259B%25BD%25E5%25A4%25AE%25E8%25A1%258C%25E5%2589%25AF%25E8%25A1%258C%25E9%2595%25BF%25E8%258C%2583%25E4%25B8%2580%25E9%25A3%259E%25E6%25B6%2589%25E8%25B4%25BF%25E5%258F%2597%25E5%25AE%25A1&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%89%8D%E4%B8%AD%E5%9B%BD%E5%A4%AE%E8%A1%8C%E5%89%AF%E8%A1%8C%E9%95%BF%E8%8C%83%E4%B8%80%E9%A3%9E%E6%B6%89%E8%B4%BF%E5%8F%97%E5%AE%A1%20-%20https%3A%2F%2Frfi.my%2FAWqH.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%89%8D%E4%B8%AD%E5%9B%BD%E5%A4%AE%E8%A1%8C%E5%89%AF%E8%A1%8C%E9%95%BF%E8%8C%83%E4%B8%80%E9%A3%9E%E6%B6%89%E8%B4%BF%E5%8F%97%E5%AE%A1%20-%20https%3A%2F%2Frfi.my%2FAWqH.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWqH.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%89%8D%E4%B8%AD%E5%9B%BD%E5%A4%AE%E8%A1%8C%E5%89%AF%E8%A1%8C%E9%95%BF%E8%8C%83%E4%B8%80%E9%A3%9E%E6%B6%89%E8%B4%BF%E5%8F%97%E5%AE%A1&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>18/04/2024 - 16:23</div><img src="https://s.rfi.fr/media/display/0e6b372e-e821-11ed-8ba9-005056a90284/w:1280/p:16x9/2023-04-29T210724Z_124636285_RC2BMW9Q52NU_RTRMADP_3_USA-PHILIPPINES.JPG"><p><strong>当地时间 4 月 22 日至 5 月 8 日，美国和菲律宾将举行本年度“肩并肩”联合军事演习，此次演习可能有多达 1 万 7 千人参加，主要有来自美国、菲律宾、澳洲和法国的武装部队。消息称，在“击沉演习”部分，演习击沉目标选定为退役的菲律宾海军补给舰“卡里拉亚湖”号，而此舰原是中国制造、菲律宾企业所使用的民用油船，是菲律宾唯一的“中国造海军资产”。        </strong></p><div><p>据新头壳今天引述中媒《观察者网》今（18）日消息，负责此次演习的菲律宾陆军上校和发言人洛吉科（Michael Logico）近期在记者会上公布，此次演习将创造诸多“第一”，除了人数创下历年最高，菲律宾海岸警卫队（PCG）也将首次参加演习，演习还将首次在菲律宾 12 海里领海以外展开，并将模拟“夺回被敌对势力占领的岛屿”等场景。另外在“击沉演习”部分，演习击沉目标选定为退役的菲律宾海军补给舰“卡里拉亚湖”号。</p><p>据该消息，值得注意的是，这艘军舰原是中国制造、菲律宾企业所使用的民用油船，是菲律宾唯一的“中国造海军资产”。对此菲军坚称，此举“并非有意为之”，这不代表向特定国家发出信号。洛吉科强调，这场联合军演不针对任何外国，包括中国。</p><p>此次演习还有另一个重点“后勤演习”，包括测试空运美国海军标准 6 型（SM-6）防空导弹系统的可行性。</p><p>今年“肩并肩”演习将有至少 1 万 6 千人一同参与，其中包括 1 万 1 千名美军士兵和 5 千名菲律宾武装部队士兵，其余人则将来自法国海军和澳洲国防军。这一总人数预计将超过去年的 1 万 6 千人，去年的参演人员主要来自美军和菲律宾武装部队。</p><p>该报引述洛吉科称，包括东盟、欧盟和日本在内的其他 14 个国家和组织，将针对演习派出“观察员”。洛吉科补充，今年演习将测试菲律宾武装部队与外国部队的“互操作性”，这一概念是由菲律宾国防部长特奥多罗（Gilberto Teodoro）提出，特奥多罗声称，这将使菲律宾武装部队从内部防御转向外部防御，或者从打击当地叛乱转向打击外国敌人。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWpZ.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25BA%259A%25E6%25B4%25B2%2F20240418-%25E8%258F%25B2%25E7%25BE%258E%25E8%2582%25A9%25E5%25B9%25B6%25E8%2582%25A9%25E5%2586%259B%25E6%25BC%2594%25E5%25AE%259E%25E5%25BC%25B9%25E5%2587%25BB%25E6%25B2%2589%25E4%25B8%25AD%25E5%259B%25BD%25E9%2580%25A0%25E9%2580%2580%25E5%25BD%25B9%25E5%2586%259B%25E8%2588%25B0&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%8F%B2%E7%BE%8E%E8%82%A9%E5%B9%B6%E8%82%A9%E5%86%9B%E6%BC%94%E5%AE%9E%E5%BC%B9%E5%87%BB%E6%B2%89%E4%B8%AD%E5%9B%BD%E9%80%A0%E9%80%80%E5%BD%B9%E5%86%9B%E8%88%B0%20-%20https%3A%2F%2Frfi.my%2FAWpZ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%8F%B2%E7%BE%8E%E8%82%A9%E5%B9%B6%E8%82%A9%E5%86%9B%E6%BC%94%E5%AE%9E%E5%BC%B9%E5%87%BB%E6%B2%89%E4%B8%AD%E5%9B%BD%E9%80%A0%E9%80%80%E5%BD%B9%E5%86%9B%E8%88%B0%20-%20https%3A%2F%2Frfi.my%2FAWpZ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWpZ.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%8F%B2%E7%BE%8E%E8%82%A9%E5%B9%B6%E8%82%A9%E5%86%9B%E6%BC%94%E5%AE%9E%E5%BC%B9%E5%87%BB%E6%B2%89%E4%B8%AD%E5%9B%BD%E9%80%A0%E9%80%80%E5%BD%B9%E5%86%9B%E8%88%B0&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
