--- a/articles/rfi/999986.md
+++ b/articles/rfi/999986.md
@@ -1,5 +1,5 @@
-<!--1713444302000-->
-[政客报透露中国秘密与美国国会讨论TikTok 有疑适得其反](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240418-%E6%94%BF%E5%AE%A2%E6%8A%A5%E9%80%8F%E9%9C%B2%E4%B8%AD%E5%9B%BD%E7%A7%98%E5%AF%86%E4%B8%8E%E7%BE%8E%E5%9B%BD%E5%9B%BD%E4%BC%9A%E8%AE%A8%E8%AE%BA%E6%8A%96%E9%9F%B3-%E6%9C%89%E7%96%91%E9%80%82%E5%BE%97%E5%85%B6%E5%8F%8D)
+<!--1713476702000-->
+[中美贸易战阴云乱 台美贸易谈判向前看 - 要闻分析](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E5%88%86%E6%9E%90/20240418-%E4%B8%AD%E7%BE%8E%E8%B4%B8%E6%98%93%E6%88%98%E9%98%B4%E4%BA%91%E4%B9%B1-%E5%8F%B0%E7%BE%8E%E8%B4%B8%E6%98%93%E8%B0%88%E5%88%A4%E5%90%91%E5%89%8D%E7%9C%8B)
 ------
 
-<div>18/04/2024 - 12:14</div><img src="https://s.rfi.fr/media/display/8bfd6d7e-e181-11ee-9af3-005056a97e36/w:1280/p:16x9/2024-03-13T141117Z_179367349_RC2VA1AM24NU_RTRMADP_3_USA-TIKTOK-CONGRESS.JPG"><p><strong>两名美国国会山工作人员表示，中国大使馆已与国会工作人员举行会议，游说反对强制出售 TikTok 的立法。中国外交派驻似乎没有否认此一消息。TikTok曾派出高管新加坡人周受资在美国国会接受质询，明确称TikTok与中国官方没有任何关系。但美国议员称，中国使馆的动作恰恰表明TikTok对中国官方很重要。        </strong></p><div><p>据POLITICO报道称，中国外交官正在悄悄与美国国会工作人员会面讨论 TikTok。</p><p>在众议院通过一项强制出售该公司的法案后，中国大使馆的外交官与美国国会办公室会面，推动捍卫该应用程序。</p><p>总部位于北京的字节跳动公司旗下的 TikTok 一再否认与中国政府有关系，并试图与在中国母公司保持距离。但现在，由于强制出售该公司的立法在参议院面临着不确定的前景，中国大使馆似乎正在利用中国政治影响力来保护TikTok公司在美国的未来。</p><p>美国国会工作人员表示，与美国国会工作人员的会面是由中国大使馆在外展活动中发起的，最初并未提及 TikTok，其中一名人员在众议院工作，另一名在参议院工作，他们被要求匿名讨论他们所讨论的对话。未获授权公开透露。这些会议是在众议院三月份以压倒性多数投票支持《保护美国人免受外国对手控制应用程序侵害法案》之后举行的，该法案将迫使字节跳动出售 TikTok。</p><p>此外，据第三位工作人员（一位被联系的民主党参议院助手）透露，在另一次安排会面的电话中，一名中国大使馆官员表示，中国大使有兴趣讨论众议院的 TikTok 法案等问题。</p><p>两名工作人员表示，大使馆在两次会议上都淡化了对 TikTok 的美国国家安全担忧，并寻求将该应用程序与美国利益保持一致：在一次会议上，中国大使馆表示对 TikTok 的禁令将损害持有字节跳动部分股权的美国投资者。另一方面，中国大使馆强调并非所有字节跳动董事会成员都是中国公民。</p><p>美国国会工作人员表示，尽管 TikTok 公开努力与其创始人的出身保持距离，但中国大使馆还试图声称该公司是中国公司。与字节跳动不同，TikTok 的总部位于新加坡和美国。据众议院工作人员称，在一次会议上，中国大使馆辩称该立法相当于强制传输一家中国公司的数据。另一方面，据美国参议院工作人员称，中国大使馆认为这一努力对中国公司不公平，因为美国不会以同样的方式对待不同国籍的公司。</p><p>TikTok 在一份声明中表示，中国大使馆参与会议“对我们来说是新闻，要求我们对我们一无所知的匿名消息来源发表评论是荒谬的”。TikTok 发言人亚历克斯·豪雷克 (Alex Haurek) 表示：“自该法案提出以来，我们一直公开表达反对该禁令法案的原因。” “这份所谓的报道没有通过事实证实，Politico 发表它是不负责任的。”</p><p>据Politico称，不过，中国大使馆并未否认举行过这些会议。中国使馆发言人刘鹏宇在一份声明中表示，“中国驻美国使馆试图向美国各界人士讲清TikTok问题的真相。”刘鹏宇说，“这不是为某一家公司游说，”该发言人补充道，“而是关于是否所有中国公司都能得到公平对待。”</p><p>该声明接着重申了美国国会工作人员所说的在会议上提出的一些论点，包括反驳美国国家安全担忧，以及强调对字节跳动的国际投资。</p><p>中国使馆声明还强调，尽管TikTok的运营合法，但美国“已想方设法动用国家力量对其进行打压”。</p><p>据Politico，TikTok 已经武装了数十名游说者，并花费了数百万美元来反驳华盛顿有关该公司的言论，该应用程序的反对者一再辩称，它是中国影响美国情绪的强大工具。该公司还花费了数百万美元进行广告，以争取公众对这项立法的支持，并通过推送警报来利用其消费者基础，使该应用程序的用户可以轻松地致电国会。保守派的增长俱乐部（Club for Growth）是一个由字节跳动主要投资者杰夫·亚斯（Jeff Yass）部分资助的政治拥护团体，也敦促立法者推动这项法案。</p><p>由于美国参议院仍处于僵局，影响国会办公室的广泛努力最终可能会成功。参议院商务委员会主席参议员玛丽亚·坎特韦尔（华盛顿州民主党人）一直在与其他办公室就该法案的措辞进行谈判，以巩固法案法律地位。众议院法案的支持者、中国共产党特别委员会主席迈克·加拉格尔（威斯康星州共和党人）将于本月离开众议院。预计强制出售 TikTok将被纳入众议院议长迈克·约翰逊周三发布的一系列有关外国援助和外国对手的法案中。</p><p>外交官的游说活动在很大程度上不被公众所知，因为它们通常不受外国影响美国政治行为透明度规则的涵盖。曾在司法部负责外国影响力法执行工作的戴维·劳夫曼 (David Laufman) 表示，《外国代理人登记法》包括明确豁免某些大使馆官员的条款。</p><p>一位参加与中国官员会面的美国国会工作人员指出，中国大使馆此前也曾试图对抗美国针对另一家中国科技公司华为的行动。</p><p>在公开场合，中国也批评国会针对 TikTok 采取的行动。美国众议院法案通过后，中国外交部表示，该法案“使美国站在了公平竞争原则和国际贸易规则的错误一边”。</p><p>美国外交政策委员会印度太平洋研究高级研究员迈克尔·索博利克认为，中国大使馆游说活动的曝光反而凸显了将 TikTok 与其中国母公司分开的必要性。</p><p>索博利克说，“中国外交官这一次帮了美国一个忙。” 索博利克是有关美中关系的书《反击中国的大博弈》的作者。索博利克说，“通过游说美国国会工作人员保护 TikTok 与字节跳动的关系，（中华人民共和国）官员揭示了 TikTok 对中国共产党的价值。失去对该应用程序的控制，将削弱北京针对美国人行为最有力的武器。”</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWmF.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240418-%25E6%2594%25BF%25E5%25AE%25A2%25E6%258A%25A5%25E9%2580%258F%25E9%259C%25B2%25E4%25B8%25AD%25E5%259B%25BD%25E7%25A7%2598%25E5%25AF%2586%25E4%25B8%258E%25E7%25BE%258E%25E5%259B%25BD%25E5%259B%25BD%25E4%25BC%259A%25E8%25AE%25A8%25E8%25AE%25BA%25E6%258A%2596%25E9%259F%25B3-%25E6%259C%2589%25E7%2596%2591%25E9%2580%2582%25E5%25BE%2597%25E5%2585%25B6%25E5%258F%258D&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%94%BF%E5%AE%A2%E6%8A%A5%E9%80%8F%E9%9C%B2%E4%B8%AD%E5%9B%BD%E7%A7%98%E5%AF%86%E4%B8%8E%E7%BE%8E%E5%9B%BD%E5%9B%BD%E4%BC%9A%E8%AE%A8%E8%AE%BATikTok%20%E6%9C%89%E7%96%91%E9%80%82%E5%BE%97%E5%85%B6%E5%8F%8D%20-%20https%3A%2F%2Frfi.my%2FAWmF.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%94%BF%E5%AE%A2%E6%8A%A5%E9%80%8F%E9%9C%B2%E4%B8%AD%E5%9B%BD%E7%A7%98%E5%AF%86%E4%B8%8E%E7%BE%8E%E5%9B%BD%E5%9B%BD%E4%BC%9A%E8%AE%A8%E8%AE%BATikTok%20%E6%9C%89%E7%96%91%E9%80%82%E5%BE%97%E5%85%B6%E5%8F%8D%20-%20https%3A%2F%2Frfi.my%2FAWmF.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWmF.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%94%BF%E5%AE%A2%E6%8A%A5%E9%80%8F%E9%9C%B2%E4%B8%AD%E5%9B%BD%E7%A7%98%E5%AF%86%E4%B8%8E%E7%BE%8E%E5%9B%BD%E5%9B%BD%E4%BC%9A%E8%AE%A8%E8%AE%BATikTok%20%E6%9C%89%E7%96%91%E9%80%82%E5%BE%97%E5%85%B6%E5%8F%8D&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>18/04/2024 - 21:21</div><img src="https://s.rfi.fr/media/display/da2a9e26-fb17-11ea-875a-005056bff430/w:1280/p:16x9/2020-09-20T073526Z_1670149232_RC272J9D8GQZ_RTRMADP_3_TAIWAN-JAPAN-CHINA.JPG"><p><strong>针对美国政府计划将中国钢铝产品的关税提高百分之二十五，中国商务部4月18日批评美方“转嫁矛盾”的做法是“一错再错”。中美贸易战火药味又一次散布全球之时，台美间的贸易谈判却前景乐观，且一直按部就班地向前发展。                    </strong></p><div><p>美国总统拜登17日向美国钢铁工人联合会（United Steelworkers）会员发表演讲，批评中国政府高额大量补贴，导致中国以不公平的低价向全球市场倾销远超过自身需求的钢铁。 他批评，早在2000年代初，宾州及俄亥俄州的钢铁产业就因此受到严重打击。 拜登指出，美国贸易代表戴琪（Katherine Tai）正在调查中国政府在钢铁和铝方面的贸易行为，如果证实有反竞争的情形，他会敦促戴琪将中国钢、铝税率提高到25%， 而目前这些产品的关税仅有7.5%，或根本不加征关税。</p><p><strong>中国商务部批美错上加错</strong></p><p>中国商务部官网18日晚以不具名的发言人名义，就此事回应称，美方对中国的指责“没有事实依据”，相关措施是典型的“单边主义、保护主义”做法，中方对此坚决反对。 发言人说，2018年以来，美国以“国家安全”之名，对全球贸易伙伴钢铝产品选择性加征关税，还以此胁迫贸易伙伴接受不公平条件。 美方相关措施已被世贸组织裁定违反世贸规则。</p><p>中国商务部发言人声称，美方无视国际经贸秩序和规则，将经贸问题政治化，“滥用所谓301关税复审程序，公开要求随意调整对中国产品关税，转嫁矛盾，是一错再错，也无助 于解决美国内产业面临的问题”。 美国施压别国限制中国产品，更将破坏全球产业链供应链的安全稳定。</p><p>该发言人表示，中方敦促美方正视自身问题，停止提高对中国产品关税，并立即取消对中国加征关税措施。 中方将采取一切必要措施，捍卫自身权益。</p><p><strong>台美贸易谈判向前看</strong></p><p>当中国大陆面临与美国的又一次贸易战阴云的时候，台湾与美国的经贸关系不断稳步向前。</p><p>台美去年6月在华盛顿签署了21世纪贸易倡议首批协定，涵盖关务行政及贸易便捷化、良好法制作业、服务业国内规章、反贪腐、中小企业等5项议题。第二阶段谈判将聚焦农业、劳动与环境3大议题，作业持续进行中。</p><p>美国贸易代表署应美国国会的要求公开了谈判3大议题的拟议文本，内容涉及食品安全、环境正义及远洋移工权益。美方建议提升农产品进口许可程序及认证要求的透明度，也要提高环境保护水准和移工劳权等领域议题。但这些都是双方讨论过程中有共识，或早已是台湾目标愿景。 比如，美方关心远洋渔船上的工作条件，台湾在渔业与人权行动计画（Action Plan for Fisheries and Human Rights）中也有相关规范。</p><p>台湾谈判官员认为，台美21世纪贸易倡议第二阶段谈判整体方向没有问题，正持续分组、分议题密集举行会前会，只是内容牵涉细节法规，必须一步步往前，需要一定时间，未来实体谈判将在台湾举行，但时间未定。</p><p><strong>台美 台英 台加三项贸易投资协议</strong></p><p>过去台湾只与新加坡、新西兰和有关邦交国之间存在自由贸易协定，数量偏低并在国际贸易整合上处境孤立。但继去年6月“台美21世纪贸易倡议”（U.S.-Taiwan Initiative on 21st-Century Trade）首批协定签署后，台湾去年11月与英国签署“深化贸易伙伴关系协议”（Enhanced Trade Partnership Arrangement）， 去年12月则与加拿大签署“投资促进及保障协议”（Foreign Investment Promotion and Protection Arrangement）。</p><p>台湾方面认为：如果台美避免双重课税协定也能完成，将对台美双边经贸打下更坚定基础。台湾也希望强化与澳洲和印度的贸易伙伴关系，因为印度和台湾具备持续推动贸易协议的基础。台湾投资将有助印度发展其制造业基础设施。印度正与中国竞争全球制造中心的地位，对台湾来说，这代表有加强 商业合作的机会。</p><p><strong>蔡英文期望：未来台湾能加入跨太平洋伙伴全面进步协定（CPTPP）</strong></p><p>今年3月7日，台湾总统蔡英文出席任内最后一次外交部新春联欢晚会时表示：过去8年政府积极改善基础建设、厚植国力，吸引外商投资台湾，协助产业布局全球，台湾与美国、日本、欧洲及新南向国家的经贸往来大幅成长。</p><p>她也特别指出：去年完成了签署台美21世纪贸易倡议首批协定，也和英国、加拿大分别签署提升贸易伙伴关系协议及投资促进及保障协议。她期待：未来台湾能加入跨太平洋伙伴全面进步协定（CPTPP） ，继续加强与全球经贸连结。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E8%82%96%E6%9B%BC/" title="肖曼">肖曼</a></div></div></div></div>
