--- a/articles/rfi/999991.md
+++ b/articles/rfi/999991.md
@@ -1,5 +1,5 @@
-<!--1713444301000-->
-[邓小平孙子邓卓棣任新职](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240418-%E9%82%93%E5%B0%8F%E5%B9%B3%E5%AD%99%E5%AD%90%E9%82%93%E5%8D%93%E6%A3%A3%E4%BB%BB%E6%96%B0%E8%81%8C)
+<!--1713444302000-->
+[政客报透露中国秘密与美国国会讨论TikTok 有疑适得其反](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240418-%E6%94%BF%E5%AE%A2%E6%8A%A5%E9%80%8F%E9%9C%B2%E4%B8%AD%E5%9B%BD%E7%A7%98%E5%AF%86%E4%B8%8E%E7%BE%8E%E5%9B%BD%E5%9B%BD%E4%BC%9A%E8%AE%A8%E8%AE%BA%E6%8A%96%E9%9F%B3-%E6%9C%89%E7%96%91%E9%80%82%E5%BE%97%E5%85%B6%E5%8F%8D)
 ------
 
-<div>18/04/2024 - 12:26</div><img src="https://s.rfi.fr/media/display/67bf55d6-15e7-11ea-9149-005056a99247/w:1280/p:16x9/2016-10-25t100942z_1566907793_s1aeuizgliab_rtrmadp_3_china-politics.jpg"><p><strong>港媒今天透露，已故中共领导人邓小平的孙子邓卓棣目前担任中信财务有限公司监事。此前2013年5月，邓卓棣曾担任广西壮族自治区百色市平果县副县长兼新安镇党委书记、县委副书记，2016年卸任退出政坛。        </strong></p><div><p>据中央社今天引述星岛日报消息，邓卓棣已淡出政界8年，动向一直未明，但根据中国企业查询公司“爱企查”的资料，邓卓棣目前担任中信财务有限公司监事。</p><p>中信财务是央企中信集团子公司，有传他任职中信法务部，但未能证实。</p><p>据消息称，邓卓棣是邓小平次子邓质方之子，1985年出生于美国，7岁时曾随邓小平南巡，后来毕业于北京大学法律系，并前往美国杜克大学攻读法学硕士学位，在海外工作一段时间后回国。2013年5月，邓卓棣担任广西壮族自治区百色市平果县副县长兼新安镇党委书记、县委副书记，2016年卸任，2017年担任北京市桥牌协会理事。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWmW.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240418-%25E9%2582%2593%25E5%25B0%258F%25E5%25B9%25B3%25E5%25AD%2599%25E5%25AD%2590%25E9%2582%2593%25E5%258D%2593%25E6%25A3%25A3%25E4%25BB%25BB%25E6%2596%25B0%25E8%2581%258C&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E9%82%93%E5%B0%8F%E5%B9%B3%E5%AD%99%E5%AD%90%E9%82%93%E5%8D%93%E6%A3%A3%E4%BB%BB%E6%96%B0%E8%81%8C%20-%20https%3A%2F%2Frfi.my%2FAWmW.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E9%82%93%E5%B0%8F%E5%B9%B3%E5%AD%99%E5%AD%90%E9%82%93%E5%8D%93%E6%A3%A3%E4%BB%BB%E6%96%B0%E8%81%8C%20-%20https%3A%2F%2Frfi.my%2FAWmW.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWmW.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E9%82%93%E5%B0%8F%E5%B9%B3%E5%AD%99%E5%AD%90%E9%82%93%E5%8D%93%E6%A3%A3%E4%BB%BB%E6%96%B0%E8%81%8C&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>18/04/2024 - 12:14</div><img src="https://s.rfi.fr/media/display/8bfd6d7e-e181-11ee-9af3-005056a97e36/w:1280/p:16x9/2024-03-13T141117Z_179367349_RC2VA1AM24NU_RTRMADP_3_USA-TIKTOK-CONGRESS.JPG"><p><strong>两名美国国会山工作人员表示，中国大使馆已与国会工作人员举行会议，游说反对强制出售 TikTok 的立法。中国外交派驻似乎没有否认此一消息。TikTok曾派出高管新加坡人周受资在美国国会接受质询，明确称TikTok与中国官方没有任何关系。但美国议员称，中国使馆的动作恰恰表明TikTok对中国官方很重要。        </strong></p><div><p>据POLITICO报道称，中国外交官正在悄悄与美国国会工作人员会面讨论 TikTok。</p><p>在众议院通过一项强制出售该公司的法案后，中国大使馆的外交官与美国国会办公室会面，推动捍卫该应用程序。</p><p>总部位于北京的字节跳动公司旗下的 TikTok 一再否认与中国政府有关系，并试图与在中国母公司保持距离。但现在，由于强制出售该公司的立法在参议院面临着不确定的前景，中国大使馆似乎正在利用中国政治影响力来保护TikTok公司在美国的未来。</p><p>美国国会工作人员表示，与美国国会工作人员的会面是由中国大使馆在外展活动中发起的，最初并未提及 TikTok，其中一名人员在众议院工作，另一名在参议院工作，他们被要求匿名讨论他们所讨论的对话。未获授权公开透露。这些会议是在众议院三月份以压倒性多数投票支持《保护美国人免受外国对手控制应用程序侵害法案》之后举行的，该法案将迫使字节跳动出售 TikTok。</p><p>此外，据第三位工作人员（一位被联系的民主党参议院助手）透露，在另一次安排会面的电话中，一名中国大使馆官员表示，中国大使有兴趣讨论众议院的 TikTok 法案等问题。</p><p>两名工作人员表示，大使馆在两次会议上都淡化了对 TikTok 的美国国家安全担忧，并寻求将该应用程序与美国利益保持一致：在一次会议上，中国大使馆表示对 TikTok 的禁令将损害持有字节跳动部分股权的美国投资者。另一方面，中国大使馆强调并非所有字节跳动董事会成员都是中国公民。</p><p>美国国会工作人员表示，尽管 TikTok 公开努力与其创始人的出身保持距离，但中国大使馆还试图声称该公司是中国公司。与字节跳动不同，TikTok 的总部位于新加坡和美国。据众议院工作人员称，在一次会议上，中国大使馆辩称该立法相当于强制传输一家中国公司的数据。另一方面，据美国参议院工作人员称，中国大使馆认为这一努力对中国公司不公平，因为美国不会以同样的方式对待不同国籍的公司。</p><p>TikTok 在一份声明中表示，中国大使馆参与会议“对我们来说是新闻，要求我们对我们一无所知的匿名消息来源发表评论是荒谬的”。TikTok 发言人亚历克斯·豪雷克 (Alex Haurek) 表示：“自该法案提出以来，我们一直公开表达反对该禁令法案的原因。” “这份所谓的报道没有通过事实证实，Politico 发表它是不负责任的。”</p><p>据Politico称，不过，中国大使馆并未否认举行过这些会议。中国使馆发言人刘鹏宇在一份声明中表示，“中国驻美国使馆试图向美国各界人士讲清TikTok问题的真相。”刘鹏宇说，“这不是为某一家公司游说，”该发言人补充道，“而是关于是否所有中国公司都能得到公平对待。”</p><p>该声明接着重申了美国国会工作人员所说的在会议上提出的一些论点，包括反驳美国国家安全担忧，以及强调对字节跳动的国际投资。</p><p>中国使馆声明还强调，尽管TikTok的运营合法，但美国“已想方设法动用国家力量对其进行打压”。</p><p>据Politico，TikTok 已经武装了数十名游说者，并花费了数百万美元来反驳华盛顿有关该公司的言论，该应用程序的反对者一再辩称，它是中国影响美国情绪的强大工具。该公司还花费了数百万美元进行广告，以争取公众对这项立法的支持，并通过推送警报来利用其消费者基础，使该应用程序的用户可以轻松地致电国会。保守派的增长俱乐部（Club for Growth）是一个由字节跳动主要投资者杰夫·亚斯（Jeff Yass）部分资助的政治拥护团体，也敦促立法者推动这项法案。</p><p>由于美国参议院仍处于僵局，影响国会办公室的广泛努力最终可能会成功。参议院商务委员会主席参议员玛丽亚·坎特韦尔（华盛顿州民主党人）一直在与其他办公室就该法案的措辞进行谈判，以巩固法案法律地位。众议院法案的支持者、中国共产党特别委员会主席迈克·加拉格尔（威斯康星州共和党人）将于本月离开众议院。预计强制出售 TikTok将被纳入众议院议长迈克·约翰逊周三发布的一系列有关外国援助和外国对手的法案中。</p><p>外交官的游说活动在很大程度上不被公众所知，因为它们通常不受外国影响美国政治行为透明度规则的涵盖。曾在司法部负责外国影响力法执行工作的戴维·劳夫曼 (David Laufman) 表示，《外国代理人登记法》包括明确豁免某些大使馆官员的条款。</p><p>一位参加与中国官员会面的美国国会工作人员指出，中国大使馆此前也曾试图对抗美国针对另一家中国科技公司华为的行动。</p><p>在公开场合，中国也批评国会针对 TikTok 采取的行动。美国众议院法案通过后，中国外交部表示，该法案“使美国站在了公平竞争原则和国际贸易规则的错误一边”。</p><p>美国外交政策委员会印度太平洋研究高级研究员迈克尔·索博利克认为，中国大使馆游说活动的曝光反而凸显了将 TikTok 与其中国母公司分开的必要性。</p><p>索博利克说，“中国外交官这一次帮了美国一个忙。” 索博利克是有关美中关系的书《反击中国的大博弈》的作者。索博利克说，“通过游说美国国会工作人员保护 TikTok 与字节跳动的关系，（中华人民共和国）官员揭示了 TikTok 对中国共产党的价值。失去对该应用程序的控制，将削弱北京针对美国人行为最有力的武器。”</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWmF.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240418-%25E6%2594%25BF%25E5%25AE%25A2%25E6%258A%25A5%25E9%2580%258F%25E9%259C%25B2%25E4%25B8%25AD%25E5%259B%25BD%25E7%25A7%2598%25E5%25AF%2586%25E4%25B8%258E%25E7%25BE%258E%25E5%259B%25BD%25E5%259B%25BD%25E4%25BC%259A%25E8%25AE%25A8%25E8%25AE%25BA%25E6%258A%2596%25E9%259F%25B3-%25E6%259C%2589%25E7%2596%2591%25E9%2580%2582%25E5%25BE%2597%25E5%2585%25B6%25E5%258F%258D&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%94%BF%E5%AE%A2%E6%8A%A5%E9%80%8F%E9%9C%B2%E4%B8%AD%E5%9B%BD%E7%A7%98%E5%AF%86%E4%B8%8E%E7%BE%8E%E5%9B%BD%E5%9B%BD%E4%BC%9A%E8%AE%A8%E8%AE%BATikTok%20%E6%9C%89%E7%96%91%E9%80%82%E5%BE%97%E5%85%B6%E5%8F%8D%20-%20https%3A%2F%2Frfi.my%2FAWmF.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%94%BF%E5%AE%A2%E6%8A%A5%E9%80%8F%E9%9C%B2%E4%B8%AD%E5%9B%BD%E7%A7%98%E5%AF%86%E4%B8%8E%E7%BE%8E%E5%9B%BD%E5%9B%BD%E4%BC%9A%E8%AE%A8%E8%AE%BATikTok%20%E6%9C%89%E7%96%91%E9%80%82%E5%BE%97%E5%85%B6%E5%8F%8D%20-%20https%3A%2F%2Frfi.my%2FAWmF.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWmF.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%94%BF%E5%AE%A2%E6%8A%A5%E9%80%8F%E9%9C%B2%E4%B8%AD%E5%9B%BD%E7%A7%98%E5%AF%86%E4%B8%8E%E7%BE%8E%E5%9B%BD%E5%9B%BD%E4%BC%9A%E8%AE%A8%E8%AE%BATikTok%20%E6%9C%89%E7%96%91%E9%80%82%E5%BE%97%E5%85%B6%E5%8F%8D&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
